--- a/inst/extdata/bibset-raw/icus03.bib
+++ b/inst/extdata/bibset-raw/icus03.bib
@@ -203,7 +203,7 @@ author={Strasser, Gabor}
 @InProceedings{ICUS03:C01:G04:X05,
 crossref={ICUS03},
 title={Commentary},
-author={Covian, Miguel R. and de Jouvenel, H. and Davies, P.M.C. and Goldsmith, Maurice}
+author={Covian, Miguel R. and H. {de Jouvenel} and Davies, P.M.C. and Goldsmith, Maurice}
 }
 
 
@@ -241,7 +241,7 @@ author={Cantore, Enrico}
 @InProceedings{ICUS03:C02:G01:S03,
 crossref={ICUS03},
 title={Value systems and value change},
-author={de Reuck, Anthony V. S. and de Reuck, Marjorie}
+author={Anthony V. S {de Reuck} and Marjorie {de Reuck}}
 }
 
 @InProceedings{ICUS03:C02:G01:S04,
