--- a/inst/extdata/bibset-raw/icus04.bib
+++ b/inst/extdata/bibset-raw/icus04.bib
@@ -241,7 +241,7 @@ Copernican assumptions restricting scientific exploration},
   crossref = {ICUS04},
   title = {Neurological correlations},
   author = {Gomes, Juan Antonio},
-  commentator = {da Fonseca, Jos{\a'e} Sim~oes},
+  commentator = {José Sim~o {da Fonseca}},
 }
 
 
@@ -302,7 +302,7 @@ Copernican assumptions restricting scientific exploration},
 @InProceedings{ICUS04:C02:G01:S06,
   crossref = {ICUS04},
   title = {Integration of knowledge: research, action and values},
-  author = {de Bie, Pierre},
+  author = {Pierre {de Bie}},
   commentator = {Jan Trost and Teresa Marciano},
 }
 
@@ -793,7 +793,7 @@ Copernican assumptions restricting scientific exploration},
 @InProceedings{ICUS04:C04:G03:S02,
   crossref = {ICUS04},
   title = {A preliminary systems philosophical description of valuation},
-  author = {Fedanzo Jr, Anthony J.},
+  author = {Anthony J. {Fedanzo Jr}},
   commentator = {William Bergman},
 }
 
