--- a/inst/extdata/bibset-raw/icus06.bib
+++ b/inst/extdata/bibset-raw/icus06.bib
@@ -292,7 +292,7 @@
 @InProceedings{ICUS06:C02:G03:S02,
   crossref = {ICUS06},
   title = {World development policies: the case of Jordan},
-  author = {Abu Jaber, Kamel},
+  author = {Kamel {Abu Jaber}},
 }
 
 @InProceedings{ICUS06:C02:G03:S03,
