--- a/inst/extdata/bibset-raw/icus07.bib
+++ b/inst/extdata/bibset-raw/icus07.bib
@@ -1,4 +1,4 @@
-@proceedings{ICUS07,
+@Proceedings{ICUS07,
   title = {The re-evaluation of existing values and the search for absolute values},
   titleaddon = {The Seventh International Conference on the Unity of the Sciences},
   shorttitle = {ICUS VII},
@@ -12,55 +12,55 @@
   keywords={primary, program, moonist}
 }
 
-@inproceedings{ICUS07:P01,
+@InProceedings{ICUS07:P01,
   crossref = {ICUS07},
   title = {Founder's Welcoming Address},
   author = {Sun Myung Moon},
 }
 
-@inproceedings{ICUS07:P02,
+@InProceedings{ICUS07:P02,
   crossref = {ICUS07},
   title = {chairpersonman's Address},
   author = {Wigner, Eugene P.},
 }
 
-@inproceedings{ICUS07:P03,
+@InProceedings{ICUS07:P03,
   crossref = {ICUS07},
   title = {Committee I Address},
   author = {Rubenstein, Richard L.},
 }
 
-@inproceedings{ICUS07:P04,
+@InProceedings{ICUS07:P04,
   crossref = {ICUS07},
   title = {Committee II Address},
   author = {Lerner, Daniel},
 }
 
-@inproceedings{ICUS07:P05,
+@InProceedings{ICUS07:P05,
   crossref = {ICUS07},
   title = {Committee III Address},
   author = {Mellanby, Kenneth},
 }
 
-@inproceedings{ICUS07:P06,
+@InProceedings{ICUS07:P06,
   crossref = {ICUS07},
   title = {Committee IV Address},
   author = {Seitz, Frederick},
 }
 
-@inproceedings{ICUS07:P07,
+@InProceedings{ICUS07:P07,
   crossref = {ICUS07},
   title = {Technology and freedom},
   author = {Weinberg, Alvin M.},
 }
 
-@inproceedings{ICUS07:P08,
+@InProceedings{ICUS07:P08,
   crossref = {ICUS07},
   title = {The brain and the human person},
   author = {Eccles, John},
 }
 
-@set{ICUS07:C01,
+@Set{ICUS07:C01,
   entryset = {ICUS07:C01},
   pattern = {ICUS07:C01:G\d\d:[S|X]},
   patterntype = {key},
@@ -69,7 +69,7 @@
   chairperson = {Rubenstein, Richard L.},
 }
 
-@set{ICUS07:C01:G01,
+@Set{ICUS07:C01:G01,
   entryset = {ICUS07:C01:G01:S01},
   pattern = {ICUS07:C01:G01:[S|X]},
   patterntype = {key},
@@ -78,21 +78,21 @@
   chairperson = {Vahanian, Gabriel},
 }
 
-@inproceedings{ICUS07:C01:G01:S01,
+@InProceedings{ICUS07:C01:G01:S01,
   crossref = {ICUS07},
   title = {Redemption today: back to the New Testament?},
   author = {Trocmé, Etienne},
   commentator = {Clarnette, Warren and {Al-Nowaihi}, Mohamed},
 }
 
-@inproceedings{ICUS07:C01:G01:S02,
+@InProceedings{ICUS07:C01:G01:S02,
   crossref = {ICUS07},
   title = {Marx and the quest for salvation},
   author = {Boutin, Maurice},
   commentator = {Richardson, Herbert},
 }
 
-@inproceedings{ICUS07:C01:G01:S03,
+@InProceedings{ICUS07:C01:G01:S03,
   crossref = {ICUS07},
   title = {Redemption: a cross-cultural perspective at the making of modern theology},
   author = {{Ben-Dak}, Joseph D.},
@@ -101,7 +101,7 @@
 
 
 
-@set{ICUS07:C01:G02,
+@Set{ICUS07:C01:G02,
   entryset = {ICUS07:C01:G02:S01},
   pattern = {ICUS07:C01:G02:[S|X]},
   patterntype = {key},
@@ -110,21 +110,21 @@
   chairperson = {Barker, Eileen V.},
 }
 
-@inproceedings{ICUS07:C01:G02:S01,
+@InProceedings{ICUS07:C01:G02:S01,
   crossref = {ICUS07},
   title = {Effects of consciousness on the physical world - a monistic view},
   author = {Bastin, Ted},
   commentator = {Sudarshan, George},
 }
 
-@inproceedings{ICUS07:C01:G02:S02,
+@InProceedings{ICUS07:C01:G02:S02,
   crossref = {ICUS07},
   title = {Aspects of the religious consciousness},
   author = {Robinson, Edward A.},
   commentator = {Hay, David},
 }
 
-@inproceedings{ICUS07:C01:G02:S03,
+@InProceedings{ICUS07:C01:G02:S03,
   crossref = {ICUS07},
   title = {The existence of consciousness},
   author = {Wigner, Eugene P.},
@@ -133,7 +133,7 @@
 
 
 
-@set{ICUS07:C01:G03,
+@Set{ICUS07:C01:G03,
   entryset = {ICUS07:C01:G03:S01},
   pattern = {ICUS07:C01:G03:[S|X]},
   patterntype = {key},
@@ -142,21 +142,21 @@
   chairperson = {Kaufmann, Walter},
 }
 
-@inproceedings{ICUS07:C01:G03:S01,
+@InProceedings{ICUS07:C01:G03:S01,
   crossref = {ICUS07},
   title = {The anatomy of death},
   author = {Smart, Ninian},
   commentator = {Alvarez, Alfred},
 }
 
-@inproceedings{ICUS07:C01:G03:S02,
+@InProceedings{ICUS07:C01:G03:S02,
   crossref = {ICUS07},
   title = {Death as a source of philosophy},
   author = {Scharfstein, Ben-Ami},
   commentator = {Munz, Peter},
 }
 
-@inproceedings{ICUS07:C01:G03:S03,
+@InProceedings{ICUS07:C01:G03:S03,
   crossref = {ICUS07},
   title = {The art of suicide},
   author = {Oates, Joyce Carol},
@@ -165,7 +165,7 @@
 
 
 
-@set{ICUS07:C01:G04,
+@Set{ICUS07:C01:G04,
   entryset = {ICUS07:C01:G04:S01},
   pattern = {ICUS07:C01:G04:[S|X]},
   patterntype = {key},
@@ -174,21 +174,21 @@
   chairperson = {Dougherty, Jude P.},
 }
 
-@inproceedings{ICUS07:C01:G04:S01,
+@InProceedings{ICUS07:C01:G04:S01,
   crossref = {ICUS07},
   title = {The reciprocity of liberty and authority},
   author = {Reck, Andrew J.},
   commentator = {Barber, Richard L.},
 }
 
-@inproceedings{ICUS07:C01:G04:S02,
+@InProceedings{ICUS07:C01:G04:S02,
   crossref = {ICUS07},
   title = {Freedom and authority},
   author = {McCool, Gerald},
   commentator = {Mayer, J. P.},
 }
 
-@inproceedings{ICUS07:C01:G04:S03,
+@InProceedings{ICUS07:C01:G04:S03,
   crossref = {ICUS07},
   title = {From authority to absolute dominion in our administrated world},
   author = {Rohmann, Klaus},
@@ -197,7 +197,7 @@
 
 
 
-@set{ICUS07:C02,
+@Set{ICUS07:C02,
   entryset = {ICUS07:C02},
   pattern = {ICUS07:C02:G\d\d:[S|X]},
   patterntype = {key},
@@ -206,7 +206,7 @@
   chairperson = {Lerner, Daniel},
 }
 
-@set{ICUS07:C02:G01,
+@Set{ICUS07:C02:G01,
   entryset = {ICUS07:C02:G01:S01},
   pattern = {ICUS07:C02:G01:[S|X]},
   patterntype = {key},
@@ -215,19 +215,19 @@
   chairperson = {Berger, René},
 }
 
-@inproceedings{ICUS07:C02:G01:S01,
+@InProceedings{ICUS07:C02:G01:S01,
   crossref = {ICUS07},
   title = {Youth revolt and Asian values},
   author = {Soemardjan, Selo},
 }
 
-@inproceedings{ICUS07:C02:G01:S02,
+@InProceedings{ICUS07:C02:G01:S02,
   crossref = {ICUS07},
   title = {Youth revolt and socialist values},
   author = {Hart, Henry O.},
 }
 
-@inproceedings{ICUS07:C02:G01:S03,
+@InProceedings{ICUS07:C02:G01:S03,
   crossref = {ICUS07},
   title = {The revolt against values},
   author = {Marc, Alexandre},
@@ -235,7 +235,7 @@
 
 
 
-@set{ICUS07:C02:G02,
+@Set{ICUS07:C02:G02,
   entryset = {ICUS07:C02:G02:S01},
   pattern = {ICUS07:C02:G02:[S|X]},
   patterntype = {key},
@@ -244,25 +244,25 @@
   chairperson = {Handlin, Oscar},
 }
 
-@inproceedings{ICUS07:C02:G02:S01,
+@InProceedings{ICUS07:C02:G02:S01,
   crossref = {ICUS07},
   title = {The unlearning of violence},
   author = {Ferracuti, Franco},
 }
 
-@inproceedings{ICUS07:C02:G02:S02,
+@InProceedings{ICUS07:C02:G02:S02,
   crossref = {ICUS07},
   title = {The development of violence as a feature of Turkish political life},
   author = {Turan, Ilter},
 }
 
-@inproceedings{ICUS07:C02:G02:S03,
+@InProceedings{ICUS07:C02:G02:S03,
   crossref = {ICUS07},
   title = {Nonviolent resolution of conflict situations},
   author = {Farmer, James},
 }
 
-@inproceedings{ICUS07:C02:G02:X04,
+@InProceedings{ICUS07:C02:G02:X04,
   crossref = {ICUS07},
   title = {Comments on {Democratic Control of Anti-Democratic Action}},
   author = {Mehr, Farhang},
@@ -270,7 +270,7 @@
 
 
 
-@set{ICUS07:C02:G03,
+@Set{ICUS07:C02:G03,
   entryset = {ICUS07:C02:G03:S01},
   pattern = {ICUS07:C02:G03:[S|X]},
   patterntype = {key},
@@ -279,25 +279,25 @@
   chairperson = {Lerner, Abba P.},
 }
 
-@inproceedings{ICUS07:C02:G03:S01,
+@InProceedings{ICUS07:C02:G03:S01,
   crossref = {ICUS07},
   title = {Values and development - focus on the Middle East},
   author = {Jaber, Kamel Abu},
 }
 
-@inproceedings{ICUS07:C02:G03:S02,
+@InProceedings{ICUS07:C02:G03:S02,
   crossref = {ICUS07},
   title = {Disowning the past?},
   author = {Prothro, Edwin Terry},
 }
 
-@inproceedings{ICUS07:C02:G03:S03,
+@InProceedings{ICUS07:C02:G03:S03,
   crossref = {ICUS07},
   title = {Values and development in the contemporary Islamic world},
   author = {Nasr, Seyyed Hossein},
 }
 
-@inproceedings{ICUS07:C02:G03:S04,
+@InProceedings{ICUS07:C02:G03:S04,
   crossref = {ICUS07},
   title = {The global economic order and poor villages: the issue of mediating structures},
   author = {Skinner, Elliott P.},
@@ -305,7 +305,7 @@
 
 
 
-@set{ICUS07:C02:G04,
+@Set{ICUS07:C02:G04,
   entryset = {ICUS07:C02:G04:S01},
   pattern = {ICUS07:C02:G04:[S|X]},
   patterntype = {key},
@@ -314,25 +314,25 @@
   chairperson = {Peccei, Aurelio},
 }
 
-@inproceedings{ICUS07:C02:G04:S01,
+@InProceedings{ICUS07:C02:G04:S01,
   crossref = {ICUS07},
   title = {Introductory remarks},
   author = {Szalai, Alexander},
 }
 
-@inproceedings{ICUS07:C02:G04:S02,
+@InProceedings{ICUS07:C02:G04:S02,
   crossref = {ICUS07},
   title = {(Untitled speech)},
   author = {Mazrui, Ali A.},
 }
 
-@inproceedings{ICUS07:C02:G04:S03,
+@InProceedings{ICUS07:C02:G04:S03,
   crossref = {ICUS07},
   title = {(Untitled speech)},
   author = {Gulek, Kasim},
 }
 
-@inproceedings{ICUS07:C02:G04:X04,
+@InProceedings{ICUS07:C02:G04:X04,
   crossref = {ICUS07},
   title = {Comments on {World Futures - Which Ways are Forward?}},
   author = {Herz, Martin F.},
@@ -340,7 +340,7 @@
 
 
 
-@set{ICUS07:C03,
+@Set{ICUS07:C03,
   entryset = {ICUS07:C03},
   pattern = {ICUS07:C03:G\d\d:[S|X]},
   patterntype = {key},
@@ -349,7 +349,7 @@
   chairperson = {Mellanby, Kenneth},
 }
 
-@set{ICUS07:C03:G01,
+@Set{ICUS07:C03:G01,
   entryset = {ICUS07:C03:G01:S01},
   pattern = {ICUS07:C03:G01:[S|X]},
   patterntype = {key},
@@ -358,21 +358,21 @@
   chairperson = {Berger, René},
 }
 
-@inproceedings{ICUS07:C03:G01:S01,
+@InProceedings{ICUS07:C03:G01:S01,
   crossref = {ICUS07},
   title = {Genetics and society},
   author = {Harrison, G. Ainsworth},
   commentator = {Baker, Paul T.},
 }
 
-@inproceedings{ICUS07:C03:G01:S02,
+@InProceedings{ICUS07:C03:G01:S02,
   crossref = {ICUS07},
   title = {Ethical implications of ecology},
   author = {Hill, Stuart B.},
   commentator = {Sheikh, Khalid Hamid},
 }
 
-@inproceedings{ICUS07:C03:G01:S03,
+@InProceedings{ICUS07:C03:G01:S03,
   crossref = {ICUS07},
   title = {Behavioral dimensions for the operation of intelligence},
   author = {Chance, M. R. A.},
@@ -381,7 +381,7 @@
 
 
 
-@set{ICUS07:C03:G02,
+@Set{ICUS07:C03:G02,
   entryset = {ICUS07:C03:G02:S01},
   pattern = {ICUS07:C03:G02:[S|X]},
   patterntype = {key},
@@ -390,28 +390,28 @@
   chairperson = {Ambrus, Julian L.},
 }
 
-@inproceedings{ICUS07:C03:G02:S01,
+@InProceedings{ICUS07:C03:G02:S01,
   crossref = {ICUS07},
   title = {Global health problems},
   author = {Ambrus, Julian L.},
   commentator = {{Tejada-de-Rivero}, David},
 }
 
-@inproceedings{ICUS07:C03:G02:S02,
+@InProceedings{ICUS07:C03:G02:S02,
   crossref = {ICUS07},
   title = {Health problems of West Africa},
   author = {Grayson, John},
   commentator = {Minners, Howard A.},
 }
 
-@inproceedings{ICUS07:C03:G02:S03,
+@InProceedings{ICUS07:C03:G02:S03,
   crossref = {ICUS07},
   title = {Research in tropical medicine and parasitology},
   author = {Ercoli, N.},
   commentator = {Bardos, Thomas J.},
 }
 
-@inproceedings{ICUS07:C03:G02:S04,
+@InProceedings{ICUS07:C03:G02:S04,
   crossref = {ICUS07},
   title = {Epidemologic, etiologic \& immunologic aspects in nasopharyngeal cancer},
   author = {Gastpar, Helmuth},
@@ -420,7 +420,7 @@
 
 
 
-@set{ICUS07:C03:G03,
+@Set{ICUS07:C03:G03,
   entryset = {ICUS07:C03:G03:S01},
   pattern = {ICUS07:C03:G03:[S|X]},
   patterntype = {key},
@@ -429,14 +429,14 @@
   chairperson = {Pribram, Karl H.},
 }
 
-@inproceedings{ICUS07:C03:G03:S01,
+@InProceedings{ICUS07:C03:G03:S01,
   crossref = {ICUS07},
   title = {Evolution of human consciousness},
   author = {Jerison, Harry J.},
   commentator = {Bitterman, M. E.},
 }
 
-@inproceedings{ICUS07:C03:G03:S02,
+@InProceedings{ICUS07:C03:G03:S02,
   crossref = {ICUS07},
   title = {Experimental transference of consciousness},
   author = {White, Rober J.},
@@ -448,7 +448,7 @@ as Robert White's work with cerebral transplants [this presentation] and ''surro
 industries'' using embryo transplantation can push the student into more
 creative thinking.}}
 
-@inproceedings{ICUS07:C03:G03:S03,
+@InProceedings{ICUS07:C03:G03:S03,
   crossref = {ICUS07},
   title = {The evolution of sexual consciousness},
   author = {McGuinness, Diane},
@@ -457,7 +457,7 @@ creative thinking.}}
 
 
 
-@set{ICUS07:C03:G04,
+@Set{ICUS07:C03:G04,
   entryset = {ICUS07:C03:G04:S01},
   pattern = {ICUS07:C03:G04:[S|X]},
   patterntype = {key},
@@ -466,21 +466,21 @@ creative thinking.}}
   chairperson = {{Villee Jr}, Claude A.},
 }
 
-@inproceedings{ICUS07:C03:G04:S01,
+@InProceedings{ICUS07:C03:G04:S01,
   crossref = {ICUS07},
   title = {Saltatory events in human evolution},
   author = {Caspari, Ernst W.},
   commentator = {Wescott, Roger W.},
 }
 
-@inproceedings{ICUS07:C03:G04:S02,
+@InProceedings{ICUS07:C03:G04:S02,
   crossref = {ICUS07},
   title = {Socio-cultural evolution},
   author = {Lewis, W. Bennett},
   commentator = {Doby, John T.},
 }
 
-@inproceedings{ICUS07:C03:G04:S03,
+@InProceedings{ICUS07:C03:G04:S03,
   crossref = {ICUS07},
   title = {A biotheology of human origins},
   author = {Scheer, Bradley T.},
@@ -489,7 +489,7 @@ creative thinking.}}
 
 
 
-@set{ICUS07:C04,
+@Set{ICUS07:C04,
   entryset = {ICUS07:C04},
   pattern = {ICUS07:C04:G\d\d:[S|X]},
   patterntype = {key},
@@ -498,7 +498,7 @@ creative thinking.}}
   chairperson = {Seitz, Frederick},
 }
 
-@set{ICUS07:C04:G01,
+@Set{ICUS07:C04:G01,
   entryset = {ICUS07:C04:G01:S01},
   pattern = {ICUS07:C04:G01:[S|X]},
   patterntype = {key},
@@ -507,21 +507,21 @@ creative thinking.}}
   chairperson = {King, Alexander},
 }
 
-@inproceedings{ICUS07:C04:G01:S01,
+@InProceedings{ICUS07:C04:G01:S01,
   crossref = {ICUS07},
   title = {Science in the cause of man},
   author = {Matson, Floyd W.},
   commentator = {Shearmur, Jeremy},
 }
 
-@inproceedings{ICUS07:C04:G01:S02,
+@InProceedings{ICUS07:C04:G01:S02,
   crossref = {ICUS07},
   title = {A physicist's view of living systems},
   author = {Elsasser, Walter M.},
   commentator = {Wigner, Eugene P.},
 }
 
-@inproceedings{ICUS07:C04:G01:S03,
+@InProceedings{ICUS07:C04:G01:S03,
   crossref = {ICUS07},
   title = {Evolution as a transdisciplinary paradigm},
   author = {Wescott, Roger W.},
@@ -530,7 +530,7 @@ creative thinking.}}
 
 
 
-@set{ICUS07:C04:G02,
+@Set{ICUS07:C04:G02,
   entryset = {ICUS07:C04:G02:S01},
   pattern = {ICUS07:C04:G02:[S|X]},
   patterntype = {key},
@@ -539,14 +539,14 @@ creative thinking.}}
   chairperson = {Atalay, Bulent},
 }
 
-@inproceedings{ICUS07:C04:G02:S01,
+@InProceedings{ICUS07:C04:G02:S01,
   crossref = {ICUS07},
   title = {Need and consequence of contact with extraterrestrial civilizations},
   author = {Marx, George},
   commentator = {Harrison, Edward R.},
 }
 
-@inproceedings{ICUS07:C04:G02:S02,
+@InProceedings{ICUS07:C04:G02:S02,
   crossref = {ICUS07},
   title = {Extraterrestrial intelligence: starmaker or yogic?},
   author = {Melvin, Mael A.},
@@ -556,7 +556,7 @@ creative thinking.}}
 
 
 
-@set{ICUS07:C04:G03,
+@Set{ICUS07:C04:G03,
   entryset = {ICUS07:C04:G03:S01},
   pattern = {ICUS07:C04:G03:[S|X]},
   patterntype = {key},
@@ -565,21 +565,21 @@ creative thinking.}}
   chairperson = {Andersson, Gunnar},
 }
 
-@inproceedings{ICUS07:C04:G03:S01,
+@InProceedings{ICUS07:C04:G03:S01,
   crossref = {ICUS07},
   title = {The interaction between philosophy and science},
   author = {Jammer, Max},
   commentator = {Bartley, W. W. III},
 }
 
-@inproceedings{ICUS07:C04:G03:S02,
+@InProceedings{ICUS07:C04:G03:S02,
   crossref = {ICUS07},
   title = {Cognitive progress: the justificationist, the relativist and the preferentialist views in contemporary philosophy of science},
   author = {Radnitzky, Gerard},
   commentator = {Dou, Alberto M.},
 }
 
-@inproceedings{ICUS07:C04:G03:S03,
+@InProceedings{ICUS07:C04:G03:S03,
   crossref = {ICUS07},
   title = {Moritz Schlick and the repudiation of scientific realism},
   author = {Watkins, J. W. N.},
@@ -588,7 +588,7 @@ creative thinking.}}
 
 
 
-@set{ICUS07:C04:G04,
+@Set{ICUS07:C04:G04,
   entryset = {ICUS07:C04:G04:S01},
   pattern = {ICUS07:C04:G04:[S|X]},
   patterntype = {key},
@@ -597,21 +597,21 @@ creative thinking.}}
   chairperson = {Alonso, Marcelo},
 }
 
-@inproceedings{ICUS07:C04:G04:S01,
+@InProceedings{ICUS07:C04:G04:S01,
   crossref = {ICUS07},
   title = {Science and government},
   author = {Singer, S. Fred},
   commentator = {Ne'eman, Yuval},
 }
 
-@inproceedings{ICUS07:C04:G04:S02,
+@InProceedings{ICUS07:C04:G04:S02,
   crossref = {ICUS07},
   title = {The opposition of science},
   author = {Silverman, Joseph},
   commentator = {Becker, Werner},
 }
 
-@inproceedings{ICUS07:C04:G04:S03,
+@InProceedings{ICUS07:C04:G04:S03,
   crossref = {ICUS07},
   title = {Technology and culture},
   author = {Mesthene, Emmanuel G.},
@@ -620,7 +620,7 @@ creative thinking.}}
 
 
 
-@set{ICUS07:C05:G01,
+@Set{ICUS07:C05:G01,
   entryset = {ICUS07:C05:G01:S01},
   pattern = {ICUS07:C05:G01:[S|X]},
   patterntype = {key},
@@ -629,26 +629,26 @@ creative thinking.}}
   moderator = {{Hills Jr}, Samuel S.},
 }
 
-@inproceedings{ICUS07:C05:G01:S01,
+@InProceedings{ICUS07:C05:G01:S01,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Ferré, Frederick},
 }
 
-@inproceedings{ICUS07:C05:G01:S02,
+@InProceedings{ICUS07:C05:G01:S02,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Ravindra, Ravi},
 }
 
-@inproceedings{ICUS07:C05:G01:S03,
+@InProceedings{ICUS07:C05:G01:S03,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Covian, Miguel R.},
 }
 
 
-@set{ICUS07:C05:G02,
+@Set{ICUS07:C05:G02,
   entryset = {ICUS07:C05:G02:S01},
   pattern = {ICUS07:C05:G02:[S|X]},
   patterntype = {key},
@@ -657,26 +657,26 @@ creative thinking.}}
   moderator = {Jones, Reginald V.},
 }
 
-@inproceedings{ICUS07:C05:G02:S01,
+@InProceedings{ICUS07:C05:G02:S01,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Madsen, K. B.},
 }
 
-@inproceedings{ICUS07:C05:G02:S02,
+@InProceedings{ICUS07:C05:G02:S02,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Molnar, Peter},
 }
 
-@inproceedings{ICUS07:C05:G02:S03,
+@InProceedings{ICUS07:C05:G02:S03,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Seifert, Josef},
 }
 
 
-@set{ICUS07:C05:G03,
+@Set{ICUS07:C05:G03,
   entryset = {ICUS07:C05:G03:S01},
   pattern = {ICUS07:C05:G03:[S|X]},
   patterntype = {key},
@@ -685,26 +685,26 @@ creative thinking.}}
   moderator = {Capobigri, A. Robert},
 }
 
-@inproceedings{ICUS07:C05:G03:S01,
+@InProceedings{ICUS07:C05:G03:S01,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Kaplan, Morton A.},
 }
 
-@inproceedings{ICUS07:C05:G03:S02,
+@InProceedings{ICUS07:C05:G03:S02,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {McGuinness, Diane},
 }
 
-@inproceedings{ICUS07:C05:G03:S03,
+@InProceedings{ICUS07:C05:G03:S03,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Maruyama, Magoroh},
 }
 
 
-@set{ICUS07:C05:G04,
+@Set{ICUS07:C05:G04,
   entryset = {ICUS07:C05:G04:S01},
   pattern = {ICUS07:C05:G04:[S|X]},
   patterntype = {key},
@@ -713,13 +713,13 @@ creative thinking.}}
   moderator = {Borrero, Alfonso},
 }
 
-@inproceedings{ICUS07:C05:G04:S01,
+@InProceedings{ICUS07:C05:G04:S01,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Wold, Herman},
 }
 
-@inproceedings{ICUS07:C05:G04:S02,
+@InProceedings{ICUS07:C05:G04:S02,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Lustig, Harry},
@@ -727,7 +727,7 @@ creative thinking.}}
 
 
 
-@set{ICUS07:C05:G05,
+@Set{ICUS07:C05:G05,
   entryset = {ICUS07:C05:G05:S01},
   pattern = {ICUS07:C05:G05:[S|X]},
   patterntype = {key},
@@ -736,26 +736,26 @@ creative thinking.}}
   moderator = {Moses, Charles},
 }
 
-@inproceedings{ICUS07:C05:G05:S01,
+@InProceedings{ICUS07:C05:G05:S01,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Lamberton, Donald M.},
 }
 
-@inproceedings{ICUS07:C05:G05:S02,
+@InProceedings{ICUS07:C05:G05:S02,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Stoessinger, John G.},
 }
 
-@inproceedings{ICUS07:C05:G05:S03,
+@InProceedings{ICUS07:C05:G05:S03,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Mickelson, Sig},
 }
 
 
-@set{ICUS07:C05:G06,
+@Set{ICUS07:C05:G06,
   entryset = {ICUS07:C05:G06:S01},
   pattern = {ICUS07:C05:G06:[S|X]},
   patterntype = {key},
@@ -764,26 +764,26 @@ creative thinking.}}
   moderator = {Toll, John S.},
 }
 
-@inproceedings{ICUS07:C05:G06:S01,
+@InProceedings{ICUS07:C05:G06:S01,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Tsutsui, Minoru},
 }
 
-@inproceedings{ICUS07:C05:G06:S02,
+@InProceedings{ICUS07:C05:G06:S02,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Brasted, Robert C.},
 }
 
-@inproceedings{ICUS07:C05:G06:S03,
+@InProceedings{ICUS07:C05:G06:S03,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Piatier, André},
 }
 
 
-@set{ICUS07:C05:G07,
+@Set{ICUS07:C05:G07,
   entryset = {ICUS07:C05:G07:S01},
   pattern = {ICUS07:C05:G07:[S|X]},
   patterntype = {key},
@@ -792,26 +792,26 @@ creative thinking.}}
   moderator = {Kurti, Nicholas},
 }
 
-@inproceedings{ICUS07:C05:G07:S01,
+@InProceedings{ICUS07:C05:G07:S01,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Butler, Gordon C.},
 }
 
-@inproceedings{ICUS07:C05:G07:S02,
+@InProceedings{ICUS07:C05:G07:S02,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Gibrat, Robert},
 }
 
-@inproceedings{ICUS07:C05:G07:S03,
+@InProceedings{ICUS07:C05:G07:S03,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Maxwell, Grover},
 }
 
 
-@set{ICUS07:C05:G08,
+@Set{ICUS07:C05:G08,
   entryset = {ICUS07:C05:G08:S01},
   pattern = {ICUS07:C05:G08:[S|X]},
   patterntype = {key},
@@ -820,32 +820,32 @@ creative thinking.}}
   moderator = {Lincoln, C. Eric},
 }
 
-@inproceedings{ICUS07:C05:G08:S01,
+@InProceedings{ICUS07:C05:G08:S01,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Laszlo, Ervin},
 }
 
-@inproceedings{ICUS07:C05:G08:S02,
+@InProceedings{ICUS07:C05:G08:S02,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Sontag, Frederick E.},
 }
 
-@inproceedings{ICUS07:C05:G08:S03,
+@InProceedings{ICUS07:C05:G08:S03,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Rose, Mary Carman},
 }
 
-@inproceedings{ICUS07:C05:G08:S04,
+@InProceedings{ICUS07:C05:G08:S04,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Benben, John S.},
 }
 
 
-@set{ICUS07:C05:G09,
+@Set{ICUS07:C05:G09,
   entryset = {ICUS07:C05:G09:S01},
   pattern = {ICUS07:C05:G09:[S|X]},
   patterntype = {key},
@@ -854,26 +854,26 @@ creative thinking.}}
   moderator = {Nahvi, Mahmood J.},
 }
 
-@inproceedings{ICUS07:C05:G09:S01,
+@InProceedings{ICUS07:C05:G09:S01,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Djojohadikusumo, Sumitro},
 }
 
-@inproceedings{ICUS07:C05:G09:S02,
+@InProceedings{ICUS07:C05:G09:S02,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Malik, F. B.},
 }
 
-@inproceedings{ICUS07:C05:G09:S03,
+@InProceedings{ICUS07:C05:G09:S03,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Williamson, D. T. N.},
 }
 
 
-@set{ICUS07:C05:G10,
+@Set{ICUS07:C05:G10,
   entryset = {ICUS07:C05:G10:S01},
   pattern = {ICUS07:C05:G10:[S|X]},
   patterntype = {key},
@@ -882,13 +882,13 @@ creative thinking.}}
   moderator = {Krislov, Samuel},
 }
 
-@inproceedings{ICUS07:C05:G10:S01,
+@InProceedings{ICUS07:C05:G10:S01,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Koentjaraningrat},
 }
 
-@inproceedings{ICUS07:C05:G10:S02,
+@InProceedings{ICUS07:C05:G10:S02,
   crossref = {ICUS07},
   title = {(untitled)},
   author = {Botchway, Francis A.},
