--- a/inst/extdata/bibset-raw/icus09.bib
+++ b/inst/extdata/bibset-raw/icus09.bib
@@ -1,4 +1,4 @@
-@proceedings{ICUS09,
+@Proceedings{ICUS09,
   title = {Absolute Values and the Search for the Peace of Mankind},
   titleaddon = {The Eighth International Conference on the Unity of the Sciences},
   shorttitle = {ICUS IX},
@@ -12,13 +12,13 @@
   keywords={primary, program, moonist}
 }
 
-@inproceedings{ICUS09:P01,
+@InProceedings{ICUS09:P01,
   crossref = {ICUS09},
   title = {Founder's Address},
   author = {Sun Myung Moon},
 }
 
-@inproceedings{ICUS09:P02,
+@InProceedings{ICUS09:P02,
   crossref = {ICUS09},
   title = {Chairman's Address},
   author = {Kaplan, Morton A.},
@@ -26,7 +26,7 @@
 
 
 
-@set{ICUS09:C01,
+@Set{ICUS09:C01,
   entryset = {ICUS09:C01},
   pattern = {ICUS09:C01:G\d\d:[S|X]},
   patterntype = {key},
@@ -35,7 +35,7 @@
   chairperson = {Dougherty, Jude P.},
 }
 
-@set{ICUS09:C01:G01,
+@Set{ICUS09:C01:G01,
   entryset = {ICUS09:C01:G01:S01},
   pattern = {ICUS09:C01:G01:[S|X]},
   patterntype = {key},
@@ -44,14 +44,14 @@
   chairperson = {Reck, Andrew J.},
 }
 
-@inproceedings{ICUS09:C01:G01:S01,
+@InProceedings{ICUS09:C01:G01:S01,
   crossref = {ICUS09},
   title = {Religion and values},
   author = {Kegley, Charles W.},
   commentator = {Donchin, Anne},
 }
 
-@inproceedings{ICUS09:C01:G01:S02,
+@InProceedings{ICUS09:C01:G01:S02,
   crossref = {ICUS09},
   title = {Happiness and the good life},
   author = {Lieb, Irwin C.},
@@ -60,7 +60,7 @@
 
 
 
-@set{ICUS09:C01:G02,
+@Set{ICUS09:C01:G02,
   entryset = {ICUS09:C01:G02:S01},
   pattern = {ICUS09:C01:G02:[S|X]},
   patterntype = {key},
@@ -69,21 +69,21 @@
   chairperson = {Fichter, Joseph H.},
 }
 
-@inproceedings{ICUS09:C01:G02:S01,
+@InProceedings{ICUS09:C01:G02:S01,
   crossref = {ICUS09},
   title = {Family life and family values in a changing society},
   author = {{D'Antonio}, William V.},
   commentator = {Hadden, Jeffrey K.},
 }
 
-@inproceedings{ICUS09:C01:G02:S02,
+@InProceedings{ICUS09:C01:G02:S02,
   crossref = {ICUS09},
   title = {Secularized schools and family values},
   author = {Stark, Rodney and Fichter, Joseph H.},
   commentator = {Cogswell, Betty E.},
 }
 
-@inproceedings{ICUS09:C01:G02:S03,
+@InProceedings{ICUS09:C01:G02:S03,
   crossref = {ICUS09},
   title = {Incompatibities of values and the family in modernized societies: obstacles to integrated development},
   author = {Boh, Katja},
@@ -92,7 +92,7 @@
 
 
 
-@set{ICUS09:C01:G03,
+@Set{ICUS09:C01:G03,
   entryset = {ICUS09:C01:G03:S01},
   pattern = {ICUS09:C01:G03:[S|X]},
   patterntype = {key},
@@ -101,16 +101,16 @@
   chairperson = {Barber, Richard L.},
 }
 
-@inproceedings{ICUS09:C01:G03:S01,
+@InProceedings{ICUS09:C01:G03:S01,
   crossref = {ICUS09},
   title = {The economy and values},
-  author = {{Ver Eecke}, Wilfried},
+  author = {Wilfried, {Ver Eecke}},
   annotation={Ver Eecke's Georgetown Univ bio (https://gufaculty360.georgetown.edu/s/faculty-publications?id=00336000014Rt3IAAS)
   features this and other talks' titles, but not their venues.},
   commentator = {Harriss, C. Lowell},
 }
 
-@inproceedings{ICUS09:C01:G03:S02,
+@InProceedings{ICUS09:C01:G03:S02,
   crossref = {ICUS09},
   title = {The economy and values},
   author = {Dobriansky, Lev E.},
@@ -120,7 +120,7 @@
 
 
 
-@set{ICUS09:C01:G04,
+@Set{ICUS09:C01:G04,
   entryset = {ICUS09:C01:G04:S01},
   pattern = {ICUS09:C01:G04:[S|X]},
   patterntype = {key},
@@ -129,25 +129,25 @@
   chairperson = {Howard, A. E. Dick},
 }
 
-@inproceedings{ICUS09:C01:G04:S01,
+@InProceedings{ICUS09:C01:G04:S01,
   crossref = {ICUS09},
   title = {Protecting a way of life},
   author = {Feinberg, Joel},
 }
 
-@inproceedings{ICUS09:C01:G04:S02,
+@InProceedings{ICUS09:C01:G04:S02,
   crossref = {ICUS09},
   title = {The policy and values: the question of 'moral disestablishment'},
   author = {MacCormick, Neil and Woodard, Calvin},
 }
 
-@inproceedings{ICUS09:C01:G04:X03,
+@InProceedings{ICUS09:C01:G04:X03,
   crossref = {ICUS09},
   title = {Comments on {The Policy and Values}},
   author = {Richards, David A. J.},
 }
 
-@inproceedings{ICUS09:C01:G04:X04,
+@InProceedings{ICUS09:C01:G04:X04,
   crossref = {ICUS09},
   title = {Comments on {The Policy and Values}},
   author = {Henley, Kenneth},
@@ -155,7 +155,7 @@
 
 
 
-@set{ICUS09:C02,
+@Set{ICUS09:C02,
   entryset = {ICUS09:C02},
   pattern = {ICUS09:C02:G\d\d:[S|X]},
   patterntype = {key},
@@ -164,7 +164,7 @@
   chairperson = {Skinner, Elliott P.},
 }
 
-@set{ICUS09:C02:G01,
+@Set{ICUS09:C02:G01,
   entryset = {ICUS09:C02:G01:S01},
   pattern = {ICUS09:C02:G01:[S|X]},
   patterntype = {key},
@@ -173,14 +173,14 @@
   chairperson = {Zamora, Mario D.},
 }
 
-@inproceedings{ICUS09:C02:G01:S01,
+@InProceedings{ICUS09:C02:G01:S01,
   crossref = {ICUS09},
   title = {Traditional views of change and development: the Philippine experience},
   author = {Kalaw, Eva Estrada},
   commentator = {Salazar, Zeus A.},
 }
 
-@inproceedings{ICUS09:C02:G01:S02,
+@InProceedings{ICUS09:C02:G01:S02,
   crossref = {ICUS09},
   title = {Traditional views of change and development},
   author = {Dube, S. C.},
@@ -189,7 +189,7 @@
 
 
 
-@set{ICUS09:C02:G02,
+@Set{ICUS09:C02:G02,
   entryset = {ICUS09:C02:G02:S01},
   pattern = {ICUS09:C02:G02:[S|X]},
   patterntype = {key},
@@ -198,14 +198,14 @@
   chairperson = {Srinivasan, Mangalam},
 }
 
-@inproceedings{ICUS09:C02:G02:S01,
+@InProceedings{ICUS09:C02:G02:S01,
   crossref = {ICUS09},
   title = {Toward a universal approach. Is East-West convergency at hand?},
   author = {Chen, Tsing-Fang},
   commentator = {Bardis, Panos D.},
 }
 
-@inproceedings{ICUS09:C02:G02:S02,
+@InProceedings{ICUS09:C02:G02:S02,
   crossref = {ICUS09},
   title = {The idea of human progress through material evolution. The position of Western philosophy},
   author = {Nasr, Seyyed Hossein},
@@ -214,7 +214,7 @@
 
 
 
-@set{ICUS09:C02:G03,
+@Set{ICUS09:C02:G03,
   entryset = {ICUS09:C02:G03:S01},
   pattern = {ICUS09:C02:G03:[S|X]},
   patterntype = {key},
@@ -223,14 +223,14 @@
   chairperson = {Galantay, Ervin Y.},
 }
 
-@inproceedings{ICUS09:C02:G03:S01,
+@InProceedings{ICUS09:C02:G03:S01,
   crossref = {ICUS09},
   title = {Industrial societies and the biosphere},
   author = {Allen, Robert},
   commentator = {Singer, S. Fred},
 }
 
-@inproceedings{ICUS09:C02:G03:S02,
+@InProceedings{ICUS09:C02:G03:S02,
   crossref = {ICUS09},
   title = {Individual responsibility in face of the struggle between freedom and anarchy},
   author = {Peperzak, Adriaan},
@@ -239,7 +239,7 @@
 
 
 
-@set{ICUS09:C02:G04,
+@Set{ICUS09:C02:G04,
   entryset = {ICUS09:C02:G04:S01},
   pattern = {ICUS09:C02:G04:[S|X]},
   patterntype = {key},
@@ -248,14 +248,14 @@
   chairperson = {Wescott, Roger W.},
 }
 
-@inproceedings{ICUS09:C02:G04:S01,
+@InProceedings{ICUS09:C02:G04:S01,
   crossref = {ICUS09},
   title = {Language policies and national development in Sub-Saharan Africa: Issues for the 80's},
   author = {Bokamba, Eyamba G.},
   commentator = {Wood, Richard},
 }
 
-@inproceedings{ICUS09:C02:G04:S02,
+@InProceedings{ICUS09:C02:G04:S02,
   crossref = {ICUS09},
   title = {Language and development},
   author = {Ansre, Gilbert},
@@ -264,7 +264,7 @@
 
 
 
-@set{ICUS09:C03,
+@Set{ICUS09:C03,
   entryset = {ICUS09:C03},
   pattern = {ICUS09:C03:G\d\d:[S|X]},
   patterntype = {key},
@@ -273,7 +273,7 @@
   chairperson = {Mellanby, Kenneth},
 }
 
-@set{ICUS09:C03:G01,
+@Set{ICUS09:C03:G01,
   entryset = {ICUS09:C03:G01:S01},
   pattern = {ICUS09:C03:G01:[S|X]},
   patterntype = {key},
@@ -282,14 +282,14 @@
   chairperson = {Mellanby, Kenneth},
 }
 
-@inproceedings{ICUS09:C03:G01:S01,
+@InProceedings{ICUS09:C03:G01:S01,
   crossref = {ICUS09},
   title = {Quality of life, self-realization and society},
   author = {Madsen, K. B.},
   commentator = {Moles, Abraham A.},
 }
 
-@inproceedings{ICUS09:C03:G01:S02,
+@InProceedings{ICUS09:C03:G01:S02,
   crossref = {ICUS09},
   title = {What is meant by ''quality of life''?},
   author = {Szalai, Alexander},
@@ -299,7 +299,7 @@
 
 
 
-@set{ICUS09:C03:G02,
+@Set{ICUS09:C03:G02,
   entryset = {ICUS09:C03:G02:S01},
   pattern = {ICUS09:C03:G02:[S|X]},
   patterntype = {key},
@@ -308,21 +308,21 @@
   chairperson = {Pringle, J. W. S.},
 }
 
-@inproceedings{ICUS09:C03:G02:S01,
+@InProceedings{ICUS09:C03:G02:S01,
   crossref = {ICUS09},
   title = {The effect of crowding in cities on the quality of life, with special reference to developing countries},
   author = {Dwyer, D. J.},
   commentator = {Galantay, Ervin Y.},
 }
 
-@inproceedings{ICUS09:C03:G02:S02,
+@InProceedings{ICUS09:C03:G02:S02,
   crossref = {ICUS09},
   title = {Singapore's experience in family planning and its effect on the quality of life of the people},
   author = {Tan, Nalia},
   commentator = {Samarawickrama, Gervin P.},
 }
 
-@inproceedings{ICUS09:C03:G02:S03,
+@InProceedings{ICUS09:C03:G02:S03,
   crossref = {ICUS09},
   title = {Attitudes of the major religions of the world to the population problem},
   author = {Rubenstein, Richard L.},
@@ -331,7 +331,7 @@
 
 
 
-@set{ICUS09:C03:G03,
+@Set{ICUS09:C03:G03,
   entryset = {ICUS09:C03:G03:S01},
   pattern = {ICUS09:C03:G03:[S|X]},
   patterntype = {key},
@@ -340,14 +340,14 @@
   chairperson = {Krebs, Hans A.},
 }
 
-@inproceedings{ICUS09:C03:G03:S01,
+@InProceedings{ICUS09:C03:G03:S01,
   crossref = {ICUS09},
   title = {Biotechnology and values: how to arrive at sound value judgements},
   author = {Krebs, Hans A.},
   commentator = {Goble, Frank G.},
 }
 
-@inproceedings{ICUS09:C03:G03:S02,
+@InProceedings{ICUS09:C03:G03:S02,
   crossref = {ICUS09},
   title = {Man's own show, civilization},
   author = {Johnson, B. Connor},
@@ -356,7 +356,7 @@
 
 
 
-@set{ICUS09:C03:G04,
+@Set{ICUS09:C03:G04,
   entryset = {ICUS09:C03:G04:S01},
   pattern = {ICUS09:C03:G04:[S|X]},
   patterntype = {key},
@@ -365,14 +365,14 @@
   chairperson = {Golden, John},
 }
 
-@inproceedings{ICUS09:C03:G04:S01,
+@InProceedings{ICUS09:C03:G04:S01,
   crossref = {ICUS09},
   title = {Education and values},
   author = {Moore, Jerry R.},
   commentator = {Ayman, Iraj},
 }
 
-@inproceedings{ICUS09:C03:G04:S02,
+@InProceedings{ICUS09:C03:G04:S02,
   crossref = {ICUS09},
   title = {Education for moral values in developing nations},
   author = {Jamali, Mohammed Fadhei},
@@ -381,7 +381,7 @@
 
 
 
-@set{ICUS09:C04,
+@Set{ICUS09:C04,
   entryset = {ICUS09:C04},
   pattern = {ICUS09:C04:G\d\d:[S|X]},
   patterntype = {key},
@@ -390,7 +390,7 @@
   chairperson = {Weinberg, Alvin M.},
 }
 
-@set{ICUS09:C04:G01,
+@Set{ICUS09:C04:G01,
   entryset = {ICUS09:C04:G01:S01},
   pattern = {ICUS09:C04:G01:[S|X]},
   patterntype = {key},
@@ -399,14 +399,14 @@
   chairperson = {Kurti, Nicholas},
 }
 
-@inproceedings{ICUS09:C04:G01:S01,
+@InProceedings{ICUS09:C04:G01:S01,
   crossref = {ICUS09},
   title = {Information technology: threats and promises},
   author = {Howlett, Jack},
   commentator = {Lustig, Harry},
 }
 
-@inproceedings{ICUS09:C04:G01:S02,
+@InProceedings{ICUS09:C04:G01:S02,
   crossref = {ICUS09},
   title = {Will mankind or technology determine the future?},
   author = {Williamson, D. T. N.},
@@ -415,7 +415,7 @@
 
 
 
-@set{ICUS09:C04:G02,
+@Set{ICUS09:C04:G02,
   entryset = {ICUS09:C04:G02:S01},
   pattern = {ICUS09:C04:G02:[S|X]},
   patterntype = {key},
@@ -424,14 +424,14 @@
   chairperson = {Foster, Richard B.},
 }
 
-@inproceedings{ICUS09:C04:G02:S01,
+@InProceedings{ICUS09:C04:G02:S01,
   crossref = {ICUS09},
   title = {Strategic nuclear war and the individual},
   author = {Hoeber, Francis},
   commentator = {Greene, Nancy Deale},
 }
 
-@inproceedings{ICUS09:C04:G02:S02,
+@InProceedings{ICUS09:C04:G02:S02,
   crossref = {ICUS09},
   title = {Protection of the individual and his rights in theater nuclear warfare},
   author = {Gessert, Robert A.},
@@ -440,7 +440,7 @@
 
 
 
-@set{ICUS09:C04:G03,
+@Set{ICUS09:C04:G03,
   entryset = {ICUS09:C04:G03:S01},
   pattern = {ICUS09:C04:G03:[S|X]},
   patterntype = {key},
@@ -449,7 +449,7 @@
   chairperson = {Weinberg, Alvin M.},
 }
 
-@inproceedings{ICUS09:C04:G03:S01,
+@InProceedings{ICUS09:C04:G03:S01,
   crossref = {ICUS09},
   title = {Freedom, science and civilization},
   author = {Bronwell, Arther B.},
@@ -459,7 +459,7 @@
 
 
 
-@set{ICUS09:C04:G04,
+@Set{ICUS09:C04:G04,
   entryset = {ICUS09:C04:G04:S01},
   pattern = {ICUS09:C04:G04:[S|X]},
   patterntype = {key},
@@ -468,26 +468,26 @@
   chairperson = {Lewis, W. Bennett},
 }
 
-@inproceedings{ICUS09:C04:G04:S01,
+@InProceedings{ICUS09:C04:G04:S01,
   crossref = {ICUS09},
   title = {Wealth and society},
   author = {Lewis, W. Bennett},
 }
 
-@inproceedings{ICUS09:C04:G04:S02,
+@InProceedings{ICUS09:C04:G04:S02,
   crossref = {ICUS09},
   title = {The central role of energy in Soddy's holistic and critical approach to nuclear science, economics and social responsibility},
   author = {Trenn, Thaddeus J.},
 }
 
-@inproceedings{ICUS09:C04:G04:X03,
+@InProceedings{ICUS09:C04:G04:X03,
   crossref = {ICUS09},
   title = {Comments on {Wealth and Society}},
   author = {Ritterbush, Philip C.},
 }
 
 
-@set{ICUS09:C05:G01,
+@Set{ICUS09:C05:G01,
   entryset = {ICUS09:C05:G01:S01},
   pattern = {ICUS09:C05:G01:[S|X]},
   patterntype = {key},
@@ -496,7 +496,7 @@
   moderator = {Wescott, Roger W.},
 }
 
-@inproceedings{ICUS09:C05:G01:S01,
+@InProceedings{ICUS09:C05:G01:S01,
   crossref = {ICUS09},
   title = {Multilingualism in Developing Countries, Industrialized Countries and Future Human Communities},
   author = {Maruyama, Magoroh},
@@ -504,7 +504,7 @@
 }
 
 
-@set{ICUS09:C05:G02,
+@Set{ICUS09:C05:G02,
   entryset = {ICUS09:C05:G02:S01},
   pattern = {ICUS09:C05:G02:[S|X]},
   patterntype = {key},
@@ -513,7 +513,7 @@
   moderator = {Bhiday, M. R.},
 }
 
-@inproceedings{ICUS09:C05:G02:S01,
+@InProceedings{ICUS09:C05:G02:S01,
   crossref = {ICUS09},
   title = {The Cultural Impact of Science and Technology on Developing Countries},
   author = {Malik, F. Bary},
@@ -522,7 +522,7 @@
 
 
 
-@set{ICUS09:C05:G03,
+@Set{ICUS09:C05:G03,
   entryset = {ICUS09:C05:G03:S01},
   pattern = {ICUS09:C05:G03:[S|X]},
   patterntype = {key},
@@ -531,7 +531,7 @@
   moderator = {{Ben-Dak}, Joseph},
 }
 
-@inproceedings{ICUS09:C05:G03:S01,
+@InProceedings{ICUS09:C05:G03:S01,
   crossref = {ICUS09},
   title = {Geopolitics of European Security in the Nuclear Age and World Peace},
   author = {Zoppo, Ciro Elliott},
@@ -541,7 +541,7 @@
 
 
 
-@set{ICUS09:C05:G04,
+@Set{ICUS09:C05:G04,
   entryset = {ICUS09:C05:G04:S01},
   pattern = {ICUS09:C05:G04:[S|X]},
   patterntype = {key},
@@ -550,7 +550,7 @@
   moderator = {Pribram Karl H.},
 }
 
-@inproceedings{ICUS09:C05:G04:S01,
+@InProceedings{ICUS09:C05:G04:S01,
   crossref = {ICUS09},
   title = {Ethology, Ecology and Philosophy of Traditional Health Care Delivery System of the Akamba},
   author = {Ndeti, Kivuto},
@@ -559,7 +559,7 @@
 
 
 
-@set{ICUS09:C05:G05,
+@Set{ICUS09:C05:G05,
   entryset = {ICUS09:C05:G05:S01},
   pattern = {ICUS09:C05:G05:[S|X]},
   patterntype = {key},
@@ -568,7 +568,7 @@
   moderator = {Dewan, M. L.},
 }
 
-@inproceedings{ICUS09:C05:G05:S01,
+@InProceedings{ICUS09:C05:G05:S01,
   crossref = {ICUS09},
   title = {The Matrifocal Family: From an Anthropological Curiosity to a World Problem},
   author = {Shepher, Joseph},
@@ -578,7 +578,7 @@
 
 
 
-@set{ICUS09:C05:G06,
+@Set{ICUS09:C05:G06,
   entryset = {ICUS09:C05:G06:S01},
   pattern = {ICUS09:C05:G06:[S|X]},
   patterntype = {key},
@@ -587,7 +587,7 @@
   moderator = {Radnitzky, Gerard},
 }
 
-@inproceedings{ICUS09:C05:G06:S01,
+@InProceedings{ICUS09:C05:G06:S01,
   crossref = {ICUS09},
   title = {Sincerity, Rationality and Monitoring},
   author = {Flew, Anthony},
@@ -596,7 +596,7 @@
 
 
 
-@set{ICUS09:C06:G01,
+@Set{ICUS09:C06:G01,
   entryset = {ICUS09:C06:G01:S01},
   pattern = {ICUS09:C06:G01:[S|X]},
   patterntype = {key},
@@ -605,7 +605,7 @@
   moderator = {Mitchell, Edgar D.},
 }
 
-@inproceedings{ICUS09:C06:G01:S01,
+@InProceedings{ICUS09:C06:G01:S01,
   crossref = {ICUS09},
   title = {Science and the Clarification of Values: Implications of Recent Findings in Psychological and Psychic Research},
   author = {Harman, Willis},
@@ -614,7 +614,7 @@
 
 
 
-@set{ICUS09:C06:G02,
+@Set{ICUS09:C06:G02,
   entryset = {ICUS09:C06:G02:S01},
   pattern = {ICUS09:C06:G02:[S|X]},
   patterntype = {key},
@@ -623,7 +623,7 @@
   moderator = {Farracuti, Franco},
 }
 
-@inproceedings{ICUS09:C06:G02:S01,
+@InProceedings{ICUS09:C06:G02:S01,
   crossref = {ICUS09},
   title = {Rapid Economic and Social Change in Developing Nations and the Problem of Crime},
   author = {Lejins, Peter P.},
@@ -632,7 +632,7 @@
 
 
 
-@set{ICUS09:C06:G03,
+@Set{ICUS09:C06:G03,
   entryset = {ICUS09:C06:G03:S01},
   pattern = {ICUS09:C06:G03:[S|X]},
   patterntype = {key},
@@ -641,7 +641,7 @@
   moderator = {Bey, Arifin},
 }
 
-@inproceedings{ICUS09:C06:G03:S01,
+@InProceedings{ICUS09:C06:G03:S01,
   crossref = {ICUS09},
   title = {The North-South Problem},
   author = {Scalera, Garrett},
@@ -650,7 +650,7 @@
 
 
 
-@set{ICUS09:C06:G04,
+@Set{ICUS09:C06:G04,
   entryset = {ICUS09:C06:G04:S01},
   pattern = {ICUS09:C06:G04:[S|X]},
   patterntype = {key},
@@ -659,7 +659,7 @@
   moderator = {Kegley, Jacquelyn Ann K.},
 }
 
-@inproceedings{ICUS09:C06:G04:S01,
+@InProceedings{ICUS09:C06:G04:S01,
   crossref = {ICUS09},
   title = {Alternatives to Aggression},
   author = {McGuinness, Diane},
@@ -667,7 +667,7 @@
 }
 
 
-@set{ICUS09:C06:G05,
+@Set{ICUS09:C06:G05,
   entryset = {ICUS09:C06:G05:S01},
   pattern = {ICUS09:C06:G05:[S|X]},
   patterntype = {key},
@@ -676,14 +676,14 @@
   moderator = {Jantsch, Erich},
 }
 
-@inproceedings{ICUS09:C06:G05:S01,
+@InProceedings{ICUS09:C06:G05:S01,
   crossref = {ICUS09},
   title = {Ecological Visions for Designing a Sustainable Future},
   author = {Hill, Stuart B.},
   commentator={Soleri, Paolo}
 }
 
-@set{ICUS09:C06:G06,
+@Set{ICUS09:C06:G06,
   entryset = {ICUS09:C06:G06:S01},
   pattern = {ICUS09:C06:G06:[S|X]},
   patterntype = {key},
@@ -692,7 +692,7 @@
   moderator = {Jaffe, Russel M.},
 }
 
-@inproceedings{ICUS09:C06:G06:S01,
+@InProceedings{ICUS09:C06:G06:S01,
   crossref = {ICUS09},
   title = {The Emerging Paradigm and its Contribution to the Unity of Sciences},
   author = {Arul, Benedict Victor},
