--- a/inst/extdata/bibset-raw/icus10.bib
+++ b/inst/extdata/bibset-raw/icus10.bib
@@ -1,4 +1,4 @@
-@proceedings{ICUS10,
+@Proceedings{ICUS10,
   title = {The Search for Absolute Values and the Creation of the New World},
   titleaddon = {Tenth International Conference on the Unity of the Sciences},
   shorttitle = {ICUS X},
@@ -12,13 +12,13 @@
   keywords={primary, program, moonist}
 }
 
-@inproceedings{ICUS10:P01,
+@InProceedings{ICUS10:P01,
   crossref = {ICUS10},
   title = {The Unity of the Sciences},
   author = {Yilmaz, Huseyin},
 }
 
-@inproceedings{ICUS10:P02,
+@InProceedings{ICUS10:P02,
   crossref = {ICUS10},
   title = {Global Approach to World Disorder},
   author = {Nakajima, Masaki},
@@ -26,7 +26,7 @@
 
 
 
-@set{ICUS10:C01,
+@Set{ICUS10:C01,
   entryset = {ICUS10:C01},
   pattern = {ICUS10:C01:G\d\d:[S|X]},
   patterntype = {key},
@@ -35,7 +35,7 @@
   chairperson = {Golden, John},
 }
 
-@set{ICUS10:C01:G01,
+@Set{ICUS10:C01:G01,
   entryset = {ICUS10:C01:G01:S01},
   pattern = {ICUS10:C01:G01:[S|X]},
   patterntype = {key},
@@ -44,14 +44,14 @@
   chairperson = {Koo, Bon Ho},
 }
 
-@inproceedings{ICUS10:C01:G01:S01,
+@InProceedings{ICUS10:C01:G01:S01,
   crossref = {ICUS10},
   title = {Comparative development - with special reference to Japan},
   author = {Kurebayashi, Shigeo},
   commentator = {Liu, Tai Ying},
 }
 
-@inproceedings{ICUS10:C01:G01:S02,
+@InProceedings{ICUS10:C01:G01:S02,
   crossref = {ICUS10},
   title = {Comparative development - with special reference to Korea},
   author = {Koo, Bon Ho},
@@ -60,7 +60,7 @@
 
 
 
-@set{ICUS10:C01:G02,
+@Set{ICUS10:C01:G02,
   entryset = {ICUS10:C01:G02:S01},
   pattern = {ICUS10:C01:G02:[S|X]},
   patterntype = {key},
@@ -69,21 +69,21 @@
   chairperson = {Sakr, Mohamed Ahmed},
 }
 
-@inproceedings{ICUS10:C01:G02:S01,
+@InProceedings{ICUS10:C01:G02:S01,
   crossref = {ICUS10},
   title = {Non-oil resource-exporting countries and the pattern of development in the Middle East},
   author = {Katanani, Ahmed K.},
   commentator = {Ahmad, Khurshid},
 }
 
-@inproceedings{ICUS10:C01:G02:S02,
+@InProceedings{ICUS10:C01:G02:S02,
   crossref = {ICUS10},
   title = {Oil and its impact on development of the oil-producing countries},
   author = {Ali, Sultan Abou},
   commentator = {Ahmed, Ziadeen},
 }
 
-@inproceedings{ICUS10:C01:G02:S03,
+@InProceedings{ICUS10:C01:G02:S03,
   crossref = {ICUS10},
   title = {African resource-exporting states: an examination of the periphery of the world periphery},
   author = {Onwuka, R. I.},
@@ -92,7 +92,7 @@
 
 
 
-@set{ICUS10:C01:G03,
+@Set{ICUS10:C01:G03,
   entryset = {ICUS10:C01:G03:S01},
   pattern = {ICUS10:C01:G03:[S|X]},
   patterntype = {key},
@@ -101,25 +101,25 @@
   chairperson = {Harriss, C. Lowell},
 }
 
-@inproceedings{ICUS10:C01:G03:S01,
+@InProceedings{ICUS10:C01:G03:S01,
   crossref = {ICUS10},
   title = {East Europe and USA},
   author = {Dobriansky, Lev E.},
 }
 
-@inproceedings{ICUS10:C01:G03:S02,
+@InProceedings{ICUS10:C01:G03:S02,
   crossref = {ICUS10},
   title = {The teachings of growth and development},
   author = {Piatier, Andre},
 }
 
-@inproceedings{ICUS10:C01:G03:S03,
+@InProceedings{ICUS10:C01:G03:S03,
   crossref = {ICUS10},
   title = {Lessons for less developed countries: the Japan and USA cases},
   author = {Klein, Sidney},
 }
 
-@inproceedings{ICUS10:C01:G03:X04,
+@InProceedings{ICUS10:C01:G03:X04,
   crossref = {ICUS10},
   title = {General discussant},
   author = {Colander, David},
@@ -127,7 +127,7 @@
 
 
 
-@set{ICUS10:C01:G04,
+@Set{ICUS10:C01:G04,
   entryset = {ICUS10:C01:G04:S01},
   pattern = {ICUS10:C01:G04:[S|X]},
   patterntype = {key},
@@ -136,14 +136,14 @@
   chairperson = {Srinivasan, Mangalam},
 }
 
-@inproceedings{ICUS10:C01:G04:S01,
+@InProceedings{ICUS10:C01:G04:S01,
   crossref = {ICUS10},
   title = {The less developed countries in risk of poverty with special reference to Latin America and the Caribbean},
   author = {Wiltshire, Winthrop},
   commentator = {Lamberton, D. M.},
 }
 
-@inproceedings{ICUS10:C01:G04:S02,
+@InProceedings{ICUS10:C01:G04:S02,
   crossref = {ICUS10},
   title = {Turning past disadvantages into future advantages: tropical, polar, circumpolar, arid and high altitude countries},
   author = {Maruyama, Magoroh},
@@ -153,7 +153,7 @@
 
 
 
-@set{ICUS10:C02,
+@Set{ICUS10:C02,
   entryset = {ICUS10:C02},
   pattern = {ICUS10:C02:G\d\d:[S|X]},
   patterntype = {key},
@@ -162,7 +162,7 @@
   chairperson = {Weinberg, Alvin M.},
 }
 
-@set{ICUS10:C02:G01,
+@Set{ICUS10:C02:G01,
   entryset = {ICUS10:C02:G01:S01},
   pattern = {ICUS10:C02:G01:[S|X]},
   patterntype = {key},
@@ -171,26 +171,26 @@
   chairperson = {Fukuda, Nobuyuki},
 }
 
-@inproceedings{ICUS10:C02:G01:S01,
+@InProceedings{ICUS10:C02:G01:S01,
   crossref = {ICUS10},
   title = {Energy options until 2030},
   author = {Fells, Ian and Kurti, Nicholas},
   authoran = {2:presenter},
 }
 
-@inproceedings{ICUS10:C02:G01:S02,
+@InProceedings{ICUS10:C02:G01:S02,
   crossref = {ICUS10},
   title = {The vulnerability of energy supply: the case of Japan},
   author = {Ikuta, Toyoaki},
 }
 
-@inproceedings{ICUS10:C02:G01:S03,
+@InProceedings{ICUS10:C02:G01:S03,
   crossref = {ICUS10},
   title = {Energy in the third world},
   author = {Srinivasan, Mangalam},
 }
 
-@inproceedings{ICUS10:C02:G01:X04,
+@InProceedings{ICUS10:C02:G01:X04,
   crossref = {ICUS10},
   title = {General discussant {Energy}},
   author = {Nishibori, Eizaburo},
@@ -199,7 +199,7 @@
 
 
 
-@set{ICUS10:C02:G02,
+@Set{ICUS10:C02:G02,
   entryset = {ICUS10:C02:G02:S01},
   pattern = {ICUS10:C02:G02:[S|X]},
   patterntype = {key},
@@ -208,20 +208,20 @@
   chairperson = {Williamson, D. T. N.},
 }
 
-@inproceedings{ICUS10:C02:G02:S01,
+@InProceedings{ICUS10:C02:G02:S01,
   crossref = {ICUS10},
   title = {Robots, sensors and the automatic factory},
   author = {Wright, Paul K.},
   commentator = {},
 }
 
-@inproceedings{ICUS10:C02:G02:S02,
+@InProceedings{ICUS10:C02:G02:S02,
   crossref = {ICUS10},
   title = {General impacts of microprocessors on industry and civilization},
   author = {Mori, Ryoichi},
 }
 
-@inproceedings{ICUS10:C02:G02:X03,
+@InProceedings{ICUS10:C02:G02:X03,
   crossref = {ICUS10},
   title = {General discussant {Information}},
   author = {Bennett, John M.},
@@ -229,7 +229,7 @@
 
 
 
-@set{ICUS10:C02:G03,
+@Set{ICUS10:C02:G03,
   entryset = {ICUS10:C02:G03:S01},
   pattern = {ICUS10:C02:G03:[S|X]},
   patterntype = {key},
@@ -238,25 +238,25 @@
   chairperson = {Kurti, Nicholas},
 }
 
-@inproceedings{ICUS10:C02:G03:S01,
+@InProceedings{ICUS10:C02:G03:S01,
   crossref = {ICUS10},
   title = {Minerals availability: the challenge for science and technology},
   author = {Tilton, John E.},
 }
 
-@inproceedings{ICUS10:C02:G03:S02,
+@InProceedings{ICUS10:C02:G03:S02,
   crossref = {ICUS10},
   title = {The world water problem},
   author = {Stanhill, Gerald},
 }
 
-@inproceedings{ICUS10:C02:G03:S03,
+@InProceedings{ICUS10:C02:G03:S03,
   crossref = {ICUS10},
   title = {The entropy trap: is it avoidable?},
   author = {Ayres, Robert U.},
 }
 
-@inproceedings{ICUS10:C02:G03:X04,
+@InProceedings{ICUS10:C02:G03:X04,
   crossref = {ICUS10},
   title = {General discussant {Materials}},
   author = {Alonso, Marcelo},
@@ -264,7 +264,7 @@
 
 
 
-@set{ICUS10:C02:G05,
+@Set{ICUS10:C02:G05,
   entryset = {ICUS10:C02:G05:S01},
   pattern = {ICUS10:C02:G05:[S|X]},
   patterntype = {key},
@@ -273,19 +273,19 @@
   chairperson = {Ayres, Robert U.},
 }
 
-@inproceedings{ICUS10:C02:G05:S02,
+@InProceedings{ICUS10:C02:G05:S02,
   crossref = {ICUS10},
   title = {Basic innovation and industrial growth},
   author = {Mensch, Gerhard O.},
 }
 
-@inproceedings{ICUS10:C02:G05:S03,
+@InProceedings{ICUS10:C02:G05:S03,
   crossref = {ICUS10},
   title = {Social impacts of changing technology: the question of approach},
   author = {Stearns, Peter N.},
 }
 
-@inproceedings{ICUS10:C02:G05:S04,
+@InProceedings{ICUS10:C02:G05:S04,
   crossref = {ICUS10},
   title = {Appropriate technology},
   author = {Rohatgi, Pradeep K.},
@@ -294,7 +294,7 @@
 
 
 
-@set{ICUS10:C03,
+@Set{ICUS10:C03,
   entryset = {ICUS10:C03},
   pattern = {ICUS10:C03:G\d\d:[S|X]},
   patterntype = {key},
@@ -303,7 +303,7 @@
   chairperson = {Mellanby, Kenneth},
 }
 
-@set{ICUS10:C03:G01,
+@Set{ICUS10:C03:G01,
   entryset = {ICUS10:C03:G01:S01},
   pattern = {ICUS10:C03:G01:[S|X]},
   patterntype = {key},
@@ -312,14 +312,14 @@
   chairperson = {Gerholm, Tor Ragnor},
 }
 
-@inproceedings{ICUS10:C03:G01:S01,
+@InProceedings{ICUS10:C03:G01:S01,
   crossref = {ICUS10},
   title = {The introduction of Western technology into China and Japan},
   author = {Sorborn, Per},
   commentator = {Koertge, Noretta},
 }
 
-@inproceedings{ICUS10:C03:G01:S02,
+@InProceedings{ICUS10:C03:G01:S02,
   crossref = {ICUS10},
   title = {The complications of applied science},
   author = {Agazzi, Evandro},
@@ -329,7 +329,7 @@
 
 
 
-@set{ICUS10:C03:G02,
+@Set{ICUS10:C03:G02,
   entryset = {ICUS10:C03:G02:S01},
   pattern = {ICUS10:C03:G02:[S|X]},
   patterntype = {key},
@@ -338,21 +338,21 @@
   chairperson = {Silverman, Joseph},
 }
 
-@inproceedings{ICUS10:C03:G02:S01,
+@InProceedings{ICUS10:C03:G02:S01,
   crossref = {ICUS10},
   title = {The consequence of technology: emerging effects and discovered needs},
   author = {Pohl, Frederick},
   commentator = {Komatsu, Sakyo},
 }
 
-@inproceedings{ICUS10:C03:G02:S02,
+@InProceedings{ICUS10:C03:G02:S02,
   crossref = {ICUS10},
   title = {Information technology: are its impacts predictable?},
   author = {Linstone, Harold},
   commentator = {Stannett, V. T.},
 }
 
-@inproceedings{ICUS10:C03:G02:S03,
+@InProceedings{ICUS10:C03:G02:S03,
   crossref = {ICUS10},
   title = {The future of space society},
   author = {Obayashi, Tatsuzo},
@@ -362,7 +362,7 @@
 
 
 
-@set{ICUS10:C03:G04,
+@Set{ICUS10:C03:G04,
   entryset = {ICUS10:C03:G04:S01},
   pattern = {ICUS10:C03:G04:[S|X]},
   patterntype = {key},
@@ -371,25 +371,25 @@
   chairperson = {{Villee Jr}, Claude A.},
 }
 
-@inproceedings{ICUS10:C03:G04:S01,
+@InProceedings{ICUS10:C03:G04:S01,
   crossref = {ICUS10},
   title = {A perspective of population in transition},
   author = {Pratt, Edward O.},
 }
 
-@inproceedings{ICUS10:C03:G04:S02,
+@InProceedings{ICUS10:C03:G04:S02,
   crossref = {ICUS10},
   title = {World population problem: its impact on the family and community},
   author = {Samarawickrama, Gervin P.},
 }
 
-@inproceedings{ICUS10:C03:G04:S03,
+@InProceedings{ICUS10:C03:G04:S03,
   crossref = {ICUS10},
   title = {Biomedical sciences and social patterns in the twenty-first century},
   author = {{Villee Jr}, Claude A.},
 }
 
-@inproceedings{ICUS10:C03:G04:X04,
+@InProceedings{ICUS10:C03:G04:X04,
   crossref = {ICUS10},
   title = {General discussant {Population and Social Patterns}},
   author = {Fraser, Stewart E.},
@@ -398,7 +398,7 @@
 
 
 
-@set{ICUS10:C04,
+@Set{ICUS10:C04,
   entryset = {ICUS10:C04},
   pattern = {ICUS10:C04:G\d\d:[S|X]},
   patterntype = {key},
@@ -407,7 +407,7 @@
   chairperson = {Rubenstein, Richard L.},
 }
 
-@set{ICUS10:C04:G01,
+@Set{ICUS10:C04:G01,
   entryset = {ICUS10:C04:G01:S01},
   pattern = {ICUS10:C04:G01:[S|X]},
   patterntype = {key},
@@ -416,28 +416,28 @@
   chairperson = {Feinendegen, Ludwig E.},
 }
 
-@inproceedings{ICUS10:C04:G01:S01,
+@InProceedings{ICUS10:C04:G01:S01,
   crossref = {ICUS10},
   title = {The holistic approach to health and healing: drugless therapy},
   author = {Puri, Gopal},
   annotation = {https://theconversation.com/how-yoga-conquered-britain-the-feminist-legacy-of-yogini-sunita-and-kailash-puri-118780}
 }
 
-@inproceedings{ICUS10:C04:G01:S02,
+@InProceedings{ICUS10:C04:G01:S02,
   crossref = {ICUS10},
   title = {Mental health and dilemmas of psychotherapy: an Eastern perspective},
-  author = {{de Silva}, Padmasiri},
+  author = {Padmasiri {de Silva}},
   commentator = {Fort, Joel},
 }
 
-@inproceedings{ICUS10:C04:G01:S03,
+@InProceedings{ICUS10:C04:G01:S03,
   crossref = {ICUS10},
   title = {Approaches to health delivery in developing countries: the Nigerian experience},
   author = {Adadevoh, B. Kwaku},
   commentator = {Ghista, Dhanjoo N.},
 }
 
-@inproceedings{ICUS10:C04:G01:S04,
+@InProceedings{ICUS10:C04:G01:S04,
   crossref = {ICUS10},
   title = {A new treatment for malignant tumors},
   author = {Johnson, Fred M.},
@@ -447,7 +447,7 @@
 
 
 
-@set{ICUS10:C04:G03,
+@Set{ICUS10:C04:G03,
   entryset = {ICUS10:C04:G03:S01},
   pattern = {ICUS10:C04:G03:[S|X]},
   patterntype = {key},
@@ -456,25 +456,25 @@
   chairperson = {Kim, Ilpyong J.},
 }
 
-@inproceedings{ICUS10:C04:G03:S01,
+@InProceedings{ICUS10:C04:G03:S01,
   crossref = {ICUS10},
   title = {The Japanese model of modernization: present and future},
   author = {Stewart, Edward C.},
 }
 
-@inproceedings{ICUS10:C04:G03:S02,
+@InProceedings{ICUS10:C04:G03:S02,
   crossref = {ICUS10},
   title = {Modernization and socio-cultural values: an aspect of modernization in Korea},
   author = {Toba, Kin'ichiro},
 }
 
-@inproceedings{ICUS10:C04:G03:S03,
+@InProceedings{ICUS10:C04:G03:S03,
   crossref = {ICUS10},
   title = {Promise and problems of modernization - the case of the USA},
   author = {Han, Sunj Joe},
 }
 
-@inproceedings{ICUS10:C04:G03:X04,
+@InProceedings{ICUS10:C04:G03:X04,
   crossref = {ICUS10},
   title = {General discussant {The Resurgence of East Asia: Promises and Pitfalls of Modernization}},
   author = {Hsiung, James C. and Kau, Michael Y. M.},
@@ -483,7 +483,7 @@
 
 
 
-@set{ICUS10:C04:G04,
+@Set{ICUS10:C04:G04,
   entryset = {ICUS10:C04:G04:S01},
   pattern = {ICUS10:C04:G04:[S|X]},
   patterntype = {key},
@@ -492,21 +492,21 @@
   chairperson = {Wescott, Roger W.},
 }
 
-@inproceedings{ICUS10:C04:G04:S01,
+@InProceedings{ICUS10:C04:G04:S01,
   crossref = {ICUS10},
   title = {The spirit of Japan: a thematic review of Japanese history},
   author = {McFarland, H. Neill},
   commentator = {Rubenstein, Betty Rogers},
 }
 
-@inproceedings{ICUS10:C04:G04:S02,
+@InProceedings{ICUS10:C04:G04:S02,
   crossref = {ICUS10},
   title = {National aesthetics: help or hindrance to the resurgence of East Asia},
   author = {Sullivan, Michael},
   commentator = {Stokstad, Marilyn},
 }
 
-@inproceedings{ICUS10:C04:G04:S03,
+@InProceedings{ICUS10:C04:G04:S03,
   crossref = {ICUS10},
   title = {The meaning of citizenship},
   author = {Huang, Sung-mo},
@@ -516,7 +516,7 @@
 
 
 
-@set{ICUS10:C04:G05,
+@Set{ICUS10:C04:G05,
   entryset = {ICUS10:C04:G05:S01},
   pattern = {ICUS10:C04:G05:[S|X]},
   patterntype = {key},
@@ -525,25 +525,25 @@
   chairperson = {{Al Faruqi}, Isma'il R.},
 }
 
-@inproceedings{ICUS10:C04:G05:S01,
+@InProceedings{ICUS10:C04:G05:S01,
   crossref = {ICUS10},
   title = {Catholic Christianity as a supranational movement},
   author = {Gremillion, Joseph},
 }
 
-@inproceedings{ICUS10:C04:G05:S02,
+@InProceedings{ICUS10:C04:G05:S02,
   crossref = {ICUS10},
   title = {Marxism: a transnational actor for a new world order},
   author = {Zaman, M. Raquibuz},
 }
 
-@inproceedings{ICUS10:C04:G05:S03,
+@InProceedings{ICUS10:C04:G05:S03,
   crossref = {ICUS10},
   title = {Islam: movement for world order},
   author = {Sulayman, Abdulhamid Abu},
 }
 
-@inproceedings{ICUS10:C04:G05:X04,
+@InProceedings{ICUS10:C04:G05:X04,
   crossref = {ICUS10},
   title = {General discussant {The Supranational Movements: Launch Point 1981}},
   author = {Gran, Peter},
@@ -552,7 +552,7 @@
 
 
 
-@set{ICUS10:C05,
+@Set{ICUS10:C05,
   entryset = {ICUS10:C05},
   pattern = {ICUS10:C05:G\d\d:[S|X]},
   patterntype = {key},
@@ -561,7 +561,7 @@
   chairperson = {Pribram, Karl H.},
 }
 
-@set{ICUS10:C05:G02,
+@Set{ICUS10:C05:G02,
   entryset = {ICUS10:C05:G02:S01},
   pattern = {ICUS10:C05:G02:[S|X]},
   patterntype = {key},
@@ -570,19 +570,19 @@
   chairperson = {McGuinness, Diane},
 }
 
-@inproceedings{ICUS10:C05:G02:S01,
+@InProceedings{ICUS10:C05:G02:S01,
   crossref = {ICUS10},
   title = {Phenotypic 'windows' other than size in the evolution of the human brain},
   author = {Holloway, Ralph},
 }
 
-@inproceedings{ICUS10:C05:G02:S02,
+@InProceedings{ICUS10:C05:G02:S02,
   crossref = {ICUS10},
   title = {Comments on psychology and genetics from an anti-reductionist},
   author = {Scarr, Sandra},
 }
 
-@inproceedings{ICUS10:C05:G02:X03,
+@InProceedings{ICUS10:C05:G02:X03,
   crossref = {ICUS10},
   title = {General discussant {The Origins of Human Thought}},
   author = {Trivers, Robert},
@@ -591,7 +591,7 @@
 
 
 
-@set{ICUS10:C05:G03,
+@Set{ICUS10:C05:G03,
   entryset = {ICUS10:C05:G03:S01},
   pattern = {ICUS10:C05:G03:[S|X]},
   patterntype = {key},
@@ -600,25 +600,25 @@
   chairperson = {Bartley, William Warren III},
 }
 
-@inproceedings{ICUS10:C05:G03:S01,
+@InProceedings{ICUS10:C05:G03:S01,
   crossref = {ICUS10},
   title = {Wittgenstein and Popper},
   author = {Finch, Henry Le Roy},
 }
 
-@inproceedings{ICUS10:C05:G03:S02,
+@InProceedings{ICUS10:C05:G03:S02,
   crossref = {ICUS10},
   title = {Disappointment and changes in the conception of rationality: Wittgenstein and Popper},
   author = {Radnitzky, Gerard},
 }
 
-@inproceedings{ICUS10:C05:G03:S03,
+@InProceedings{ICUS10:C05:G03:S03,
   crossref = {ICUS10},
   title = {Transformation in philosophy through the teaching methods of Wittgenstein and Popper},
   author = {Munz, Peter},
 }
 
-@inproceedings{ICUS10:C05:G03:X04,
+@InProceedings{ICUS10:C05:G03:X04,
   crossref = {ICUS10},
   title = {General discussion {The Transformations of Philosophical Thought: Recent Contributions}},
   author = {Flew, Antony and Kim, Yersa and Bartley, William Warren III},
@@ -627,7 +627,7 @@
 
 
 
-@set{ICUS10:C05:G04,
+@Set{ICUS10:C05:G04,
   entryset = {ICUS10:C05:G04:S01},
   pattern = {ICUS10:C05:G04:[S|X]},
   patterntype = {key},
@@ -636,25 +636,25 @@
   chairperson = {Galantay, Ervin Y.},
 }
 
-@inproceedings{ICUS10:C05:G04:S01,
+@InProceedings{ICUS10:C05:G04:S01,
   crossref = {ICUS10},
   title = {Self-organization in spontaneous human settlements},
   author = {Ebenegger, Christian and Galantay, Ervin Y.},
 }
 
-@inproceedings{ICUS10:C05:G04:S02,
+@InProceedings{ICUS10:C05:G04:S02,
   crossref = {ICUS10},
   title = {Dynamics of interacting populations in society},
   author = {Weidlich, Wolfgang},
 }
 
-@inproceedings{ICUS10:C05:G04:S03,
+@InProceedings{ICUS10:C05:G04:S03,
   crossref = {ICUS10},
   title = {Quantum mechanics and irreversibility},
   author = {Sussmann, Georg},
 }
 
-@inproceedings{ICUS10:C05:G04:X01,
+@InProceedings{ICUS10:C05:G04:X01,
   crossref = {ICUS10},
   title = {General discussion {Transformation of Scientific Thought: Recent Contributions}},
   author = {Enz, Charles},
@@ -663,7 +663,7 @@
 
 
 
-@set{ICUS10:C05:G05,
+@Set{ICUS10:C05:G05,
   entryset = {ICUS10:C05:G05:S01},
   pattern = {ICUS10:C05:G05:[S|X]},
   patterntype = {key},
@@ -672,19 +672,19 @@
   chairperson = {Rauscher, Elizabeth A.},
 }
 
-@inproceedings{ICUS10:C05:G05:S01,
+@InProceedings{ICUS10:C05:G05:S01,
   crossref = {ICUS10},
   title = {Non-locality and localization: a review of the holographic hypothesis of brain function in perception and memory},
   author = {Pribram, Karl},
 }
 
-@inproceedings{ICUS10:C05:G05:S02,
+@InProceedings{ICUS10:C05:G05:S02,
   crossref = {ICUS10},
   title = {Conceptual changes in reality models from new discoveries in physics},
   author = {Hiley, Basil J.},
 }
 
-@inproceedings{ICUS10:C05:G05:X03,
+@InProceedings{ICUS10:C05:G05:X03,
   crossref = {ICUS10},
   title = {General discussion {The Future of Consciousness}},
   author = {Finkelstein, David and Rauscher, Elizabeth A.},
