--- a/inst/extdata/bibset-raw/icus11.bib
+++ b/inst/extdata/bibset-raw/icus11.bib
@@ -1,4 +1,4 @@
-@proceedings{ICUS11,
+@Proceedings{ICUS11,
   title = {The Search for Absolute Values and the Creation of the New World},
   titleaddon = {Eleventh International Conference on the Unity of the Sciences},
   shorttitle = {ICUS XI},
@@ -12,7 +12,7 @@
   keywords={primary, program, moonist}
 }
 
-@set{ICUS11:C01,
+@Set{ICUS11:C01,
   entryset = {ICUS11:C01},
   pattern = {ICUS11:C01:G\d\d:[S|X]},
   patterntype = {key},
@@ -21,7 +21,7 @@
   chairperson = {Rubenstein, Richard L.},
 }
 
-@set{ICUS11:C01:G01,
+@Set{ICUS11:C01:G01,
   entryset = {ICUS11:C01:G01:S01},
   pattern = {ICUS11:C01:G01:[S|X]},
   patterntype = {key},
@@ -30,25 +30,25 @@
   chairperson = {Henry, Jean},
 }
 
-@inproceedings{ICUS11:C01:G01:S01,
+@InProceedings{ICUS11:C01:G01:S01,
   crossref = {ICUS11},
   title = {Idealism and self-identity: nineteenth century Northeastern humor and the problem of American values},
   author = {Sloane, David E. E.},
 }
 
-@inproceedings{ICUS11:C01:G01:S02,
+@InProceedings{ICUS11:C01:G01:S02,
   crossref = {ICUS11},
   title = {Intellectuals and artists in the age of mass society: lessons from the fascist experience},
   author = {Cannistraro, Philip V.},
 }
 
-@inproceedings{ICUS11:C01:G01:S03,
+@InProceedings{ICUS11:C01:G01:S03,
   crossref = {ICUS11},
   title = {Art(s) and power(s) in our contemporary society},
   author = {Berger, René},
 }
 
-@inproceedings{ICUS11:C01:G01:X04,
+@InProceedings{ICUS11:C01:G01:X04,
   crossref = {ICUS11},
   title = {General discussion {Arts and Contemporary Society}},
   author = {Rubenstein, Betty Rogers and Cooper, James},
@@ -57,7 +57,7 @@
 
 
 
-@set{ICUS11:C01:G02,
+@Set{ICUS11:C01:G02,
   entryset = {ICUS11:C01:G02:S01},
   pattern = {ICUS11:C01:G02:[S|X]},
   patterntype = {key},
@@ -66,19 +66,19 @@
   chairperson = {Kim, Ilpyong J.},
 }
 
-@inproceedings{ICUS11:C01:G02:S01,
+@InProceedings{ICUS11:C01:G02:S01,
   crossref = {ICUS11},
   title = {Individual values in a complex technological society},
   author = {Suttmeier, Richard P.},
 }
 
-@inproceedings{ICUS11:C01:G02:S02,
+@InProceedings{ICUS11:C01:G02:S02,
   crossref = {ICUS11},
   title = {From agraria to industria: development for what/},
   author = {Park, Han Shik},
 }
 
-@inproceedings{ICUS11:C01:G02:X03,
+@InProceedings{ICUS11:C01:G02:X03,
   crossref = {ICUS11},
   title = {General discussion {Politics and Contemporary Society}},
   author = {Esposito, Bruce J. and Lovell, John P. and Huang, Sung Mo},
@@ -87,7 +87,7 @@
 
 
 
-@set{ICUS11:C01:G03,
+@Set{ICUS11:C01:G03,
   entryset = {ICUS11:C01:G03:S01},
   pattern = {ICUS11:C01:G03:[S|X]},
   patterntype = {key},
@@ -96,19 +96,19 @@
   chairperson = {Kliever, Lonnie D.},
 }
 
-@inproceedings{ICUS11:C01:G03:S01,
+@InProceedings{ICUS11:C01:G03:S01,
   crossref = {ICUS11},
   title = {Religion, global complexity, and the human condition},
   author = {Robertson, Roland},
 }
 
-@inproceedings{ICUS11:C01:G03:S02,
+@InProceedings{ICUS11:C01:G03:S02,
   crossref = {ICUS11},
   title = {Religious pluralism and social order},
   author = {Hammond, Phillip E.},
 }
 
-@inproceedings{ICUS11:C01:G03:S03,
+@InProceedings{ICUS11:C01:G03:S03,
   crossref = {ICUS11},
   title = {Modernization and the democratic ideal},
   author = {Rubenstein, Richard L.},
@@ -117,7 +117,7 @@
 
 
 
-@set{ICUS11:C02,
+@Set{ICUS11:C02,
   entryset = {ICUS11:C02},
   pattern = {ICUS11:C02:G\d\d:[S|X]},
   patterntype = {key},
@@ -126,7 +126,7 @@
   chairperson = {Ayres, Robert U.},
 }
 
-@set{ICUS11:C02:G01,
+@Set{ICUS11:C02:G01,
   entryset = {ICUS11:C02:G01:S01},
   pattern = {ICUS11:C02:G01:[S|X]},
   patterntype = {key},
@@ -135,20 +135,20 @@
   chairperson = {Kurti, Nicholas},
 }
 
-@inproceedings{ICUS11:C02:G01:S01,
+@InProceedings{ICUS11:C02:G01:S01,
   crossref = {ICUS11},
   title = {Natural resources scarcity in the 21st century? The role of technology},
   author = {Singer, S. Fred},
   commentator={Segre, Dan V.}
 }
 
-@inproceedings{ICUS11:C02:G01:S02,
+@InProceedings{ICUS11:C02:G01:S02,
   crossref = {ICUS11},
   title = {Making a living: patterns of trade},
   author = {Williamson, D. T. N.},
 }
 
-@inproceedings{ICUS11:C02:G01:S03,
+@InProceedings{ICUS11:C02:G01:S03,
   crossref = {ICUS11},
   title = {Panel discussion},
   author = {{El-Zaim}, Issam and King, Alexander and Silverman, Joseph and Howlett, Jack},
@@ -157,7 +157,7 @@
 
 
 
-@set{ICUS11:C02:G02,
+@Set{ICUS11:C02:G02,
   entryset = {ICUS11:C02:G02:S01},
   pattern = {ICUS11:C02:G02:[S|X]},
   patterntype = {key},
@@ -166,41 +166,41 @@
   chairperson = {Srinivasan, Mangalam},
 }
 
-@inproceedings{ICUS11:C02:G02:S01,
+@InProceedings{ICUS11:C02:G02:S01,
   crossref = {ICUS11},
   title = {Technology-related issues in the context of the North-South debate},
   author = {Adjangba, A. M.},
 }
 
-@inproceedings{ICUS11:C02:G02:S02,
+@InProceedings{ICUS11:C02:G02:S02,
   crossref = {ICUS11},
   title = {The relocation of industry on the American continent},
   author = {Wanderly, Milton de Barros},
 }
 
-@inproceedings{ICUS11:C02:G02:S03,
+@InProceedings{ICUS11:C02:G02:S03,
   crossref = {ICUS11},
   title = {Technology and development: issues and problems},
   author = {{Arungu-Olende}, Shem},
   commentator={}
 }
 
-@inproceedings{ICUS11:C02:G02:S04,
+@InProceedings{ICUS11:C02:G02:S04,
   crossref = {ICUS11},
   title = {Technology and science for development},
   author = {Rohatgi, Pradeep and Rohatgi, Kalpana},
   commentator={}
 }
 
-@inproceedings{ICUS11:C02:G02:S05,
+@InProceedings{ICUS11:C02:G02:S05,
   crossref = {ICUS11},
   title = {Panel discussion},
-  author = {Sivaraman, K. N. and Bhattacharyya, Asit Kumar and {de Silva}, Padmasiri},
+  author = {Sivaraman, K. N. and Bhattacharyya, Asit Kumar and Padmasiri {de Silva}},
 }
 
 
 
-@set{ICUS11:C02:G04,
+@Set{ICUS11:C02:G04,
   entryset = {ICUS11:C02:G04:S01},
   pattern = {ICUS11:C02:G04:[S|X]},
   patterntype = {key},
@@ -209,14 +209,14 @@
   chairperson = {Singer, S. Fred},
 }
 
-@inproceedings{ICUS11:C02:G04:S01,
+@InProceedings{ICUS11:C02:G04:S01,
   crossref = {ICUS11},
   title = {Should space be colonized?},
   author = {O'Leary, Brian T.},
   commentator={Meyer, Thomas and Srinivasan, Mangalam and Maruyama, Magoroh}
 }
 
-@inproceedings{ICUS11:C02:G04:S02,
+@InProceedings{ICUS11:C02:G04:S02,
   crossref = {ICUS11},
   title = {Can space be industrialized?},
   author = {Criswell, David R.},
@@ -226,7 +226,7 @@
 
 
 
-@set{ICUS11:C03,
+@Set{ICUS11:C03,
   entryset = {ICUS11:C03},
   pattern = {ICUS11:C03:G\d\d:[S|X]},
   patterntype = {key},
@@ -235,7 +235,7 @@
   chairperson = {{Villee Jr}, Claude A.},
 }
 
-@set{ICUS11:C03:G01,
+@Set{ICUS11:C03:G01,
   entryset = {ICUS11:C03:G01:S01},
   pattern = {ICUS11:C03:G01:[S|X]},
   patterntype = {key},
@@ -244,19 +244,19 @@
   chairperson = {Kono, Shigemi},
 }
 
-@inproceedings{ICUS11:C03:G01:S01,
+@InProceedings{ICUS11:C03:G01:S01,
   crossref = {ICUS11},
   title = {Feeding the world's increasing population},
   author = {Mellanby, Kenneth},
 }
 
-@inproceedings{ICUS11:C03:G01:S02,
+@InProceedings{ICUS11:C03:G01:S02,
   crossref = {ICUS11},
   title = {How to persuade governments to pursue population control policy},
   author = {Samarawickrama, Gervin P.},
 }
 
-@inproceedings{ICUS11:C03:G01:S03,
+@InProceedings{ICUS11:C03:G01:S03,
   crossref = {ICUS11},
   title = {Panel discussion},
   author = {Johnson, B. Connor and Fraser, Stewart E. and Stanhill, Gerald and Sukhatme, P. V. and Lim, Ung-Kyu},
@@ -265,7 +265,7 @@
 
 
 
-@set{ICUS11:C03:G03,
+@Set{ICUS11:C03:G03,
   entryset = {ICUS11:C03:G03:S01},
   pattern = {ICUS11:C03:G03:[S|X]},
   patterntype = {key},
@@ -274,14 +274,14 @@
   chairperson = {Seitelberger, Franz},
 }
 
-@inproceedings{ICUS11:C03:G03:S01,
+@InProceedings{ICUS11:C03:G03:S01,
   crossref = {ICUS11},
   title = {General biology of ageing},
   author = {Strehler, Bernhard L.},
   commentator={Hofecker, Gerhard}
 }
 
-@inproceedings{ICUS11:C03:G03:S02,
+@InProceedings{ICUS11:C03:G03:S02,
   crossref = {ICUS11},
   title = {Ageing - a developmental process},
   author = {Seitelberger, Franz},
@@ -291,7 +291,7 @@
 
 
 
-@set{ICUS11:C03:G04,
+@Set{ICUS11:C03:G04,
   entryset = {ICUS11:C03:G04:S01},
   pattern = {ICUS11:C03:G04:[S|X]},
   patterntype = {key},
@@ -300,14 +300,14 @@
   chairperson = {Zapotoczky, Klaus},
 }
 
-@inproceedings{ICUS11:C03:G04:S01,
+@InProceedings{ICUS11:C03:G04:S01,
   crossref = {ICUS11},
   title = {Total management of health care for the aged},
   author = {Fujiwara, Kikuo},
   commentator={Harant, Zdena}
 }
 
-@inproceedings{ICUS11:C03:G04:S02,
+@InProceedings{ICUS11:C03:G04:S02,
   crossref = {ICUS11},
   title = {The aged in post-affluent society},
   author = {Rosow, Irving},
@@ -317,7 +317,7 @@
 
 
 
-@set{ICUS11:C04,
+@Set{ICUS11:C04,
   entryset = {ICUS11:C04},
   pattern = {ICUS11:C04:G\d\d:[S|X]},
   patterntype = {key},
@@ -326,7 +326,7 @@
   chairperson = {Radnitzky, Gerard},
 }
 
-@set{ICUS11:C04:G02,
+@Set{ICUS11:C04:G02,
   entryset = {ICUS11:C04:G02:S01},
   pattern = {ICUS11:C04:G02:[S|X]},
   patterntype = {key},
@@ -335,25 +335,25 @@
   chairperson = {Munz, Peter},
 }
 
-@inproceedings{ICUS11:C04:G02:S01,
+@InProceedings{ICUS11:C04:G02:S01,
   crossref = {ICUS11},
   title = {On supposed circularities in an empirically oriented epistemology},
   author = {Vollmer, Gerhard},
 }
 
-@inproceedings{ICUS11:C04:G02:S02,
+@InProceedings{ICUS11:C04:G02:S02,
   crossref = {ICUS11},
   title = {The challenge of evolutionary epistemology},
   author = {Bartley, William Warren III},
 }
 
-@inproceedings{ICUS11:C04:G02:S03,
+@InProceedings{ICUS11:C04:G02:S03,
   crossref = {ICUS11},
   title = {Evolutionary epistemology, objective knowledge, and rationality: the evolutionary approach in man's search for himself},
   author = {Wuketits, Franz M.},
 }
 
-@inproceedings{ICUS11:C04:G02:S04,
+@InProceedings{ICUS11:C04:G02:S04,
   crossref = {ICUS11},
   title = {Panel discussion},
   author = {O'Hear, Anthony and Kanitscheider, Bernulf and Biando, Rosaria Egidi and Lowenhard, Percy and Kaspar, Robert},
@@ -362,7 +362,7 @@
 
 
 
-@set{ICUS11:C04:G03,
+@Set{ICUS11:C04:G03,
   entryset = {ICUS11:C04:G03:S01},
   pattern = {ICUS11:C04:G03:[S|X]},
   patterntype = {key},
@@ -371,25 +371,25 @@
   chairperson = {Dobriansky, Lev E.},
 }
 
-@inproceedings{ICUS11:C04:G03:S01,
+@InProceedings{ICUS11:C04:G03:S01,
   crossref = {ICUS11},
   title = {The concept of rationality},
   author = {Kaplan, Morton A.},
 }
 
-@inproceedings{ICUS11:C04:G03:S02,
+@InProceedings{ICUS11:C04:G03:S02,
   crossref = {ICUS11},
   title = {Problems in the concept of economic rationality},
   author = {Hardin, Russell},
 }
 
-@inproceedings{ICUS11:C04:G03:S03,
+@InProceedings{ICUS11:C04:G03:S03,
   crossref = {ICUS11},
   title = {The rational choice model in sociology: a promise of progress?},
   author = {Opp, Karl-Dieter},
 }
 
-@inproceedings{ICUS11:C04:G03:S04,
+@InProceedings{ICUS11:C04:G03:S04,
   crossref = {ICUS11},
   title = {Panel discussion},
   author = {Cassel, Dieter and Koford, Kenneth and Schmidt, Christian and Block, Walter and Moldofsky, Naomi},
@@ -399,7 +399,7 @@
 
 
 
-@set{ICUS11:C04:G04,
+@Set{ICUS11:C04:G04,
   entryset = {ICUS11:C04:G04:S01},
   pattern = {ICUS11:C04:G04:[S|X]},
   patterntype = {key},
@@ -408,32 +408,32 @@
   chairperson = {Bartley, William Warren III},
 }
 
-@inproceedings{ICUS11:C04:G04:S01,
+@InProceedings{ICUS11:C04:G04:S01,
   crossref = {ICUS11},
   title = {Must naturalism discredit naturalism?},
   author = {Flew, Antony},
   commentator={Hübner, Adolf and Petroni, Angelo Maria and Sawade, Nobusige}
 }
 
-@inproceedings{ICUS11:C04:G04:S02,
+@InProceedings{ICUS11:C04:G04:S02,
   crossref = {ICUS11},
   title = {A Gödelian theorm for theories of rationality},
   author = {Post, John F.},
 }
 
-@inproceedings{ICUS11:C04:G04:S03,
+@InProceedings{ICUS11:C04:G04:S03,
   crossref = {ICUS11},
   title = {What has become of CCR?},
   author = {Watkins, J. W. N.},
 }
 
-@inproceedings{ICUS11:C04:G04:S04,
+@InProceedings{ICUS11:C04:G04:S04,
   crossref = {ICUS11},
   title = {In defense of self-applicable critical rationalism},
   author = {Radnitzky, Gerard},
 }
 
-@inproceedings{ICUS11:C04:G04:S05,
+@InProceedings{ICUS11:C04:G04:S05,
   crossref = {ICUS11},
   title = {Panel discussion},
   author = {Weimer, Walter B. and Bartley, William Warren III and Hattiangadi, Jagdish},
@@ -442,7 +442,7 @@
 
 
 
-@set{ICUS11:C05,
+@Set{ICUS11:C05,
   entryset = {ICUS11:C05},
   pattern = {ICUS11:C05:G\d\d:[S|X]},
   patterntype = {key},
@@ -451,7 +451,7 @@
   chairperson = {Pribram, Karl H.},
 }
 
-@set{ICUS11:C05:G01,
+@Set{ICUS11:C05:G01,
   entryset = {ICUS11:C05:G01:S01},
   pattern = {ICUS11:C05:G01:[S|X]},
   patterntype = {key},
@@ -460,25 +460,25 @@
   chairperson = {Scarr, Sandra},
 }
 
-@inproceedings{ICUS11:C05:G01:S01,
+@InProceedings{ICUS11:C05:G01:S01,
   crossref = {ICUS11},
   title = {The evolution of a sense of fairness},
   author = {Trivers, Robert},
 }
 
-@inproceedings{ICUS11:C05:G01:S02,
+@InProceedings{ICUS11:C05:G01:S02,
   crossref = {ICUS11},
   title = {What biology cannot tell us about ethics},
   author = {Settle, Tom},
 }
 
-@inproceedings{ICUS11:C05:G01:S03,
+@InProceedings{ICUS11:C05:G01:S03,
   crossref = {ICUS11},
   title = {Moral evolution through moral development},
   author = {Berndt, Thomas J.},
 }
 
-@inproceedings{ICUS11:C05:G01:S04,
+@InProceedings{ICUS11:C05:G01:S04,
   crossref = {ICUS11},
   title = {Panel discussion},
   author = {Hahn, Sung Joe K. S.},
@@ -487,7 +487,7 @@
 
 
 
-@set{ICUS11:C05:G02,
+@Set{ICUS11:C05:G02,
   entryset = {ICUS11:C05:G02:S01},
   pattern = {ICUS11:C05:G02:[S|X]},
   patterntype = {key},
@@ -496,19 +496,19 @@
   chairperson = {McGuinness, Diane},
 }
 
-@inproceedings{ICUS11:C05:G02:S01,
+@InProceedings{ICUS11:C05:G02:S01,
   crossref = {ICUS11},
   title = {Evolution of the juvenile period of the human life cycle},
   author = {Lancaster, Jane B.},
 }
 
-@inproceedings{ICUS11:C05:G02:S01,
+@InProceedings{ICUS11:C05:G02:S01,
   crossref = {ICUS11},
   title = {The evaluation of human social systems},
   author = {Lancaster, Chet S.},
 }
 
-@inproceedings{ICUS11:C05:G02:S01,
+@InProceedings{ICUS11:C05:G02:S01,
   crossref = {ICUS11},
   title = {Panel discussion},
   author = {Reynolds, Peter and Holloway, Ralph L. and Cohen, Mark N. and {Hess-Haeser}, Jorg and Shepher, Joseph and Scarr, Sandra},
@@ -517,7 +517,7 @@
 
 
 
-@set{ICUS11:C05:G03,
+@Set{ICUS11:C05:G03,
   entryset = {ICUS11:C05:G03:S01},
   pattern = {ICUS11:C05:G03:[S|X]},
   patterntype = {key},
@@ -526,25 +526,25 @@
   chairperson = {Fukuda, Nobuyuki},
 }
 
-@inproceedings{ICUS11:C05:G03:S01,
+@InProceedings{ICUS11:C05:G03:S01,
   crossref = {ICUS11},
   title = {The limitations of determinism},
   author = {Wigner, Eugene P.},
 }
 
-@inproceedings{ICUS11:C05:G03:S02,
+@InProceedings{ICUS11:C05:G03:S02,
   crossref = {ICUS11},
   title = {Some insights into quantum physics and the organization of conscious processes},
   author = {Stapp, Henry},
 }
 
-@inproceedings{ICUS11:C05:G03:S03,
+@InProceedings{ICUS11:C05:G03:S03,
   crossref = {ICUS11},
   title = {Brain and the new physics},
   author = {Pribram, Karl H.},
 }
 
-@inproceedings{ICUS11:C05:G03:S04,
+@InProceedings{ICUS11:C05:G03:S04,
   crossref = {ICUS11},
   title = {General discussion},
   author = {Jammer, Max},
@@ -552,7 +552,7 @@
 
 
 
-@set{ICUS11:C05:G04,
+@Set{ICUS11:C05:G04,
   entryset = {ICUS11:C05:G04:S01},
   pattern = {ICUS11:C05:G04:[S|X]},
   patterntype = {key},
@@ -561,32 +561,32 @@
   chairperson = {Rauscher, Elizabeth A.},
 }
 
-@inproceedings{ICUS11:C05:G04:S01,
+@InProceedings{ICUS11:C05:G04:S01,
   crossref = {ICUS11},
   title = {Microtubules and resonances},
   author = {Hameroff, Stuart R.},
 }
 
-@inproceedings{ICUS11:C05:G04:S02,
+@InProceedings{ICUS11:C05:G04:S02,
   crossref = {ICUS11},
   title = {Remote connectedness in complex geometries and its application to the nature of the human mind},
   author = {Ramon, Ceon},
 }
 
-@inproceedings{ICUS11:C05:G04:S03,
+@InProceedings{ICUS11:C05:G04:S03,
   crossref = {ICUS11},
   title = {Theoretical \& experimental exploration of the remote perception phenomena},
   author = {Rauscher, Elizabeth A.},
 }
 
-@inproceedings{ICUS11:C05:G04:S04,
+@InProceedings{ICUS11:C05:G04:S04,
   crossref = {ICUS11},
   title = {General discussion},
   author = {Charon, Jean E.},
 }
 
 
-@set{ICUS11:C06:G01,
+@Set{ICUS11:C06:G01,
   entryset = {ICUS11:C06:G01:S01},
   pattern = {ICUS11:C06:G01:[S|X]},
   patterntype = {key},
@@ -595,7 +595,7 @@
   moderator = {{Ben-Dak}, Joseph},
 }
 
-@inproceedings{ICUS11:C06:G01:S01,
+@InProceedings{ICUS11:C06:G01:S01,
   crossref = {ICUS11},
   title = {The Anatomy of Peace},
   author = {Puri, Gopal S.},
@@ -603,7 +603,7 @@
 }
 
 
-@set{ICUS11:C06:G02,
+@Set{ICUS11:C06:G02,
   entryset = {ICUS11:C06:G02:S01},
   pattern = {ICUS11:C06:G02:[S|X]},
   patterntype = {key},
@@ -612,7 +612,7 @@
   moderator = {Pincheira, Guido},
 }
 
-@inproceedings{ICUS11:C06:G02:S01,
+@InProceedings{ICUS11:C06:G02:S01,
   crossref = {ICUS11},
   title = {The Possibilities of Nutrition Intervention in Latin America},
   author = {Monckeberg, Fernando},
@@ -620,7 +620,7 @@
 }
 
 
-@set{ICUS11:C06:G03,
+@Set{ICUS11:C06:G03,
   entryset = {ICUS11:C06:G03:S01},
   pattern = {ICUS11:C06:G03:[S|X]},
   patterntype = {key},
@@ -629,7 +629,7 @@
   moderator = {Skolimowski, Henryk},
 }
 
-@inproceedings{ICUS11:C06:G03:S01,
+@InProceedings{ICUS11:C06:G03:S01,
   crossref = {ICUS11},
   title = {Organization of Matter: Is It an Accident or a Scheme?},
   author = {Ali, M. Shamsar},
@@ -647,7 +647,7 @@
 }
 
 
-@set{ICUS11:C06:G04,
+@Set{ICUS11:C06:G04,
   entryset = {ICUS11:C06:G04:S01},
   pattern = {ICUS11:C06:G04:[S|X]},
   patterntype = {key},
@@ -656,7 +656,7 @@
   moderator = {Wescott, Hilja B.},
 }
 
-@inproceedings{ICUS11:C06:G04:S01,
+@InProceedings{ICUS11:C06:G04:S01,
   crossref = {ICUS11},
   title = {Family: Past, Present, Future},
   author = {Bettis, Lynne Masland},
@@ -664,7 +664,7 @@
 }
 
 
-@set{ICUS11:C06:G05,
+@Set{ICUS11:C06:G05,
   entryset = {ICUS11:C06:G05:S01},
   pattern = {ICUS11:C06:G05:[S|X]},
   patterntype = {key},
@@ -673,7 +673,7 @@
   moderator = {Leighton, Gerald S.},
 }
 
-@inproceedings{ICUS11:C06:G05:S01,
+@InProceedings{ICUS11:C06:G05:S01,
   crossref = {ICUS11},
   title = {The Search for Values in Public Administration},
   author = {Harmon, Michael M.},
