--- a/inst/extdata/bibset-raw/icus12.bib
+++ b/inst/extdata/bibset-raw/icus12.bib
@@ -1,4 +1,4 @@
-@proceedings{ICUS12,
+@Proceedings{ICUS12,
   title = {Absolute Values and the New Cultural Revolution},
   titleaddon = {Twelfth International Conference on the Unity of the Sciences},
   shorttitle = {ICUS XII},
@@ -12,49 +12,49 @@
   keywords={primary, program, moonist}
 }
 
-@inproceedings{ICUS12:P01,
+@InProceedings{ICUS12:P01,
   crossref = {ICUS12},
   title = {Welcoming Remarks},
   author = {Salonen, Neil Albert},
 }
 
-@inproceedings{ICUS12:P02,
+@InProceedings{ICUS12:P02,
   crossref = {ICUS12},
   title = {Moderator's Remarks},
   author = {Sontag, Frederick},
 }
 
-@inproceedings{ICUS12:P03,
+@InProceedings{ICUS12:P03,
   crossref = {ICUS12},
   title = {Introduction to the Founder},
   author = {Rubenstein, Richard L.},
 }
 
-@inproceedings{ICUS12:P04,
+@InProceedings{ICUS12:P04,
   crossref = {ICUS12},
   title = {Founder's Address},
   author = {Moon, Sun Myung},
 }
 
-@inproceedings{ICUS12:P05,
+@InProceedings{ICUS12:P05,
   crossref = {ICUS12},
   title = {Honorary Chairman's Statement},
   author = {Wigner, Eugene P.},
 }
 
-@inproceedings{ICUS12:P06,
+@InProceedings{ICUS12:P06,
   crossref = {ICUS12},
   title = {Organizing Chairman's Statement},
   author = {Kaplan, Morton A.},
 }
 
-@inproceedings{ICUS12:P07,
+@InProceedings{ICUS12:P07,
   crossref = {ICUS12},
   title = {Vice-Chairman's Remarks},
   author = {Weinberg, Alvin M.},
 }
 
-@inproceedings{ICUS12:P08,
+@InProceedings{ICUS12:P08,
   crossref = {ICUS12},
   title = {The Origins \& Effects of Our Morals: A Problem for Science},
   author = {Hayek, Frederick A.},
@@ -78,21 +78,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS12:C01:G01:S01,
+@InProceedings{ICUS12:C01:G01:S01,
   crossref = {ICUS12},
   title = {The unity of science and the dubious credentials of positivism},
   author = {Munz, Peter},
   commentator = {Kim, Yersu and Sussman, Georg},
 }
 
-@inproceedings{ICUS12:C01:G01:S02,
+@InProceedings{ICUS12:C01:G01:S02,
   crossref = {ICUS12},
   title = {Unity and the history of science},
   author = {Cappelletti, Vincenzo},
   commentator = {Blackmore, John and Sass, Hans-Martin},
 }
 
-@inproceedings{ICUS12:C01:G01:S03,
+@InProceedings{ICUS12:C01:G01:S03,
   crossref = {ICUS12},
   title = {The division of knowledge},
   author = {Bartley, William Warren III},
@@ -111,21 +111,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS12:C01:G02:S01,
+@InProceedings{ICUS12:C01:G02:S01,
   crossref = {ICUS12},
   title = {Three views concerning the unity of science},
   author = {Briskman, Laurence},
   commentator = {Koertge, Norretta},
 }
 
-@inproceedings{ICUS12:C01:G02:S02,
+@InProceedings{ICUS12:C01:G02:S02,
   crossref = {ICUS12},
   title = {The problem of the unity of physics},
   author = {Jammer, Max},
   commentator = {Kakihana, Hidetake and Kanitscheider, Bernulf and Schopper, Erwin},
 }
 
-@inproceedings{ICUS12:C01:G02:S03,
+@InProceedings{ICUS12:C01:G02:S03,
   crossref = {ICUS12},
   title = {The unity of science in an evolutionary perspective},
   author = {Vollmer, Gerhard},
@@ -144,21 +144,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS12:C01:G03:S01,
+@InProceedings{ICUS12:C01:G03:S01,
   crossref = {ICUS12},
   title = {The idea of a spontaneous order and the unity of the sciences},
   author = {Gray, John N.},
   commentator = {Flew, Antony and Lepage, Henri},
 }
 
-@inproceedings{ICUS12:C01:G03:S02,
+@InProceedings{ICUS12:C01:G03:S02,
   crossref = {ICUS12},
   title = {Spontaneously ordered complex phenomena and the unity of the moral sciences},
   author = {Weimer, Walter B.},
   commentator = {Castaneda, Hector-Neri and Garrido, Manuel},
 }
 
-@inproceedings{ICUS12:C01:G03:S03,
+@InProceedings{ICUS12:C01:G03:S03,
   crossref = {ICUS12},
   title = {The unification of science through the economic approach - fact or fiction?},
   author = {Moldosfsky, Naomi},
@@ -187,21 +187,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS12:C02:G01:S01,
+@InProceedings{ICUS12:C02:G01:S01,
   crossref = {ICUS12},
   title = {Education, national identity, and the language of African development},
   author = {Owusu, Maxwell K.},
   commentator = {Mfoulou, Jean and Elahwal, Abdul Karim A.},
 }
 
-@inproceedings{ICUS12:C02:G01:S02,
+@InProceedings{ICUS12:C02:G01:S02,
   crossref = {ICUS12},
   title = {Education, economic mobility and family relationships in Africa},
   author = {Skinner, Elliott P.},
   commentator = {James, Abraham L. and {Niangoran-Bouah}, Georges},
 }
 
-@inproceedings{ICUS12:C02:G01:S03,
+@InProceedings{ICUS12:C02:G01:S03,
   crossref = {ICUS12},
   title = {The humanities and the criterion of relevance},
   author = {Johnson, Lemuel A.},
@@ -220,28 +220,28 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS12:C02:G02:S01,
+@InProceedings{ICUS12:C02:G02:S01,
   crossref = {ICUS12},
   title = {Education and politics},
   author = {Okoli, F. Ekueme},
   commentator = {Mazrui, Ali A. and Ndeti, Kivuto},
 }
 
-@inproceedings{ICUS12:C02:G02:S02,
+@InProceedings{ICUS12:C02:G02:S02,
   crossref = {ICUS12},
   title = {Education and the public media},
   author = {Masmoudi, Mustafa},
   commentator = {Benaboud, El Mehdi and Randolph, Yaovi},
 }
 
-@inproceedings{ICUS12:C02:G02:S03,
+@InProceedings{ICUS12:C02:G02:S03,
   crossref = {ICUS12},
   title = {Education in the development of endogenous science and technology},
   author = {Njock, G. Edward},
   commentator = {Bhiday, M. R. and Zapotoczky, Klaus},
 }
 
-@inproceedings{ICUS12:C02:G02:S04,
+@InProceedings{ICUS12:C02:G02:S04,
   crossref = {ICUS12},
   title = {Education and moral and ethical values},
   author = {{Byaruhanga-Akiiki}, A. B. T.},
@@ -260,21 +260,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS12:C02:G03:S01,
+@InProceedings{ICUS12:C02:G03:S01,
   crossref = {ICUS12},
   title = {Regional cooperation in higher education in Africa: problems and prospects},
   author = {Mehretu, Assefa},
   commentator = {Adjangba, A. M. and Okatcha, Frederick M.},
 }
 
-@inproceedings{ICUS12:C02:G03:S02,
+@InProceedings{ICUS12:C02:G03:S02,
   crossref = {ICUS12},
   title = {Education and social justice},
   author = {Ajayi, J. F. Ade},
   commentator = {Bopape, Moses and Sodipo, John O.},
 }
 
-@inproceedings{ICUS12:C02:G03:S03,
+@InProceedings{ICUS12:C02:G03:S03,
   crossref = {ICUS12},
   title = {Higher education in African transformation},
   author = {Wagaw, Teshome G.},
@@ -302,21 +302,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS12:C03:G01:S01,
+@InProceedings{ICUS12:C03:G01:S01,
   crossref = {ICUS12},
   title = {Science and technology: blessing or curse to the arts?},
   author = {Kurti, Nicholas},
   commentator = {Phillips, N. J.},
 }
 
-@inproceedings{ICUS12:C03:G01:S02,
+@InProceedings{ICUS12:C03:G01:S02,
   crossref = {ICUS12},
   title = {The city: organism or artifact?},
   author = {Galantay, Ervin Y.},
   commentator = {Ho, Tao and Kunckel, Dietrich and Yura, Shigeru},
 }
 
-@inproceedings{ICUS12:C03:G01:S03,
+@InProceedings{ICUS12:C03:G01:S03,
   crossref = {ICUS12},
   title = {Reel to real: the cinema as technological co-reality},
   author = {Rouve, Pierre},
@@ -335,28 +335,28 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS12:C03:G02:S01,
+@InProceedings{ICUS12:C03:G02:S01,
   crossref = {ICUS12},
   title = {Music and technology today},
   author = {Charles, Daniel},
   commentator = {Maceda, Jose and Yamamoto, Nobuhito},
 }
 
-@inproceedings{ICUS12:C03:G02:S02,
+@InProceedings{ICUS12:C03:G02:S02,
   crossref = {ICUS12},
   title = {Television and art: television as art},
   author = {Stephane, Robert},
   commentator = {Martelanc, Tomo and Won, Woo Hyun},
 }
 
-@inproceedings{ICUS12:C03:G02:S03,
+@InProceedings{ICUS12:C03:G02:S03,
   crossref = {ICUS12},
   title = {The way toward visual culture: comics and comic films},
   author = {Silbermann, Alfonso},
   commentator = {Knilli, Friedrich and Nutz, Walter},
 }
 
-@inproceedings{ICUS12:C03:G02:S04,
+@InProceedings{ICUS12:C03:G02:S04,
   crossref = {ICUS12},
   title = {Social aspects of computer art},
   author = {Moles, Abraham},
@@ -375,20 +375,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS12:C03:G03:S01,
+@InProceedings{ICUS12:C03:G03:S01,
   crossref = {ICUS12},
   title = {The challenge of video art},
   author = {Berger, René},
   commentator = {Paradis, Andree and Pohl, Frederick},
 }
-@inproceedings{ICUS12:C03:G03:S02,
+@InProceedings{ICUS12:C03:G03:S02,
   crossref = {ICUS12},
   title = {Art and technology in the future},
   author = {Maruyama, Magoroh},
   commentator = {Rand, George and Berleant, Arnold},
 }
 
-@inproceedings{ICUS12:C03:G03:S03,
+@InProceedings{ICUS12:C03:G03:S03,
   crossref = {ICUS12},
   title = {General discussion {Art and Technology}},
   author = {Skolimowski, Henryk and Soleri, Paolo},
@@ -414,28 +414,28 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS12:C04:G01:S01,
+@InProceedings{ICUS12:C04:G01:S01,
   crossref = {ICUS12},
   title = {Economic development in South Korea},
   author = {Kuznets, Paul W.},
   commentator = {Kim, Ung Soo and Koo, Bon Ho},
 }
 
-@inproceedings{ICUS12:C04:G01:S02,
+@InProceedings{ICUS12:C04:G01:S02,
   crossref = {ICUS12},
   title = {Economic development of Taiwan (1950-1980)},
   author = {Fei, John C. H.},
   commentator = {Hsiung, James C. and Yamazawa, Ippei},
 }
 
-@inproceedings{ICUS12:C04:G01:S03,
+@InProceedings{ICUS12:C04:G01:S03,
   crossref = {ICUS12},
   title = {Indonesia's new order, pancasila, and development},
   author = {Greif, Stuart William},
   commentator = {Bey, Arifin and Nianggolan, S. C.},
 }
 
-@inproceedings{ICUS12:C04:G01:S04,
+@InProceedings{ICUS12:C04:G01:S04,
   crossref = {ICUS12},
   title = {Economic development in Hong Kong and Singapore},
   author = {Klein, Sidney},
@@ -454,21 +454,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS12:C04:G02:S01,
+@InProceedings{ICUS12:C04:G02:S01,
   crossref = {ICUS12},
   title = {Stagnation and development in Argentina},
   author = {Catterberg, Edgardo},
   commentator = {Dagum, Camilo},
 }
 
-@inproceedings{ICUS12:C04:G02:S02,
+@InProceedings{ICUS12:C04:G02:S02,
   crossref = {ICUS12},
   title = {Development strategies in Chile, 1964-1983: the lessons of failure},
   author = {Sigmund, Paul E.},
   commentator = {Fukuchi, Takao and Torre, Armando de la},
 }
 
-@inproceedings{ICUS12:C04:G02:S03,
+@InProceedings{ICUS12:C04:G02:S03,
   crossref = {ICUS12},
   title = {Expansion of the economic frontier: Paraguayan growth in the 1970s},
   author = {Baer, Werner and Birch, Melissa H.},
@@ -487,7 +487,7 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS12:C04:G03:S01,
+@InProceedings{ICUS12:C04:G03:S01,
   crossref = {ICUS12},
   title = {The study of development in the 1980s},
   author = {Turner, Frederick C.},
@@ -515,14 +515,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS12:C05:G01:S01,
+@InProceedings{ICUS12:C05:G01:S01,
   crossref = {ICUS12},
   title = {Some aspects of aggression and reassurance in Macaques},
   author = {Angst, Walter},
   commentator = {Delgado, Jose M. R. and {Lopez-Mendoza}, Diane},
 }
 
-@inproceedings{ICUS12:C05:G01:S02,
+@InProceedings{ICUS12:C05:G01:S02,
   crossref = {ICUS12},
   title = {Inequality versus equality for coexistence in primate societies},
   author = {Itani, Junichiro},
@@ -541,28 +541,28 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS12:C05:G02:S01,
+@InProceedings{ICUS12:C05:G02:S01,
   crossref = {ICUS12},
   title = {Form and intention in East African strategies of dominance and aggression},
   author = {Galaty, John G.},
   commentator = {Clesse, Armand},
 }
 
-@inproceedings{ICUS12:C05:G02:S02,
+@InProceedings{ICUS12:C05:G02:S02,
   crossref = {ICUS12},
   title = {Warfare in the New Guinea Highlands: theory and ethnography in conflict},
   author = {Lipuma, Edward},
   commentator = {Kang, Shin Pyo},
 }
 
-@inproceedings{ICUS12:C05:G02:S03,
+@InProceedings{ICUS12:C05:G02:S03,
   crossref = {ICUS12},
   title = {Lethal dance},
   author = {Meltzoff, Sarah Keene},
   commentator = {Lancaster, Chet S.},
 }
 
-@inproceedings{ICUS12:C05:G02:S04,
+@InProceedings{ICUS12:C05:G02:S04,
   crossref = {ICUS12},
   title = {Dominance systems among primate adolescents},
   author = {{Savin-Williams}, Ritch C.},
@@ -581,19 +581,19 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS12:C05:G03:S01,
+@InProceedings{ICUS12:C05:G03:S01,
   crossref = {ICUS12},
   title = {Dominance},
   author = {Moyer, Kenneth E.},
 }
 
-@inproceedings{ICUS12:C05:G03:S02,
+@InProceedings{ICUS12:C05:G03:S02,
   crossref = {ICUS12},
   title = {Competing models of hierarchy: animal intellect and human instinct},
   author = {Reynolds, Peter C.},
 }
 
-@inproceedings{ICUS12:C05:G03:S03,
+@InProceedings{ICUS12:C05:G03:S03,
   crossref = {ICUS12},
   title = {Aggression and dominance systems: some comments},
   author = {Schellenberg, James A.},
@@ -620,21 +620,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS12:C06:G01:S01,
+@InProceedings{ICUS12:C06:G01:S01,
   crossref = {ICUS12},
   title = {Carbon dioxide and climate change: implications for mankind's future},
   author = {Kellogg, William W.},
   commentator = {Ellsaesser, Hugh W. and Kondo, Jiro},
 }
 
-@inproceedings{ICUS12:C06:G01:S02,
+@InProceedings{ICUS12:C06:G01:S02,
   crossref = {ICUS12},
   title = {Methane in the atmosphere},
   author = {Cicerone, Ralph J.},
   commentator = {Watanuki, Kunihiko},
 }
 
-@inproceedings{ICUS12:C06:G01:S03,
+@InProceedings{ICUS12:C06:G01:S03,
   crossref = {ICUS12},
   title = {Mankind's effect on stratospheric ozone},
   author = {Rowland, F. Sherwood},
@@ -653,21 +653,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS12:C06:G02:S01,
+@InProceedings{ICUS12:C06:G02:S01,
   crossref = {ICUS12},
   title = {Acid rain},
   author = {Mellanby, Kenneth},
   commentator = {Everett, A. Gordon and Piccard, Jacques},
 }
 
-@inproceedings{ICUS12:C06:G02:S02,
+@InProceedings{ICUS12:C06:G02:S02,
   crossref = {ICUS12},
   title = {Worldwide pollution of the oceans},
   author = {Park, P. Kilho},
   commentator = {Norton, Michael G.},
 }
 
-@inproceedings{ICUS12:C06:G02:X03,
+@InProceedings{ICUS12:C06:G02:X03,
   crossref = {ICUS12},
   title = {World water problems: desertification},
   author = {Stanhill, Gerald},
@@ -686,28 +686,28 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS12:C06:G03:S01,
+@InProceedings{ICUS12:C06:G03:S01,
   crossref = {ICUS12},
   title = {Enhancement of precipitation via sea mixing},
   author = {Assaf, Gad},
   commentator = {Serruya, Collette},
 }
 
-@inproceedings{ICUS12:C06:G03:S02,
+@InProceedings{ICUS12:C06:G03:S02,
   crossref = {ICUS12},
   title = {Global effects of meteorite impacts and vulcanism},
   author = {Lal, Devendra},
   commentator = {Goodell, H. Grant and Lacis, Andrew},
 }
 
-@inproceedings{ICUS12:C06:G03:S03,
+@InProceedings{ICUS12:C06:G03:S03,
   crossref = {ICUS12},
   title = {The gaia hypothesis: mechanisms and tests},
   author = {Watson, Andrew J.},
   commentator = {Hayden, Bruce and Lerman, Abraham},
 }
 
-@inproceedings{ICUS12:C06:G03:X04,
+@InProceedings{ICUS12:C06:G03:X04,
   crossref = {ICUS12},
   title = {General discussion {Global Environmental Problems}},
   author = {Ayres, Robert U. and Lyttleton, R. A. and Shim, Chong Supp and Soffen, Gerald A. and {Villee Jr}, Claude A. and Wittwer, Sylvan H.},
