--- a/inst/extdata/bibset-raw/icus13.bib
+++ b/inst/extdata/bibset-raw/icus13.bib
@@ -1,4 +1,4 @@
-@proceedings{ICUS13,
+@Proceedings{ICUS13,
   title = {Absolute Values and the New Cultural Revolution},
   titleaddon = {Thirteenth International Conference on the Unity of the Sciences},
   shorttitle = {ICUS XIII},
@@ -12,19 +12,19 @@
   keywords={primary, program, moonist}
 }
 
-@inproceedings{ICUS13:P01,
+@InProceedings{ICUS13:P01,
   crossref = {ICUS13},
   title = {Values in Science},
   author = {Weinberg, Alvin M.},
 }
 
-@inproceedings{ICUS13:P02,
+@InProceedings{ICUS13:P02,
   crossref = {ICUS13},
   title = {Unity of the Sciences},
   author = {Wigner, Eugene P.},
 }
 
-@set{ICUS13:C01,
+@Set{ICUS13:C01,
   entryset = {ICUS13:C01},
   pattern = {ICUS13:C01:G\d\d:[S|X]},
   patterntype = {key},
@@ -33,7 +33,7 @@
   chairperson = {Weinberg, Alvin M. and Radnitzky, Gerard},
 }
 
-@set{ICUS13:C01:G01,
+@Set{ICUS13:C01:G01,
   entryset = {ICUS13:C01:G01:S01},
   pattern = {ICUS13:C01:G01:[S|X]},
   patterntype = {key},
@@ -42,21 +42,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C01:G01:S01,
+@InProceedings{ICUS13:C01:G01:S01,
   crossref = {ICUS13},
   title = {The problem of inter-theoretic relations: a methodological introduction},
   author = {Koertge, Noretta},
   commentator = {Weimer, Walter B.},
 }
 
-@inproceedings{ICUS13:C01:G01:S02,
+@InProceedings{ICUS13:C01:G01:S02,
   crossref = {ICUS13},
   title = {Reductionism in biology and in the social sciences},
   author = {Leinfellner, Werner},
   commentator = {Briskman, Laurence B.},
 }
 
-@inproceedings{ICUS13:C01:G01:S03,
+@InProceedings{ICUS13:C01:G01:S03,
   crossref = {ICUS13},
   title = {Reduction and emergence in the unified theories of physics},
   author = {Kanitscheider, Bernulf},
@@ -66,7 +66,7 @@
 
 
 
-@set{ICUS13:C01:G02,
+@Set{ICUS13:C01:G02,
   entryset = {ICUS13:C01:G02:S01},
   pattern = {ICUS13:C01:G02:[S|X]},
   patterntype = {key},
@@ -75,13 +75,13 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C01:G02:S01,
+@InProceedings{ICUS13:C01:G02:S01,
   crossref = {ICUS13},
   title = {Can we reduce chemistry to physics?},
   author = {Primas, Hans},
 }
 
-@inproceedings{ICUS13:C01:G02:S02,
+@InProceedings{ICUS13:C01:G02:S02,
   crossref = {ICUS13},
   title = {Order and chaos},
   author = {Sexl, Roman},
@@ -90,7 +90,7 @@
 
 
 
-@set{ICUS13:C01:G03,
+@Set{ICUS13:C01:G03,
   entryset = {ICUS13:C01:G03:S01},
   pattern = {ICUS13:C01:G03:[S|X]},
   patterntype = {key},
@@ -99,21 +99,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C01:G03:S01,
+@InProceedings{ICUS13:C01:G03:S01,
   crossref = {ICUS13},
   title = {A biomedical researcher casts a side-glance at the principle of self-organization},
   author = {Petrovic, Alexandre},
   commentator = {Akos, Karoly},
 }
 
-@inproceedings{ICUS13:C01:G03:S02,
+@InProceedings{ICUS13:C01:G03:S02,
   crossref = {ICUS13},
   title = {Mind and brain: reduction or correlation?},
   author = {Lowenhard, Percy},
   commentator = {Wuketits, Franz M.},
 }
 
-@inproceedings{ICUS13:C01:G03:S03,
+@InProceedings{ICUS13:C01:G03:S03,
   crossref = {ICUS13},
   title = {The individualistic research program in sociology},
   author = {Opp, Karl-Dieter},
@@ -123,7 +123,7 @@
 
 
 
-@set{ICUS13:C01:G04,
+@Set{ICUS13:C01:G04,
   entryset = {ICUS13:C01:G04:S01},
   pattern = {ICUS13:C01:G04:[S|X]},
   patterntype = {key},
@@ -132,14 +132,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C01:G04:S01,
+@InProceedings{ICUS13:C01:G04:S01,
   crossref = {ICUS13},
   title = {Explanation, interpretation and understanding in the social sciences},
   author = {Boudon, Raymond},
   commentator = {Sorbom, Per and Boyer, Alain},
 }
 
-@inproceedings{ICUS13:C01:G04:S02,
+@InProceedings{ICUS13:C01:G04:S02,
   crossref = {ICUS13},
   title = {Explanation in history},
   author = {Munz, Peter},
@@ -149,7 +149,7 @@
 
 
 
-@set{ICUS13:C01:G05,
+@Set{ICUS13:C01:G05,
   entryset = {ICUS13:C01:G05:S01},
   pattern = {ICUS13:C01:G05:[S|X]},
   patterntype = {key},
@@ -158,7 +158,7 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C01:G05:S01,
+@InProceedings{ICUS13:C01:G05:S01,
   crossref = {ICUS13},
   title = {Explanation, reduction and the sociological turn in the philosophy of science,
   or Kuhn as ideologue for Merton's theory of science},
@@ -168,7 +168,7 @@
 
 
 
-@set{ICUS13:C02,
+@Set{ICUS13:C02,
   entryset = {ICUS13:C02},
   pattern = {ICUS13:C02:G\d\d:[S|X]},
   patterntype = {key},
@@ -177,7 +177,7 @@
   chairperson = {Robinson, Enders A. and Wold, Herman},
 }
 
-@set{ICUS13:C02:G01,
+@Set{ICUS13:C02:G01,
   entryset = {ICUS13:C02:G01:S01},
   pattern = {ICUS13:C02:G01:[S|X]},
   patterntype = {key},
@@ -186,14 +186,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C02:G01:S01,
+@InProceedings{ICUS13:C02:G01:S01,
   crossref = {ICUS13},
   title = {The basic principles of model-building},
   author = {Lohmoeller, Jan-Bernd},
   commentator = {Poch, Francisco Azorin and Njock, G. Edward},
 }
 
-@inproceedings{ICUS13:C02:G01:S02,
+@InProceedings{ICUS13:C02:G01:S02,
   crossref = {ICUS13},
   title = {The blending of theoretical and empirical knowledge in structural equations with unobservables},
   author = {Fornell, Claes},
@@ -203,7 +203,7 @@
 
 
 
-@set{ICUS13:C02:G02,
+@Set{ICUS13:C02:G02,
   entryset = {ICUS13:C02:G02:S01},
   pattern = {ICUS13:C02:G02:[S|X]},
   patterntype = {key},
@@ -212,14 +212,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C02:G02:S01,
+@InProceedings{ICUS13:C02:G02:S01,
   crossref = {ICUS13},
   title = {Evaluation of school systems using partial least squares (PLS): an application in the analysis of open systems},
   author = {Noonan, Richard},
   commentator = {Sellin, Norbert and Rogowski, Josef},
 }
 
-@inproceedings{ICUS13:C02:G02:S02,
+@InProceedings{ICUS13:C02:G02:S02,
   crossref = {ICUS13},
   title = {Estimation of re-models and some remarks on model specification in econometrics},
   author = {Schips, Bernd},
@@ -229,7 +229,7 @@
 
 
 
-@set{ICUS13:C02:G03,
+@Set{ICUS13:C02:G03,
   entryset = {ICUS13:C02:G03:S01},
   pattern = {ICUS13:C02:G03:[S|X]},
   patterntype = {key},
@@ -238,14 +238,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C02:G03:S01,
+@InProceedings{ICUS13:C02:G03:S01,
   crossref = {ICUS13},
   title = {Scientific model-building: principles, methods and history},
   author = {Dagum, Camilo},
   commentator = {Sussman, Georg and Kryspin, Jan},
 }
 
-@inproceedings{ICUS13:C02:G03:S02,
+@InProceedings{ICUS13:C02:G03:S02,
   crossref = {ICUS13},
   title = {Blood flow in the brain, and adulthood aging of cognitive functions},
   author = {Horn, John},
@@ -255,7 +255,7 @@
 
 
 
-@set{ICUS13:C02:G04,
+@Set{ICUS13:C02:G04,
   entryset = {ICUS13:C02:G04:S01},
   pattern = {ICUS13:C02:G04:[S|X]},
   patterntype = {key},
@@ -264,14 +264,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C02:G04:S01,
+@InProceedings{ICUS13:C02:G04:S01,
   crossref = {ICUS13},
   title = {Soft modeling and the measurement of biological shape},
   author = {Bookstein, Fred L.},
   commentator = {Kochen, Manfred and Friedman, Jerome},
 }
 
-@inproceedings{ICUS13:C02:G04:S02,
+@InProceedings{ICUS13:C02:G04:S02,
   crossref = {ICUS13},
   title = {Soft and other modeling of categorical variables and contingency tables},
   author = {Henning, H. Joerg},
@@ -281,7 +281,7 @@
 
 
 
-@set{ICUS13:C02:G05,
+@Set{ICUS13:C02:G05,
   entryset = {ICUS13:C02:G05:S01},
   pattern = {ICUS13:C02:G05:[S|X]},
   patterntype = {key},
@@ -290,7 +290,7 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C02:G05:S01,
+@InProceedings{ICUS13:C02:G05:S01,
   crossref = {ICUS13},
   title = {Strategy of and for science},
   author = {Gruner, Wayne R.},
@@ -300,7 +300,7 @@
 
 
 
-@set{ICUS13:C03,
+@Set{ICUS13:C03,
   entryset = {ICUS13:C03},
   pattern = {ICUS13:C03:G\d\d:[S|X]},
   patterntype = {key},
@@ -309,7 +309,7 @@
   chairperson = {{Johnson-Marshall}, Percy and Galantay, Ervin Y.},
 }
 
-@set{ICUS13:C03:G01,
+@Set{ICUS13:C03:G01,
   entryset = {ICUS13:C03:G01:S01},
   pattern = {ICUS13:C03:G01:[S|X]},
   patterntype = {key},
@@ -318,28 +318,28 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C03:G01:S01,
+@InProceedings{ICUS13:C03:G01:S01,
   crossref = {ICUS13},
   title = {The metropolis in its national and regional context},
   author = {Dwyer, Denis John},
   commentator = {Laszlo, Ervin},
 }
 
-@inproceedings{ICUS13:C03:G01:S02,
+@InProceedings{ICUS13:C03:G01:S02,
   crossref = {ICUS13},
   title = {The metropolis and tropical Africa},
   author = {O'Connor, Anthony},
   commentator = {Laszlo, Ervin},
 }
 
-@inproceedings{ICUS13:C03:G01:S03,
+@InProceedings{ICUS13:C03:G01:S03,
   crossref = {ICUS13},
   title = {Toward megalopolis},
   author = {Psomopoulos, Panayis},
   commentator = {Leaker, Dudley and Mackay, William},
 }
 
-@inproceedings{ICUS13:C03:G01:S04,
+@InProceedings{ICUS13:C03:G01:S04,
   crossref = {ICUS13},
   title = {The world system of cities in transformation},
   author = {Dyckman, John W.},
@@ -349,7 +349,7 @@
 
 
 
-@set{ICUS13:C03:G02,
+@Set{ICUS13:C03:G02,
   entryset = {ICUS13:C03:G02:S01},
   pattern = {ICUS13:C03:G02:[S|X]},
   patterntype = {key},
@@ -358,14 +358,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C03:G02:S01,
+@InProceedings{ICUS13:C03:G02:S01,
   crossref = {ICUS13},
   title = {The European metropolis},
   author = {{Mueller-Ibold}, Klaus},
   commentator = {Bassand, Michel and Constandse, Adriaan},
 }
 
-@inproceedings{ICUS13:C03:G02:S02,
+@InProceedings{ICUS13:C03:G02:S02,
   crossref = {ICUS13},
   title = {The North American metropolis},
   author = {Robertson, Rebecca},
@@ -375,7 +375,7 @@
 
 
 
-@set{ICUS13:C03:G03,
+@Set{ICUS13:C03:G03,
   entryset = {ICUS13:C03:G03:S01},
   pattern = {ICUS13:C03:G03:[S|X]},
   patterntype = {key},
@@ -384,21 +384,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C03:G03:S01,
+@InProceedings{ICUS13:C03:G03:S01,
   crossref = {ICUS13},
   title = {The Latin American metropolis},
   author = {Kunckel, Dieter},
   commentator = {Batista, Geraldo Sá Nogueira and {Gomez Azcarate Ramirez}, Elias},
 }
 
-@inproceedings{ICUS13:C03:G03:S02,
+@InProceedings{ICUS13:C03:G03:S02,
   crossref = {ICUS13},
   title = {The Asian metropolis},
   author = {Wyss, Peter},
   commentator = {Ho, Tao and Jumsai, Sumet},
 }
 
-@inproceedings{ICUS13:C03:G03:S03,
+@InProceedings{ICUS13:C03:G03:S03,
   crossref = {ICUS13},
   title = {The metropolis in Islamic countries},
   author = {Mechkat, Cyrus},
@@ -408,7 +408,7 @@
 
 
 
-@set{ICUS13:C03:G04,
+@Set{ICUS13:C03:G04,
   entryset = {ICUS13:C03:G04:S01},
   pattern = {ICUS13:C03:G04:[S|X]},
   patterntype = {key},
@@ -417,14 +417,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C03:G04:S01,
+@InProceedings{ICUS13:C03:G04:S01,
   crossref = {ICUS13},
   title = {The metropolis in socialist countries},
   author = {Vidor, Ferenc},
   commentator = {Pawlowski, Krzysztof and Perovic, Milos},
 }
 
-@inproceedings{ICUS13:C03:G04:S02,
+@InProceedings{ICUS13:C03:G04:S02,
   crossref = {ICUS13},
   title = {Utopian paradigms of metropolis},
   author = {Kikutake, Kiyonori},
@@ -434,7 +434,7 @@
 
 
 
-@set{ICUS13:C04,
+@Set{ICUS13:C04,
   entryset = {ICUS13:C04},
   pattern = {ICUS13:C04:G\d\d:[S|X]},
   patterntype = {key},
@@ -443,7 +443,7 @@
   chairperson = {Ryan, John W. and Fukuda, Nobuyuki},
 }
 
-@set{ICUS13:C04:G01,
+@Set{ICUS13:C04:G01,
   entryset = {ICUS13:C04:G01:S01},
   pattern = {ICUS13:C04:G01:[S|X]},
   patterntype = {key},
@@ -452,21 +452,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C04:G01:S01,
+@InProceedings{ICUS13:C04:G01:S01,
   crossref = {ICUS13},
   title = {The Japanese educational challenge},
   author = {Cummings, William K.},
   commentator = {Sabouret, Jean-Francois},
 }
 
-@inproceedings{ICUS13:C04:G01:S02,
+@InProceedings{ICUS13:C04:G01:S02,
   crossref = {ICUS13},
   title = {Continuity and change in mid-nineteenth century Japanese education},
   author = {Rubinger, Richard},
   commentator = {Hong, Woong Sun},
 }
 
-@inproceedings{ICUS13:C04:G01:S03,
+@InProceedings{ICUS13:C04:G01:S03,
   crossref = {ICUS13},
   title = {Higher education and working women in the United States and Japan},
   author = {Takeda, Katz},
@@ -476,7 +476,7 @@
 
 
 
-@set{ICUS13:C04:G02,
+@Set{ICUS13:C04:G02,
   entryset = {ICUS13:C04:G02:S01},
   pattern = {ICUS13:C04:G02:[S|X]},
   patterntype = {key},
@@ -485,14 +485,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C04:G02:S01,
+@InProceedings{ICUS13:C04:G02:S01,
   crossref = {ICUS13},
   title = {The school in an achievement-oriented society: crisis and remedies},
   author = {Husen, Torsten},
   commentator = {Beauchamp, Edward},
 }
 
-@inproceedings{ICUS13:C04:G02:S02,
+@InProceedings{ICUS13:C04:G02:S02,
   crossref = {ICUS13},
   title = {Ecological vs. purely functional concepts in education and educational policy},
   author = {Schleicher, Klaus},
@@ -502,7 +502,7 @@
 
 
 
-@set{ICUS13:C04:G03,
+@Set{ICUS13:C04:G03,
   entryset = {ICUS13:C04:G03:S01},
   pattern = {ICUS13:C04:G03:[S|X]},
   patterntype = {key},
@@ -511,21 +511,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C04:G03:S01,
+@InProceedings{ICUS13:C04:G03:S01,
   crossref = {ICUS13},
   title = {Educational development in the Asian countries: issues and coping strategies},
   author = {Kuo, Wei-Fan},
   commentator = {Masatsugu, Mitsuyuki and Chang, Sang Ho},
 }
 
-@inproceedings{ICUS13:C04:G03:S02,
+@InProceedings{ICUS13:C04:G03:S02,
   crossref = {ICUS13},
   title = {Educational values and hopes for universal basic education in Africa},
   author = {Oxenham, John},
   commentator = {Ishumi, Abel G. M.},
 }
 
-@inproceedings{ICUS13:C04:G03:S03,
+@InProceedings{ICUS13:C04:G03:S03,
   crossref = {ICUS13},
   title = {Difficulties in educational development in South Asia},
   author = {Toyoda, Toshio},
@@ -535,7 +535,7 @@
 
 
 
-@set{ICUS13:C04:G04,
+@Set{ICUS13:C04:G04,
   entryset = {ICUS13:C04:G04:S01},
   pattern = {ICUS13:C04:G04:[S|X]},
   patterntype = {key},
@@ -544,14 +544,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C04:G04:S01,
+@InProceedings{ICUS13:C04:G04:S01,
   crossref = {ICUS13},
   title = {Education and instruction in Romania},
   author = {Bogdan, Radu I. C.},
   commentator = {Mitter, Wolfgang and Kozma, Tamas and Shtromas, Alexander},
 }
 
-@inproceedings{ICUS13:C04:G04:S02,
+@InProceedings{ICUS13:C04:G04:S02,
   crossref = {ICUS13},
   title = {Education in China: the present situation and counter measures},
   author = {Li, Debao},
@@ -560,7 +560,7 @@
 
 
 
-@set{ICUS13:C04:G05,
+@Set{ICUS13:C04:G05,
   entryset = {ICUS13:C04:G05:S01},
   pattern = {ICUS13:C04:G05:[S|X]},
   patterntype = {key},
@@ -569,14 +569,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C04:G05:S01,
+@InProceedings{ICUS13:C04:G05:S01,
   crossref = {ICUS13},
   title = {University international relations: what lies ahead?},
   author = {Ryan, John W.},
   commentator = {Cowan, James W. and Lombardi, John V.},
 }
 
-@inproceedings{ICUS13:C04:G05:S02,
+@InProceedings{ICUS13:C04:G05:S02,
   crossref = {ICUS13},
   title = {The international flow of students: a vehicle for international cooperation and cross-cultural understanding?},
   author = {Selvaratnam, Viswanathan},
@@ -586,7 +586,7 @@
 
 
 
-@set{ICUS13:C05,
+@Set{ICUS13:C05,
   entryset = {ICUS13:C05},
   pattern = {ICUS13:C05:G\d\d:[S|X]},
   patterntype = {key},
@@ -595,7 +595,7 @@
   chairperson = {Spilhaus, Athelstan and Singer, S. Fred},
 }
 
-@set{ICUS13:C05:G01,
+@Set{ICUS13:C05:G01,
   entryset = {ICUS13:C05:G01:S01},
   pattern = {ICUS13:C05:G01:[S|X]},
   patterntype = {key},
@@ -604,21 +604,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C05:G01:S01,
+@InProceedings{ICUS13:C05:G01:S01,
   crossref = {ICUS13},
   title = {Early history of earth and ocean},
   author = {Rasool, S. Ishtiaque},
   commentator = {Nanda, J. N.},
 }
 
-@inproceedings{ICUS13:C05:G01:S02,
+@InProceedings{ICUS13:C05:G01:S02,
   crossref = {ICUS13},
   title = {The ocean as the cradle of life},
   author = {Ponnampueruma, Cyril},
-  commentator = {Soffen, Gerald and {Villee Jr}, Claude A.},
+  commentator = {Soffen, Gerald and Claude A. {Villee Jr}},
 }
 
-@inproceedings{ICUS13:C05:G01:S03,
+@InProceedings{ICUS13:C05:G01:S03,
   crossref = {ICUS13},
   title = {Bio-geochemical cycles in the ocean},
   author = {Lerman, Abraham},
@@ -627,7 +627,7 @@
 
 
 
-@set{ICUS13:C05:G02,
+@Set{ICUS13:C05:G02,
   entryset = {ICUS13:C05:G02:S01},
   pattern = {ICUS13:C05:G02:[S|X]},
   patterntype = {key},
@@ -636,14 +636,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C05:G02:S01,
+@InProceedings{ICUS13:C05:G02:S01,
   crossref = {ICUS13},
   title = {Long-term climate control},
   author = {Oeschger, H.},
   commentator = {Gat, Joel},
 }
 
-@inproceedings{ICUS13:C05:G02:S02,
+@InProceedings{ICUS13:C05:G02:S02,
   crossref = {ICUS13},
   title = {Ocean control of atmospheric processes},
   author = {Kraus, Eric B.},
@@ -653,7 +653,7 @@
 
 
 
-@set{ICUS13:C05:G03,
+@Set{ICUS13:C05:G03,
   entryset = {ICUS13:C05:G03:S01},
   pattern = {ICUS13:C05:G03:[S|X]},
   patterntype = {key},
@@ -662,21 +662,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C05:G03:S01,
+@InProceedings{ICUS13:C05:G03:S01,
   crossref = {ICUS13},
   title = {Underwater exploration},
   author = {Walsh, Don},
   commentator = {Piccard, Jacques},
 }
 
-@inproceedings{ICUS13:C05:G03:S02,
+@InProceedings{ICUS13:C05:G03:S02,
   crossref = {ICUS13},
   title = {Ocean observations},
   author = {Abel, Robert},
   commentator = {Kullenberg, Gunnar and Niskin, Shale},
 }
 
-@inproceedings{ICUS13:C05:G03:S03,
+@InProceedings{ICUS13:C05:G03:S03,
   crossref = {ICUS13},
   title = {Ocean modification},
   author = {Stanhill, Gerald},
@@ -685,7 +685,7 @@
 
 
 
-@set{ICUS13:C05:G04,
+@Set{ICUS13:C05:G04,
   entryset = {ICUS13:C05:G04:S01},
   pattern = {ICUS13:C05:G04:[S|X]},
   patterntype = {key},
@@ -694,21 +694,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C05:G04:S01,
+@InProceedings{ICUS13:C05:G04:S01,
   crossref = {ICUS13},
   title = {Oceans and earliest voyagers},
   author = {Bascom, Willard},
   commentator = {Srinivasan, Mangalam},
 }
 
-@inproceedings{ICUS13:C05:G04:S02,
+@InProceedings{ICUS13:C05:G04:S02,
   crossref = {ICUS13},
   title = {Ocean cities},
   author = {Frassetto, Roberto},
   commentator = {Marinov, Uri},
 }
 
-@inproceedings{ICUS13:C05:G04:S03,
+@InProceedings{ICUS13:C05:G04:S03,
   crossref = {ICUS13},
   title = {Ocean tunnel and highway},
   author = {Machida, Yutaka},
@@ -718,7 +718,7 @@
 
 
 
-@set{ICUS13:C06,
+@Set{ICUS13:C06,
   entryset = {ICUS13:C06},
   pattern = {ICUS13:C06:G\d\d:[S|X]},
   patterntype = {key},
@@ -727,7 +727,7 @@
   chairperson = {Charon, Jean E.},
 }
 
-@set{ICUS13:C06:G01,
+@Set{ICUS13:C06:G01,
   entryset = {ICUS13:C06:G01:S01},
   pattern = {ICUS13:C06:G01:[S|X]},
   patterntype = {key},
@@ -736,19 +736,19 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C06:G01:S01,
+@InProceedings{ICUS13:C06:G01:S01,
   crossref = {ICUS13},
   title = {The interactive mind and the participatory universe},
   author = {Skolimowski, Henryk},
 }
 
-@inproceedings{ICUS13:C06:G01:S02,
+@InProceedings{ICUS13:C06:G01:S02,
   crossref = {ICUS13},
   title = {Biological bases on reality and imaginary},
   author = {Delgado, Jose M. R.},
 }
 
-@inproceedings{ICUS13:C06:G01:S03,
+@InProceedings{ICUS13:C06:G01:S03,
   crossref = {ICUS13},
   title = {The paradox of values},
   author = {Cousineau, Diane},
@@ -757,7 +757,7 @@
 
 
 
-@set{ICUS13:C06:G02,
+@Set{ICUS13:C06:G02,
   entryset = {ICUS13:C06:G02:S01},
   pattern = {ICUS13:C06:G02:[S|X]},
   patterntype = {key},
@@ -766,13 +766,13 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C06:G02:S01,
+@InProceedings{ICUS13:C06:G02:S01,
   crossref = {ICUS13},
   title = {Universal relativity: meditation, mind and matter},
   author = {Gangadean, Ashok K.},
 }
 
-@inproceedings{ICUS13:C06:G02:S02,
+@InProceedings{ICUS13:C06:G02:S02,
   crossref = {ICUS13},
   title = {The search of the lost reality},
   author = {Lerede, Jean},
@@ -780,7 +780,7 @@
 
 
 
-@set{ICUS13:C06:G03,
+@Set{ICUS13:C06:G03,
   entryset = {ICUS13:C06:G03:S01},
   pattern = {ICUS13:C06:G03:[S|X]},
   patterntype = {key},
@@ -789,19 +789,19 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C06:G03:S01,
+@InProceedings{ICUS13:C06:G03:S01,
   crossref = {ICUS13},
   title = {Imaginary and reality in complex relativity},
   author = {Charon, Jean E.},
 }
 
-@inproceedings{ICUS13:C06:G03:S02,
+@InProceedings{ICUS13:C06:G03:S02,
   crossref = {ICUS13},
   title = {Imaginary: a come back},
   author = {Durand, Gilbert},
 }
 
-@inproceedings{ICUS13:C06:G03:S03,
+@InProceedings{ICUS13:C06:G03:S03,
   crossref = {ICUS13},
   title = {Externalization of knowledge and the humanization of man},
   author = {Wojciechowski, Jerzy A.},
@@ -809,7 +809,7 @@
 
 
 
-@set{ICUS13:C06:G04,
+@Set{ICUS13:C06:G04,
   entryset = {ICUS13:C06:G04:S01},
   pattern = {ICUS13:C06:G04:[S|X]},
   patterntype = {key},
@@ -818,13 +818,13 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C06:G04:S01,
+@InProceedings{ICUS13:C06:G04:S01,
   crossref = {ICUS13},
   title = {Consciousness as causal reality: toward a complementary science},
   author = {Harman, Willis W.},
 }
 
-@inproceedings{ICUS13:C06:G04:S02,
+@InProceedings{ICUS13:C06:G04:S02,
   crossref = {ICUS13},
   title = {Eastern and Western conceptions of imaginary},
   author = {Bonnier, Henry},
@@ -832,7 +832,7 @@
 
 
 
-@set{ICUS13:C06:G05,
+@Set{ICUS13:C06:G05,
   entryset = {ICUS13:C06:G05:S01},
   pattern = {ICUS13:C06:G05:[S|X]},
   patterntype = {key},
@@ -841,13 +841,13 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C06:G05:S01,
+@InProceedings{ICUS13:C06:G05:S01,
   crossref = {ICUS13},
   title = {Psychophysics: a new frontier of knowledge},
   author = {Vasconcellos, Jose Inacio Cotrim},
 }
 
-@inproceedings{ICUS13:C06:G05:S02,
+@InProceedings{ICUS13:C06:G05:S02,
   crossref = {ICUS13},
   title = {What could be a mind able to conceive a brain able to produce a mind?},
   author = {{Morin-Nahoum}, Edgar},
@@ -856,7 +856,7 @@
 
 
 
-@set{ICUS13:C07,
+@Set{ICUS13:C07,
   entryset = {ICUS13:C07},
   pattern = {ICUS13:C07:G\d\d:[S|X]},
   patterntype = {key},
@@ -865,7 +865,7 @@
   chairperson = {Sontag, Frederick E. and Mavrodes, George I. and Sharkey, Paul W.},
 }
 
-@set{ICUS13:C07:G01,
+@Set{ICUS13:C07:G01,
   entryset = {ICUS13:C07:G01:S01},
   pattern = {ICUS13:C07:G01:[S|X]},
   patterntype = {key},
@@ -874,19 +874,19 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C07:G01:S01,
+@InProceedings{ICUS13:C07:G01:S01,
   crossref = {ICUS13},
   title = {Responses to questions on unification thought},
   author = {Lee, Sang Hun},
 }
 
-@inproceedings{ICUS13:C07:G01:S02,
+@InProceedings{ICUS13:C07:G01:S02,
   crossref = {ICUS13},
   title = {Relationality and the concept of heart},
   author = {Axel, Larry},
 }
 
-@inproceedings{ICUS13:C07:G01:S03,
+@InProceedings{ICUS13:C07:G01:S03,
   crossref = {ICUS13},
   title = {Towards a general theory of education in unification thought},
   author = {Chaves, Eduardo O. C.},
@@ -894,7 +894,7 @@
 
 
 
-@set{ICUS13:C07:G02,
+@Set{ICUS13:C07:G02,
   entryset = {ICUS13:C07:G02:S01},
   pattern = {ICUS13:C07:G02:[S|X]},
   patterntype = {key},
@@ -903,13 +903,13 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C07:G02:S01,
+@InProceedings{ICUS13:C07:G02:S01,
   crossref = {ICUS13},
   title = {Unification thought and religious knowledge},
   author = {Eby, Lloyd},
 }
 
-@inproceedings{ICUS13:C07:G02:S02,
+@InProceedings{ICUS13:C07:G02:S02,
   crossref = {ICUS13},
   title = {Unification thought and the critique of capitalism and communism},
   author = {Rubenstein, Richard L.},
@@ -917,7 +917,7 @@
 
 
 
-@set{ICUS13:C07:G03,
+@Set{ICUS13:C07:G03,
   entryset = {ICUS13:C07:G03:S01},
   pattern = {ICUS13:C07:G03:[S|X]},
   patterntype = {key},
@@ -926,19 +926,19 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C07:G03:S01,
+@InProceedings{ICUS13:C07:G03:S01,
   crossref = {ICUS13},
   title = {Must we become relativists?},
   author = {Wallner, Friedrich},
 }
 
-@inproceedings{ICUS13:C07:G03:S02,
+@InProceedings{ICUS13:C07:G03:S02,
   crossref = {ICUS13},
   title = {Philosophy of culture in unification thought},
   author = {Woo, Peter K. Y.},
 }
 
-@inproceedings{ICUS13:C07:G03:S03,
+@InProceedings{ICUS13:C07:G03:S03,
   crossref = {ICUS13},
   title = {Relation between ethics and religious belief},
   author = {Reyes, Ramon C.},
@@ -946,7 +946,7 @@
 
 
 
-@set{ICUS13:C07:G04,
+@Set{ICUS13:C07:G04,
   entryset = {ICUS13:C07:G04:S01},
   pattern = {ICUS13:C07:G04:[S|X]},
   patterntype = {key},
@@ -955,13 +955,13 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C07:G04:S01,
+@InProceedings{ICUS13:C07:G04:S01,
   crossref = {ICUS13},
   title = {Universalism in science and culture},
   author = {Kuczynski, Janusz},
 }
 
-@inproceedings{ICUS13:C07:G04:S02,
+@InProceedings{ICUS13:C07:G04:S02,
   crossref = {ICUS13},
   title = {The social philosophy for the new world},
   author = {{Butr-Indr}, Siddhi},
@@ -969,7 +969,7 @@
 
 
 
-@set{ICUS13:C07:G05,
+@Set{ICUS13:C07:G05,
   entryset = {ICUS13:C07:G05:S01},
   pattern = {ICUS13:C07:G05:[S|X]},
   patterntype = {key},
@@ -978,13 +978,13 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS13:C07:G05:S01,
+@InProceedings{ICUS13:C07:G05:S01,
   crossref = {ICUS13},
   title = {Reason and heart: a comparison between Hegel's philosophy and unification thought},
   author = {Perry, Paul},
 }
 
-@inproceedings{ICUS13:C07:G05:S02,
+@InProceedings{ICUS13:C07:G05:S02,
   crossref = {ICUS13},
   title = {Philosophy East and West: unification or unity},
   author = {Brunn, Emilie Zum},
