--- a/inst/extdata/bibset-raw/icus16.bib
+++ b/inst/extdata/bibset-raw/icus16.bib
@@ -113,7 +113,7 @@
   crossref = {ICUS16},
   title = {Organic molecules and the origin of the solar system},
   author = {Johnson, Fred},
-  commentator={Gornitz, Thomas and {Perry Jr}, A. M.}
+  commentator={Gornitz, Thomas and A. M. {Perry Jr}}
 }
 
 
@@ -321,7 +321,7 @@
 @InProceedings{ICUS16:C03:G01:S01,
   crossref = {ICUS16},
   title = {Steps toward ecumenism in Meister Eckart and Nicholas of Cusa},
-  author = {{Zum Brunn}, Emilie},
+  author = {Emilie {Zum Brunn}},
   commentator = {Charles, Daniel},
 }
 
