--- a/inst/extdata/bibset-raw/icus17.bib
+++ b/inst/extdata/bibset-raw/icus17.bib
@@ -1,4 +1,4 @@
-@proceedings{ICUS17,
+@Proceedings{ICUS17,
   title = {Absolute Values and the Reassessment of the Contemporary World},
   titleaddon = {Seventeenth International Conference on the Unity of the Sciences},
   shorttitle = {ICUS XVII},
@@ -12,13 +12,13 @@
   keywords={primary, program, moonist}
 }
 
-@inproceedings{ICUS17:P01,
+@InProceedings{ICUS17:P01,
   crossref = {ICUS17},
   title = {Evolution of the Human Brain: Creation of the Conscious Self},
   author = {Eccles, John},
 }
 
-@inproceedings{ICUS17:P02,
+@InProceedings{ICUS17:P02,
   crossref = {ICUS17},
   title = {A Physicist's View of Living Systems},
   author = {Seitz, Frederick},
@@ -26,7 +26,7 @@
 
 
 
-@set{ICUS17:C01,
+@Set{ICUS17:C01,
   entryset = {ICUS17:C01},
   pattern = {ICUS17:C01:G\d\d:[S|X]},
   patterntype = {key},
@@ -35,7 +35,7 @@
   chairperson = {Lowenhard, Percy},
 }
 
-@set{ICUS17:C01:G01,
+@Set{ICUS17:C01:G01,
   entryset = {ICUS17:C01:G01:S01},
   pattern = {ICUS17:C01:G01:[S|X]},
   patterntype = {key},
@@ -44,14 +44,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C01:G01:S01,
+@InProceedings{ICUS17:C01:G01:S01,
   crossref = {ICUS17},
   title = {The anthropic principle - physical constraints for the evolution of intelligent life: an epistemological assessment},
   author = {Kanitscheider, Bernulf},
   commentator = {Goernitz, Thomas},
 }
 
-@inproceedings{ICUS17:C01:G01:S02,
+@InProceedings{ICUS17:C01:G01:S02,
   crossref = {ICUS17},
   title = {The importance of prebiotic porphyrins in biopoisis},
   author = {{del C. Batlle}, Alcira M. },
@@ -59,7 +59,7 @@
 }
 
 
-@set{ICUS17:C01:G02,
+@Set{ICUS17:C01:G02,
   entryset = {ICUS17:C01:G02:S01},
   pattern = {ICUS17:C01:G02:[S|X]},
   patterntype = {key},
@@ -68,14 +68,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C01:G02:S01,
+@InProceedings{ICUS17:C01:G02:S01,
   crossref = {ICUS17},
   title = {The evolution of the genetic code},
   author = {Pincheira, Guido},
   commentator = {Nakahara, Hideomi},
 }
 
-@inproceedings{ICUS17:C01:G02:S02,
+@InProceedings{ICUS17:C01:G02:S02,
   crossref = {ICUS17},
   title = {The emergence of life and man in the inanimate material world},
   author = {Fong, Peter},
@@ -83,7 +83,7 @@
 }
 
 
-@set{ICUS17:C01:G03,
+@Set{ICUS17:C01:G03,
   entryset = {ICUS17:C01:G03:S01},
   pattern = {ICUS17:C01:G03:[S|X]},
   patterntype = {key},
@@ -92,14 +92,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C01:G03:S01,
+@InProceedings{ICUS17:C01:G03:S01,
   crossref = {ICUS17},
   title = {A model of man},
-  author = {{Vijil y Tardon}, Camilo},
-  commentator = {{von Studnitz}, Wilfried},
+  author = {Camilo {Vijil y Tardon}},
+  commentator = {Wilfried {von Studnitz}},
 }
 
-@inproceedings{ICUS17:C01:G03:S02,
+@InProceedings{ICUS17:C01:G03:S02,
   crossref = {ICUS17},
   title = {Natural selection and the human condition},
   author = {Harrison, G. Ainsworth},
@@ -107,7 +107,7 @@
 }
 
 
-@set{ICUS17:C01:G04,
+@Set{ICUS17:C01:G04,
   entryset = {ICUS17:C01:G04:S01},
   pattern = {ICUS17:C01:G04:[S|X]},
   patterntype = {key},
@@ -116,14 +116,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C01:G04:S01,
+@InProceedings{ICUS17:C01:G04:S01,
   crossref = {ICUS17},
   title = {Darwinian and non-Darwinian principles of evolution},
   author = {Vollmer, Gerhard},
   commentator = {Ghiselin, Michael T.},
 }
 
-@inproceedings{ICUS17:C01:G04:S02,
+@InProceedings{ICUS17:C01:G04:S02,
   crossref = {ICUS17},
   title = {Charles Darwin in the teleology of evolution},
   author = {Wells, Jonathan},
@@ -131,7 +131,7 @@
 }
 
 
-@set{ICUS17:C01:G05,
+@Set{ICUS17:C01:G05,
   entryset = {ICUS17:C01:G05:S01},
   pattern = {ICUS17:C01:G05:[S|X]},
   patterntype = {key},
@@ -140,14 +140,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C01:G05:S01,
+@InProceedings{ICUS17:C01:G05:S01,
   crossref = {ICUS17},
   title = {The nature and ritual and the place of ritual in human evolution},
   author = {Aijmer, Goran L.},
   commentator = {Brogger, Jan},
 }
 
-@inproceedings{ICUS17:C01:G05:S02,
+@InProceedings{ICUS17:C01:G05:S02,
   crossref = {ICUS17},
   title = {The evolution of science as an element in the ''rise of the West''},
   author = {Radnitzky, Gerard},
@@ -155,7 +155,7 @@
 }
 
 
-@set{ICUS17:C01:G06,
+@Set{ICUS17:C01:G06,
   entryset = {ICUS17:C01:G06:S01},
   pattern = {ICUS17:C01:G06:[S|X]},
   patterntype = {key},
@@ -164,14 +164,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C01:G06:S01,
+@InProceedings{ICUS17:C01:G06:S01,
   crossref = {ICUS17},
   title = {Traditional ethics, ethical decision theory and evolutionary ethics},
   author = {Leinfellner, Werner},
   commentator = {Molinski, Waldemar},
 }
 
-@inproceedings{ICUS17:C01:G06:S02,
+@InProceedings{ICUS17:C01:G06:S02,
   crossref = {ICUS17},
   title = {Conceptual evolution in physics: a case study of the new didactic system: physics in 700 experiments},
   author = {Higatsberger, Michael},
@@ -180,7 +180,7 @@
 
 
 
-@set{ICUS17:C02,
+@Set{ICUS17:C02,
   entryset = {ICUS17:C02},
   pattern = {ICUS17:C02:G\d\d:[S|X]},
   patterntype = {key},
@@ -189,7 +189,7 @@
   chairperson = {Kozma, Tamas and Schleicher, Klaus},
 }
 
-@set{ICUS17:C02:G01,
+@Set{ICUS17:C02:G01,
   entryset = {ICUS17:C02:G01:S01},
   pattern = {ICUS17:C02:G01:[S|X]},
   patterntype = {key},
@@ -198,32 +198,32 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C02:G01:S01,
+@InProceedings{ICUS17:C02:G01:S01,
   crossref = {ICUS17},
   title = {Psychological aspects of ethnic mentality},
   author = {Illyes, Sandor},
 }
 
-@inproceedings{ICUS17:C02:G01:S02,
+@InProceedings{ICUS17:C02:G01:S02,
   crossref = {ICUS17},
   title = {Development of identity and morality - a psychological perspective},
   author = {Thomas, Robert Murray},
 }
 
-@inproceedings{ICUS17:C02:G01:S03,
+@InProceedings{ICUS17:C02:G01:S03,
   crossref = {ICUS17},
   title = {Political socialization and the world citizen},
   author = {Flouris, George and Spiridakis, John},
 }
 
-@inproceedings{ICUS17:C02:G01:S04,
+@InProceedings{ICUS17:C02:G01:S04,
   crossref = {ICUS17},
   title = {Session I analyst},
   author = {Doebler, Matthias},
 }
 
 
-@set{ICUS17:C02:G02,
+@Set{ICUS17:C02:G02,
   entryset = {ICUS17:C02:G02:S01},
   pattern = {ICUS17:C02:G02:[S|X]},
   patterntype = {key},
@@ -232,32 +232,32 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C02:G02:S01,
+@InProceedings{ICUS17:C02:G02:S01,
   crossref = {ICUS17},
   title = {Ethnocentrism as a social need and disease},
   author = {Bernardi, Bernard},
 }
 
-@inproceedings{ICUS17:C02:G02:S02,
+@InProceedings{ICUS17:C02:G02:S02,
   crossref = {ICUS17},
   title = {Dimensions of multiculturism: the emergence of a new educational ideology},
   author = {Kozma, Tamas},
 }
 
-@inproceedings{ICUS17:C02:G02:S03,
+@InProceedings{ICUS17:C02:G02:S03,
   crossref = {ICUS17},
   title = {Universal values vs. local preferences and guilt complexes: the transition to global education},
   author = {Shtromas, Alexander},
 }
 
-@inproceedings{ICUS17:C02:G02:S04,
+@InProceedings{ICUS17:C02:G02:S04,
   crossref = {ICUS17},
   title = {Session II analyst},
   author = {Fujita, Tadashi},
 }
 
 
-@set{ICUS17:C02:G03,
+@Set{ICUS17:C02:G03,
   entryset = {ICUS17:C02:G03:S01},
   pattern = {ICUS17:C02:G03:[S|X]},
   patterntype = {key},
@@ -266,32 +266,32 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C02:G03:S01,
+@InProceedings{ICUS17:C02:G03:S01,
   crossref = {ICUS17},
   title = {Ethnocentrism in education: a comparative analysis of Eastern and Western problems in Europe},
   author = {Szabolcsi, Miklos},
 }
 
-@inproceedings{ICUS17:C02:G03:S02,
+@InProceedings{ICUS17:C02:G03:S02,
   crossref = {ICUS17},
   title = {Ethnocentrism in education: comparative analysis, the case of Latin America and the Central Caribbean},
   author = {Albornoz, Orlando},
 }
 
-@inproceedings{ICUS17:C02:G03:S03,
+@InProceedings{ICUS17:C02:G03:S03,
   crossref = {ICUS17},
   title = {Ethnocentrism in education in the Muslim world},
   author = {Patai, Raphael},
 }
 
-@inproceedings{ICUS17:C02:G03:S04,
+@InProceedings{ICUS17:C02:G03:S04,
   crossref = {ICUS17},
   title = {Session III analyst},
   author = {Wielemans, Willy},
 }
 
 
-@set{ICUS17:C02:G04,
+@Set{ICUS17:C02:G04,
   entryset = {ICUS17:C02:G04:S01},
   pattern = {ICUS17:C02:G04:[S|X]},
   patterntype = {key},
@@ -300,32 +300,32 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C02:G04:S01,
+@InProceedings{ICUS17:C02:G04:S01,
   crossref = {ICUS17},
   title = {Ethnocentrism and education - Asian perspective},
   author = {Shukla, Suresh},
 }
 
-@inproceedings{ICUS17:C02:G04:S02,
+@InProceedings{ICUS17:C02:G04:S02,
   crossref = {ICUS17},
   title = {Education, nationhood and a place in the world order},
   author = {Chitnis, Suma},
 }
 
-@inproceedings{ICUS17:C02:G04:S03,
+@InProceedings{ICUS17:C02:G04:S03,
   crossref = {ICUS17},
   title = {Ethnocentrism in education: the case of Colonial Africa},
   author = {Ishumi, Abel G.},
 }
 
-@inproceedings{ICUS17:C02:G04:S04,
+@InProceedings{ICUS17:C02:G04:S04,
   crossref = {ICUS17},
   title = {Session IV analyst},
   author = {Knappert, Jan D.},
 }
 
 
-@set{ICUS17:C02:G05,
+@Set{ICUS17:C02:G05,
   entryset = {ICUS17:C02:G05:S01},
   pattern = {ICUS17:C02:G05:[S|X]},
   patterntype = {key},
@@ -334,32 +334,32 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C02:G05:S01,
+@InProceedings{ICUS17:C02:G05:S01,
   crossref = {ICUS17},
   title = {Are science and ethnocentrism compatible?},
   author = {Kurti, Nicholas},
 }
 
-@inproceedings{ICUS17:C02:G05:S02,
+@InProceedings{ICUS17:C02:G05:S02,
   crossref = {ICUS17},
   title = {Ethnocentrism and multiculturism from a unification perspective},
   author = {Rayapen, Lewis},
 }
 
-@inproceedings{ICUS17:C02:G05:S03,
+@InProceedings{ICUS17:C02:G05:S03,
   crossref = {ICUS17},
   title = {Mass media and popular culture in the perspective of ethnocentrism},
   author = {Lee, Nam Pyo},
 }
 
-@inproceedings{ICUS17:C02:G05:S04,
+@InProceedings{ICUS17:C02:G05:S04,
   crossref = {ICUS17},
   title = {Session V analyst},
   author = {Borowski, Karol H.},
 }
 
 
-@set{ICUS17:C02:G06,
+@Set{ICUS17:C02:G06,
   entryset = {ICUS17:C02:G06:S01},
   pattern = {ICUS17:C02:G06:[S|X]},
   patterntype = {key},
@@ -368,25 +368,25 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C02:G06:S01,
+@InProceedings{ICUS17:C02:G06:S01,
   crossref = {ICUS17},
   title = {Public opinion and ''international education'': challenges to educational policy},
   author = {Schleicher, Klaus},
 }
 
-@inproceedings{ICUS17:C02:G06:S02,
+@InProceedings{ICUS17:C02:G06:S02,
   crossref = {ICUS17},
   title = {Education and ethnocentrism: the role and impact of international organizations},
   author = {Wagaw, Teshome},
 }
 
-@inproceedings{ICUS17:C02:G06:S03,
+@InProceedings{ICUS17:C02:G06:S03,
   crossref = {ICUS17},
   title = {Internationalizing science teaching by media},
   author = {Higatsberger, Michael},
 }
 
-@inproceedings{ICUS17:C02:G06:S04,
+@InProceedings{ICUS17:C02:G06:S04,
   crossref = {ICUS17},
   title = {Session VI analyst},
   author = {Cuadra, Hector},
@@ -394,7 +394,7 @@
 
 
 
-@set{ICUS17:C03,
+@Set{ICUS17:C03,
   entryset = {ICUS17:C03},
   pattern = {ICUS17:C03:G\d\d:[S|X]},
   patterntype = {key},
@@ -403,7 +403,7 @@
   chairperson = {Alonso, Marcelo and Ali, M. Shamsher},
 }
 
-@set{ICUS17:C03:G01,
+@Set{ICUS17:C03:G01,
   entryset = {ICUS17:C03:G01:S01},
   pattern = {ICUS17:C03:G01:[S|X]},
   patterntype = {key},
@@ -412,14 +412,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C03:G01:S01,
+@InProceedings{ICUS17:C03:G01:S01,
   crossref = {ICUS17},
   title = {Perspectives on the international transfer of science and technology},
   author = {Fleming, James R.},
   commentator={Harter, Don},
 }
 
-@inproceedings{ICUS17:C03:G01:S02,
+@InProceedings{ICUS17:C03:G01:S02,
   crossref = {ICUS17},
   title = {The geographical unification of the sciences: strengthening the scientific infrastructure in the developing countries},
   author = {Moravcsik, M. J.},
@@ -427,7 +427,7 @@
 }
 
 
-@set{ICUS17:C03:G02,
+@Set{ICUS17:C03:G02,
   entryset = {ICUS17:C03:G02:S01},
   pattern = {ICUS17:C03:G02:[S|X]},
   patterntype = {key},
@@ -436,22 +436,22 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C03:G02:S01,
+@InProceedings{ICUS17:C03:G02:S01,
   crossref = {ICUS17},
   title = {Wither aid, whither development},
   author = {Ayala, Jamie},
   commentator={Jonas, Paul and Poole, Alan D.},
 }
 
-@inproceedings{ICUS17:C03:G02:S02,
+@InProceedings{ICUS17:C03:G02:S02,
   crossref = {ICUS17},
   title = {Transfer of technology},
-  author = {{De la Tijera}, Eduardo and Barnes, Francisco},
+  author = {Eduardo {De la Tijera} and Barnes, Francisco},
   commentator={Afghan, Naim},
 }
 
 
-@set{ICUS17:C03:G03,
+@Set{ICUS17:C03:G03,
   entryset = {ICUS17:C03:G03:S01},
   pattern = {ICUS17:C03:G03:[S|X]},
   patterntype = {key},
@@ -460,14 +460,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C03:G03:S01,
+@InProceedings{ICUS17:C03:G03:S01,
   crossref = {ICUS17},
   title = {New and emerging sciences and their impact on development and culture},
   author = {Yamaguchi, Hikoyuki},
   commentator={Shimizu, Nobuyoshi and Ahmad, Israr},
 }
 
-@inproceedings{ICUS17:C03:G03:S02,
+@InProceedings{ICUS17:C03:G03:S02,
   crossref = {ICUS17},
   title = {Astronomy: a planetwide perspective},
   author = {Wickramashinghe, N. Chandra},
@@ -475,7 +475,7 @@
 }
 
 
-@set{ICUS17:C03:G04,
+@Set{ICUS17:C03:G04,
   entryset = {ICUS17:C03:G04:S01},
   pattern = {ICUS17:C03:G04:[S|X]},
   patterntype = {key},
@@ -484,14 +484,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C03:G04:S01,
+@InProceedings{ICUS17:C03:G04:S01,
   crossref = {ICUS17},
   title = {Nutrition program for pre-school children - and African experiment},
   author = {Eraj, Yusuf Ali},
   commentator={Jerome, Norge},
 }
 
-@inproceedings{ICUS17:C03:G04:S02,
+@InProceedings{ICUS17:C03:G04:S02,
   crossref = {ICUS17},
   title = {Drug policy, medicine and social development},
   author = {Islam, Nurul},
@@ -499,7 +499,7 @@
 }
 
 
-@set{ICUS17:C03:G05,
+@Set{ICUS17:C03:G05,
   entryset = {ICUS17:C03:G05:S01},
   pattern = {ICUS17:C03:G05:[S|X]},
   patterntype = {key},
@@ -508,14 +508,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C03:G05:S01,
+@InProceedings{ICUS17:C03:G05:S01,
   crossref = {ICUS17},
   title = {Living in harmony with nature - a case study of Japan},
   author = {Miyawaki, Akira},
   commentator={{Johnson-Marshall}, Percy},
 }
 
-@inproceedings{ICUS17:C03:G05:S02,
+@InProceedings{ICUS17:C03:G05:S02,
   crossref = {ICUS17},
   title = {A secure future: a challenge for development},
   author = {Alonso, Marcelo},
@@ -523,7 +523,7 @@
 }
 
 
-@set{ICUS17:C03:G06,
+@Set{ICUS17:C03:G06,
   entryset = {ICUS17:C03:G06:S01},
   pattern = {ICUS17:C03:G06:[S|X]},
   patterntype = {key},
@@ -532,14 +532,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C03:G06:S01,
+@InProceedings{ICUS17:C03:G06:S01,
   crossref = {ICUS17},
   title = {Perservation of flora and fauna - a moral responsibility of mankind},
   author = {Khan, M. Salar},
   commentator={Reck, Andrew J.},
 }
 
-@inproceedings{ICUS17:C03:G06:S02,
+@InProceedings{ICUS17:C03:G06:S02,
   crossref = {ICUS17},
   title = {Ethics of having access to information and the scientific output of developing countries: a case study of India},
   author = {Arunachalam, Subbiah},
@@ -548,7 +548,7 @@
 
 
 
-@set{ICUS17:C04,
+@Set{ICUS17:C04,
   entryset = {ICUS17:C04},
   pattern = {ICUS17:C04:G\d\d:[S|X]},
   patterntype = {key},
@@ -557,7 +557,7 @@
   chairperson = {Ravindra, Ravi},
 }
 
-@set{ICUS17:C04:G01,
+@Set{ICUS17:C04:G01,
   entryset = {ICUS17:C04:G01:S01},
   pattern = {ICUS17:C04:G01:[S|X]},
   patterntype = {key},
@@ -566,32 +566,32 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C04:G01:S01,
+@InProceedings{ICUS17:C04:G01:S01,
   crossref = {ICUS17},
   title = {The Hindu attitude to knowledge and nature},
   author = {Balasubramanian, R.},
 }
 
-@inproceedings{ICUS17:C04:G01:S02,
+@InProceedings{ICUS17:C04:G01:S02,
   crossref = {ICUS17},
   title = {Science, spirituality and technology - essential and interdependent},
   author = {Anantharaman, T. R.},
 }
 
-@inproceedings{ICUS17:C04:G01:S03,
+@InProceedings{ICUS17:C04:G01:S03,
   crossref = {ICUS17},
   title = {Does the West need the East?},
   author = {{Dy Jr}, Manuel B.},
 }
 
-@inproceedings{ICUS17:C04:G01:S04,
+@InProceedings{ICUS17:C04:G01:S04,
   crossref = {ICUS17},
   title = {Session I discussion},
   author = {{de Silva}, M. W. Padmasiri and {Slavinska-Holy}, Nonna and Novak, Phillip},
 }
 
 
-@set{ICUS17:C04:G02,
+@Set{ICUS17:C04:G02,
   entryset = {ICUS17:C04:G02:S01},
   pattern = {ICUS17:C04:G02:[S|X]},
   patterntype = {key},
@@ -600,38 +600,38 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C04:G02:S01,
+@InProceedings{ICUS17:C04:G02:S01,
   crossref = {ICUS17},
   title = {Science and spirit: the Platonic model},
   author = {Moutsopoulos, Evanghelos},
 }
 
-@inproceedings{ICUS17:C04:G02:S02,
+@InProceedings{ICUS17:C04:G02:S02,
   crossref = {ICUS17},
   title = {Between physics and natural history},
   author = {Nagasaka, Francis G.},
 }
 
-@inproceedings{ICUS17:C04:G02:S03,
+@InProceedings{ICUS17:C04:G02:S03,
   crossref = {ICUS17},
   title = {Lost science},
   author = {Sharpe, R. W.},
 }
 
-@inproceedings{ICUS17:C04:G02:S04,
+@InProceedings{ICUS17:C04:G02:S04,
   crossref = {ICUS17},
   title = {A new metaphysics in support of East-West contemporary physics: East-West contributions},
   author = {Shimmyo, Theodore},
 }
 
-@inproceedings{ICUS17:C04:G02:S05,
+@InProceedings{ICUS17:C04:G02:S05,
   crossref = {ICUS17},
   title = {Session II discussion},
   author = {Gooding, David and Kim, Yong-Woon and Gunaratne, R. D.},
 }
 
 
-@set{ICUS17:C04:G03,
+@Set{ICUS17:C04:G03,
   entryset = {ICUS17:C04:G03:S01},
   pattern = {ICUS17:C04:G03:[S|X]},
   patterntype = {key},
@@ -640,32 +640,32 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C04:G03:S01,
+@InProceedings{ICUS17:C04:G03:S01,
   crossref = {ICUS17},
   title = {The holy nothing versus the quincunx of knowledge: is there a reconciliation?},
   author = {Gerholm, Tor Ragnar},
 }
 
-@inproceedings{ICUS17:C04:G03:S02,
+@InProceedings{ICUS17:C04:G03:S02,
   crossref = {ICUS17},
   title = {Science as a spiritual path: Michael Faraday's apprenticeship},
   author = {Gooding, David Charles},
 }
 
-@inproceedings{ICUS17:C04:G03:S03,
+@InProceedings{ICUS17:C04:G03:S03,
   crossref = {ICUS17},
   title = {Is contemporary science religiously different from classical science?},
   author = {Sudarshan, George},
 }
 
-@inproceedings{ICUS17:C04:G03:S04,
+@InProceedings{ICUS17:C04:G03:S04,
   crossref = {ICUS17},
   title = {Session III-B discussion},
   author = {Murray, Priscilla and Barnhouse, Ruth Tiffany and Penasse, Lucien},
 }
 
 
-@set{ICUS17:C04:G04,
+@Set{ICUS17:C04:G04,
   entryset = {ICUS17:C04:G04:S01},
   pattern = {ICUS17:C04:G04:[S|X]},
   patterntype = {key},
@@ -674,32 +674,32 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C04:G04:S01,
+@InProceedings{ICUS17:C04:G04:S01,
   crossref = {ICUS17},
   title = {Contribution of East and West to spirit-science unification},
   author = {Charon, Jean},
 }
 
-@inproceedings{ICUS17:C04:G04:S02,
+@InProceedings{ICUS17:C04:G04:S02,
   crossref = {ICUS17},
   title = {Brain function and culture},
   author = {Quadens, Olga},
 }
 
-@inproceedings{ICUS17:C04:G04:S03,
+@InProceedings{ICUS17:C04:G04:S03,
   crossref = {ICUS17},
   title = {Science and the Siddharta},
   author = {Lagmay, Alfredo},
 }
 
-@inproceedings{ICUS17:C04:G04:S04,
+@InProceedings{ICUS17:C04:G04:S04,
   crossref = {ICUS17},
   title = {Session IV-B discussion},
   author = {Sharpe, Richard W. and Goel, Atul},
 }
 
 
-@set{ICUS17:C04:G05,
+@Set{ICUS17:C04:G05,
   entryset = {ICUS17:C04:G05:S01},
   pattern = {ICUS17:C04:G05:[S|X]},
   patterntype = {key},
@@ -708,25 +708,25 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C04:G05:S01,
+@InProceedings{ICUS17:C04:G05:S01,
   crossref = {ICUS17},
   title = {The unity of science and spiritual knowledge: the Islamic experience},
   author = {Bakar, Osman Bin},
 }
 
-@inproceedings{ICUS17:C04:G05:S02,
+@InProceedings{ICUS17:C04:G05:S02,
   crossref = {ICUS17},
   title = {The distance between the laboratory and the monastery},
   author = {{de Silva}, M. W. Padmasiri},
 }
 
-@inproceedings{ICUS17:C04:G05:S03,
+@InProceedings{ICUS17:C04:G05:S03,
   crossref = {ICUS17},
   title = {Scientific knowledge and spiritual understanding},
   author = {Murray, Priscilla},
 }
 
-@inproceedings{ICUS17:C04:G05:S04,
+@InProceedings{ICUS17:C04:G05:S04,
   crossref = {ICUS17},
   title = {Session V discussion},
   author = {{Dy Jr}, Manuel B. and Tripathi, G. C. and Thompson, Henry O.},
@@ -734,7 +734,7 @@
 
 
 
-@set{ICUS17:C05,
+@Set{ICUS17:C05,
   entryset = {ICUS17:C05},
   pattern = {ICUS17:C05:G\d\d:[S|X]},
   patterntype = {key},
@@ -743,7 +743,7 @@
   chairperson = {King, Alexander and Skolimowski, Henryk},
 }
 
-@set{ICUS17:C05:G01,
+@Set{ICUS17:C05:G01,
   entryset = {ICUS17:C05:G01:S01},
   pattern = {ICUS17:C05:G01:[S|X]},
   patterntype = {key},
@@ -752,13 +752,13 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C05:G01:S01,
+@InProceedings{ICUS17:C05:G01:S01,
   crossref = {ICUS17},
   title = {Three environments of man},
   author = {King, Alexander},
 }
 
-@inproceedings{ICUS17:C05:G01:S02,
+@InProceedings{ICUS17:C05:G01:S02,
   crossref = {ICUS17},
   title = {Eco-cosmology as the foundation of the new cultural reconstruction},
   author = {Skolimowski, Henryk},
@@ -766,7 +766,7 @@
 }
 
 
-@set{ICUS17:C05:G02,
+@Set{ICUS17:C05:G02,
   entryset = {ICUS17:C05:G02:S01},
   pattern = {ICUS17:C05:G02:[S|X]},
   patterntype = {key},
@@ -775,14 +775,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C05:G02:S01,
+@InProceedings{ICUS17:C05:G02:S01,
   crossref = {ICUS17},
   title = {Making peace with nature},
   author = {Hallen, Patsy},
   commentator = {Gupta, Bina},
 }
 
-@inproceedings{ICUS17:C05:G02:S02,
+@InProceedings{ICUS17:C05:G02:S02,
   crossref = {ICUS17},
   title = {Ecovalues-ecovision-ecoaction: the healing and evolution of person and planet},
   author = {Hill, Stuart B.},
@@ -790,7 +790,7 @@
 }
 
 
-@set{ICUS17:C05:G03,
+@Set{ICUS17:C05:G03,
   entryset = {ICUS17:C05:G03:S01},
   pattern = {ICUS17:C05:G03:[S|X]},
   patterntype = {key},
@@ -799,14 +799,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C05:G03:S01,
+@InProceedings{ICUS17:C05:G03:S01,
   crossref = {ICUS17},
   title = {Eco-politics and the global ecumene},
   author = {Hourani, Ben},
   commentator = {Hautala, Heidi},
 }
 
-@inproceedings{ICUS17:C05:G03:S01,
+@InProceedings{ICUS17:C05:G03:S01,
   crossref = {ICUS17},
   title = {Give the future a chance: moving towards an ecological economy},
   author = {Fornallaz, Pierre},
@@ -814,7 +814,7 @@
 }
 
 
-@set{ICUS17:C05:G04,
+@Set{ICUS17:C05:G04,
   entryset = {ICUS17:C05:G04:S01},
   pattern = {ICUS17:C05:G04:[S|X]},
   patterntype = {key},
@@ -823,13 +823,13 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C05:G04:S01,
+@InProceedings{ICUS17:C05:G04:S01,
   crossref = {ICUS17},
   title = {Towards a new science - a critical appraisal of scientific knowledge},
   author = {Lorimer, David},
 }
 
-@inproceedings{ICUS17:C05:G04:S02,
+@InProceedings{ICUS17:C05:G04:S02,
   crossref = {ICUS17},
   title = {The eco-integrated global society},
   author = {Laszlo, Ervin},
@@ -837,7 +837,7 @@
 }
 
 
-@set{ICUS17:C05:G05,
+@Set{ICUS17:C05:G05,
   entryset = {ICUS17:C05:G05:S01},
   pattern = {ICUS17:C05:G05:[S|X]},
   patterntype = {key},
@@ -846,32 +846,32 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C05:G05:S01,
+@InProceedings{ICUS17:C05:G05:S01,
   crossref = {ICUS17},
   title = {Buddhist ethical ecology},
   author = {Kabilsingh, Chatsumarn},
 }
 
-@inproceedings{ICUS17:C05:G05:S02,
+@InProceedings{ICUS17:C05:G05:S02,
   crossref = {ICUS17},
   title = {Ecological spirituality: its history and meaning},
   author = {{St. John}, Donald P.},
 }
 
-@inproceedings{ICUS17:C05:G05:S03,
+@InProceedings{ICUS17:C05:G05:S03,
   crossref = {ICUS17},
   title = {The way of ecopiety: Confucianism, Taoism and Zen},
   author = {Jung, Hwa Yol},
 }
 
-@inproceedings{ICUS17:C05:G05:S04,
+@InProceedings{ICUS17:C05:G05:S04,
   crossref = {ICUS17},
   title = {Session V discussion},
   author = {Lakusta, Alexis},
 }
 
 
-@set{ICUS17:C05:G06,
+@Set{ICUS17:C05:G06,
   entryset = {ICUS17:C05:G06:S01},
   pattern = {ICUS17:C05:G06:[S|X]},
   patterntype = {key},
@@ -880,14 +880,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C05:G06:S01,
+@InProceedings{ICUS17:C05:G06:S01,
   crossref = {ICUS17},
   title = {Ecological considerations of unification thought},
   author = {Carlson, David},
   commentator = {Wilson, Andrew and Foster, A. Durwood},
 }
 
-@inproceedings{ICUS17:C05:G06:S02,
+@InProceedings{ICUS17:C05:G06:S02,
   crossref = {ICUS17},
   title = {Toward the econphilosophical fruition of biblical faith},
   author = {Foster, A. Durwood},
@@ -896,7 +896,7 @@
 
 
 
-@set{ICUS17:C06,
+@Set{ICUS17:C06,
   entryset = {ICUS17:C06},
   pattern = {ICUS17:C06:G\d\d:[S|X]},
   patterntype = {key},
@@ -905,7 +905,7 @@
   chairperson = {Mellanby, Kenneth and Delgado, Jose M. R.},
 }
 
-@set{ICUS17:C06:G01,
+@Set{ICUS17:C06:G01,
   entryset = {ICUS17:C06:G01:S01},
   pattern = {ICUS17:C06:G01:[S|X]},
   patterntype = {key},
@@ -914,26 +914,26 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C06:G01:S01,
+@InProceedings{ICUS17:C06:G01:S01,
   crossref = {ICUS17},
   title = {Neurobiology of global ideology and values},
   author = {Delgado, Jose M. R.},
 }
 
-@inproceedings{ICUS17:C06:G01:S02,
+@InProceedings{ICUS17:C06:G01:S02,
   crossref = {ICUS17},
   title = {Regulatory systems and values},
   author = {Rakic, Ljubisav},
 }
 
-@inproceedings{ICUS17:C06:G01:S03,
+@InProceedings{ICUS17:C06:G01:S03,
   crossref = {ICUS17},
   title = {Session I discussant: Psychological birth and its neurological roots},
   author = {{Guareschi-Cazzullo}, Adriana},
 }
 
 
-@set{ICUS17:C06:G02,
+@Set{ICUS17:C06:G02,
   entryset = {ICUS17:C06:G02:S01},
   pattern = {ICUS17:C06:G02:[S|X]},
   patterntype = {key},
@@ -942,26 +942,26 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C06:G02:S01,
+@InProceedings{ICUS17:C06:G02:S01,
   crossref = {ICUS17},
   title = {Ethology and social change},
   author = {Scott, John P.},
 }
 
-@inproceedings{ICUS17:C06:G02:S02,
+@InProceedings{ICUS17:C06:G02:S02,
   crossref = {ICUS17},
   title = {Values in a ''value free'' nature},
   author = {Mishra, R. K.},
 }
 
-@inproceedings{ICUS17:C06:G02:S03,
+@InProceedings{ICUS17:C06:G02:S03,
   crossref = {ICUS17},
   title = {Session II discussant: the mind of immunity},
   author = {Rosenfeld, Albert},
 }
 
 
-@set{ICUS17:C06:G03,
+@Set{ICUS17:C06:G03,
   entryset = {ICUS17:C06:G03:S01},
   pattern = {ICUS17:C06:G03:[S|X]},
   patterntype = {key},
@@ -970,26 +970,26 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C06:G03:S01,
+@InProceedings{ICUS17:C06:G03:S01,
   crossref = {ICUS17},
   title = {Integration of biological based values and other universally human values},
   author = {Anderson, Gordon L.},
 }
 
-@inproceedings{ICUS17:C06:G03:S02,
+@InProceedings{ICUS17:C06:G03:S02,
   crossref = {ICUS17},
   title = {New systems of values and ideologies: a general systems approach to find a framework for the future},
   author = {{Rodriguez-Delgado}, Rafael},
 }
 
-@inproceedings{ICUS17:C06:G03:S03,
+@InProceedings{ICUS17:C06:G03:S03,
   crossref = {ICUS17},
   title = {Sessin III discussant},
   author = {Colavito, Maria},
 }
 
 
-@set{ICUS17:C06:G04,
+@Set{ICUS17:C06:G04,
   entryset = {ICUS17:C06:G04:S01},
   pattern = {ICUS17:C06:G04:[S|X]},
   patterntype = {key},
@@ -998,26 +998,26 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C06:G04:S01,
+@InProceedings{ICUS17:C06:G04:S01,
   crossref = {ICUS17},
   title = {Religion and the meaning of life},
   author = {Badham, Paul},
 }
 
-@inproceedings{ICUS17:C06:G04:S02,
+@InProceedings{ICUS17:C06:G04:S02,
   crossref = {ICUS17},
   title = {The biology of religion: the neural connection between science and mysticism},
   author = {{de Nicolas}, Antonio T.},
 }
 
-@inproceedings{ICUS17:C06:G04:S03,
+@InProceedings{ICUS17:C06:G04:S03,
   crossref = {ICUS17},
   title = {Session IV discussant},
   author = {Clark, Francis},
 }
 
 
-@set{ICUS17:C06:G05,
+@Set{ICUS17:C06:G05,
   entryset = {ICUS17:C06:G05:S01},
   pattern = {ICUS17:C06:G05:[S|X]},
   patterntype = {key},
@@ -1026,26 +1026,26 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C06:G05:S01,
+@InProceedings{ICUS17:C06:G05:S01,
   crossref = {ICUS17},
   title = {Toward a new techno-cultural approach: are man-machine values possible?},
   author = {Berger, René},
 }
 
-@inproceedings{ICUS17:C06:G05:S02,
+@InProceedings{ICUS17:C06:G05:S02,
   crossref = {ICUS17},
   title = {Social values and governmental budgets},
   author = {{Parra-Luna}, Francisco},
 }
 
-@inproceedings{ICUS17:C06:G05:S03,
+@InProceedings{ICUS17:C06:G05:S03,
   crossref = {ICUS17},
   title = {Session V discussant: statistical sciences and fuzziness in relation to the brain},
   author = {{Azorin Poch} Francisco},
 }
 
 
-@set{ICUS17:C06:G06,
+@Set{ICUS17:C06:G06,
   entryset = {ICUS17:C06:G06:S01},
   pattern = {ICUS17:C06:G06:[S|X]},
   patterntype = {key},
@@ -1054,7 +1054,7 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C06:G06:S01,
+@InProceedings{ICUS17:C06:G06:S01,
   crossref = {ICUS17},
   title = {Session VI discussants},
   author = {Elzaburu, Fernando and Corson, Samuel},
@@ -1062,7 +1062,7 @@
 
 
 
-@set{ICUS17:C07,
+@Set{ICUS17:C07,
   entryset = {ICUS17:C07},
   pattern = {ICUS17:C07:G\d\d:[S|X]},
   patterntype = {key},
@@ -1071,7 +1071,7 @@
   chairperson = {Kaplan, Morton A. and Barkenbus, Jack},
 }
 
-@set{ICUS17:C07:G01,
+@Set{ICUS17:C07:G01,
   entryset = {ICUS17:C07:G01:S01},
   pattern = {ICUS17:C07:G01:[S|X]},
   patterntype = {key},
@@ -1080,14 +1080,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C07:G01:S01,
+@InProceedings{ICUS17:C07:G01:S01,
   crossref = {ICUS17},
   title = {The attack on deterrence: reflections on morality},
   author = {Garfinkle, Adam},
   commentator = {Kaplan, Morton},
 }
 
-@inproceedings{ICUS17:C07:G01:S02,
+@InProceedings{ICUS17:C07:G01:S02,
   crossref = {ICUS17},
   title = {Deterrence, defense and the sanctification of Hiroshima},
   author = {Weinberg, Alvin M.},
@@ -1095,7 +1095,7 @@
 }
 
 
-@set{ICUS17:C07:G02,
+@Set{ICUS17:C07:G02,
   entryset = {ICUS17:C07:G02:S01},
   pattern = {ICUS17:C07:G02:[S|X]},
   patterntype = {key},
@@ -1104,14 +1104,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C07:G02:S01,
+@InProceedings{ICUS17:C07:G02:S01,
   crossref = {ICUS17},
   title = {The ethics of nuclear deterrence: a Roman Catholic viewpoint},
   author = {David, Austin},
   commentator = {Hamdani, Viqar A.},
 }
 
-@inproceedings{ICUS17:C07:G02:S02,
+@InProceedings{ICUS17:C07:G02:S02,
   crossref = {ICUS17},
   title = {The ethics of nuclear deterrence: developing an ethics of means},
   author = {Murphy, Matthew Francis},
@@ -1119,7 +1119,7 @@
 }
 
 
-@set{ICUS17:C07:G03,
+@Set{ICUS17:C07:G03,
   entryset = {ICUS17:C07:G03:S01},
   pattern = {ICUS17:C07:G03:[S|X]},
   patterntype = {key},
@@ -1128,14 +1128,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C07:G03:S01,
+@InProceedings{ICUS17:C07:G03:S01,
   crossref = {ICUS17},
   title = {Moving to defense dominance: why benefits should outweigh costs},
   author = {Weede, Erich H.},
   commentator = {McForan, Desmond},
 }
 
-@inproceedings{ICUS17:C07:G03:S02,
+@InProceedings{ICUS17:C07:G03:S02,
   crossref = {ICUS17},
   title = {The nuclear deterrence dilemma: in search of a way out},
   author = {Jacchia, Enrico},
@@ -1143,7 +1143,7 @@
 }
 
 
-@set{ICUS17:C07:G04,
+@Set{ICUS17:C07:G04,
   entryset = {ICUS17:C07:G04:S01},
   pattern = {ICUS17:C07:G04:[S|X]},
   patterntype = {key},
@@ -1152,14 +1152,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C07:G04:S01,
+@InProceedings{ICUS17:C07:G04:S01,
   crossref = {ICUS17},
   title = {Philosophical discourse on nuclear deterrence and morality},
   author = {Molinski, Waldemar},
   commentator = {Omidvar, Kazem},
 }
 
-@inproceedings{ICUS17:C07:G04:S02,
+@InProceedings{ICUS17:C07:G04:S02,
   crossref = {ICUS17},
   title = {Defense superiority - the basis for security and world order},
   author = {Afheldt, Horst},
@@ -1167,7 +1167,7 @@
 }
 
 
-@set{ICUS17:C07:G05,
+@Set{ICUS17:C07:G05,
   entryset = {ICUS17:C07:G05:S01},
   pattern = {ICUS17:C07:G05:[S|X]},
   patterntype = {key},
@@ -1176,14 +1176,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C07:G05:S01,
+@InProceedings{ICUS17:C07:G05:S01,
   crossref = {ICUS17},
   title = {Morality, ideological struggle and nuclear deterrence},
   author = {Walsh, Thomas G.},
   commentator = {Smart, Ninian},
 }
 
-@inproceedings{ICUS17:C07:G05:S02,
+@InProceedings{ICUS17:C07:G05:S02,
   crossref = {ICUS17},
   title = {Nuclear deterrence: some ethical and religious issues},
   author = {Rubenstein, Richard},
@@ -1191,7 +1191,7 @@
 }
 
 
-@set{ICUS17:C07:G06,
+@Set{ICUS17:C07:G06,
   entryset = {ICUS17:C07:G06:S01},
   pattern = {ICUS17:C07:G06:[S|X]},
   patterntype = {key},
@@ -1200,7 +1200,7 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS17:C07:G06:S01,
+@InProceedings{ICUS17:C07:G06:S01,
   crossref = {ICUS17},
   title = {Transitions to a moral political order},
   author = {Subrahmanyam, K.},
