--- a/inst/extdata/bibset-raw/icus18.bib
+++ b/inst/extdata/bibset-raw/icus18.bib
@@ -633,7 +633,7 @@
   crossref = {ICUS18},
   title = {U.S. Hispanics and their families: a sociocultural portrait},
   author = {Soriano, Fernando L.},
-  commentator = {{de la Torre}, Armando},
+  commentator = {Armando {de la Torre}},
 }
 
 
@@ -722,7 +722,7 @@
   crossref = {ICUS18},
   title = {The Impact of Immigration on Hispanic Families},
   author = {Sotomayor, Marta},
-  commentator = {{de la Torre}, Armando},
+  commentator = {Armando {de la Torre}},
 }
 
 
@@ -913,7 +913,7 @@
 @InProceedings{ICUS18:C05:G06:S03,
   crossref = {ICUS18},
   title = {The arrow and the cycle},
-  author = {{Zum Brunn}, Emilie},
+  author = {Emilie {Zum Brunn}},
 }
 
 @InProceedings{ICUS18:C05:G06:S04,
