--- a/inst/extdata/bibset-raw/icus08.bib
+++ b/inst/extdata/bibset-raw/icus08.bib
@@ -1,4 +1,4 @@
-@proceedings{ICUS08,
+@Proceedings{ICUS08,
   title = {The responsibility of the academic community in the search for absolute values},
   titleaddon = {The Eighth International Conference on the Unity of the Sciences},
   shorttitle = {ICUS VIII},
@@ -12,44 +12,44 @@
   keywords={primary, program, moonist}
 }
 
-@inproceedings{ICUS08:P01,
+@InProceedings{ICUS08:P01,
   crossref = {ICUS08},
   title = {Founder's Welcoming Address},
   author = {Sun Myung Moon},
 }
 
-@inproceedings{ICUS08:P02,
+@InProceedings{ICUS08:P02,
   crossref = {ICUS08},
   title = {Chairman's Address},
   author = {Wigner, Eugene P. and Eccles, John},
 }
 
-@inproceedings{ICUS08:P03,
+@InProceedings{ICUS08:P03,
   crossref = {ICUS08},
   title = {Committee I Address},
   author = {Kaufmann, Walter},
 }
 
-@inproceedings{ICUS08:P04,
+@InProceedings{ICUS08:P04,
   crossref = {ICUS08},
   title = {Committee II Address},
   author = {Kaplan, Morton A.},
 }
 
-@inproceedings{ICUS08:P05,
+@InProceedings{ICUS08:P05,
   crossref = {ICUS08},
   title = {Committee III Address},
   author = {Peccei, Aurelio},
 }
 
-@inproceedings{ICUS08:P06,
+@InProceedings{ICUS08:P06,
   crossref = {ICUS08},
   title = {Committee IV Address},
   author = {Seitz, Frederick},
 }
 
 
-@set{ICUS08:C01,
+@Set{ICUS08:C01,
   entryset = {ICUS08:C01},
   pattern = {ICUS08:C01:G\d\d:[S|X]},
   patterntype = {key},
@@ -58,7 +58,7 @@
   chairperson = {Kaufmann, Walter},
 }
 
-@set{ICUS08:C01:G01,
+@Set{ICUS08:C01:G01,
   entryset = {ICUS08:C01:G01:S01},
   pattern = {ICUS08:C01:G01:[S|X]},
   patterntype = {key},
@@ -67,14 +67,14 @@
   chairperson = {Kurtz, Paul},
 }
 
-@inproceedings{ICUS08:C01:G01:S01,
+@InProceedings{ICUS08:C01:G01:S01,
   crossref = {ICUS08},
   title = {Humanism \textit{versus} social science?},
   author = {Watkins, J. W. N.},
   commentator = {Bardis, Panos D.},
 }
 
-@inproceedings{ICUS08:C01:G01:S02,
+@InProceedings{ICUS08:C01:G01:S02,
   crossref = {ICUS08},
   title = {Humanism and social science - deceptions and conceptions},
   author = {Munz, Peter},
@@ -84,7 +84,7 @@
 
 
 
-@set{ICUS08:C01:G02,
+@Set{ICUS08:C01:G02,
   entryset = {ICUS08:C01:G02:S01},
   pattern = {ICUS08:C01:G02:[S|X]},
   patterntype = {key},
@@ -93,21 +93,21 @@
   chairperson = {Bartley, W. W. III},
 }
 
-@inproceedings{ICUS08:C01:G02:S01,
+@InProceedings{ICUS08:C01:G02:S01,
   crossref = {ICUS08},
   title = {In what sense can values be absolute?},
   author = {Hintikka, Jaakko},
   commentator = {Briskman, Laurence},
 }
 
-@inproceedings{ICUS08:C01:G02:S02,
+@InProceedings{ICUS08:C01:G02:S02,
   crossref = {ICUS08},
   title = {Being human implies absolute values},
   author = {Settle, Tom},
   commentator = {Jarvie, I. C.},
 }
 
-@inproceedings{ICUS08:C01:G02:S03,
+@InProceedings{ICUS08:C01:G02:S03,
   crossref = {ICUS08},
   title = {On the making and breaking of traditions in art},
   author = {Scharfstein, Ben-Ami},
@@ -116,7 +116,7 @@
 
 
 
-@set{ICUS08:C01:G03,
+@Set{ICUS08:C01:G03,
   entryset = {ICUS08:C01:G03:S01},
   pattern = {ICUS08:C01:G03:[S|X]},
   patterntype = {key},
@@ -125,28 +125,28 @@
   chairperson = {Pribram, Karl H.},
 }
 
-@inproceedings{ICUS08:C01:G03:S01,
+@InProceedings{ICUS08:C01:G03:S01,
   crossref = {ICUS08},
   title = {Transmaterial values within the brain},
   author = {Delgado, José M. R.},
   commentator = {Palay, Sanford L.},
 }
 
-@inproceedings{ICUS08:C01:G03:S02,
+@InProceedings{ICUS08:C01:G03:S02,
   crossref = {ICUS08},
   title = {Brain, freedom and moral responsibility},
   author = {Eccles, John},
   commentator = {Libet, Benjamin},
 }
 
-@inproceedings{ICUS08:C01:G03:S03,
+@InProceedings{ICUS08:C01:G03:S03,
   crossref = {ICUS08},
   title = {Brain, freedom and responsibility},
   author = {Pribram, Karl H.},
   commentator = {Seitelberger, Franz},
 }
 
-@inproceedings{ICUS08:C01:G03:X04,
+@InProceedings{ICUS08:C01:G03:X04,
   crossref = {ICUS08},
   title = {Comments on {Brain, freedom and responsibility}},
   author = {Werblowsky, R. J. Zwi},
@@ -154,7 +154,7 @@
 
 
 
-@set{ICUS08:C01:G04,
+@Set{ICUS08:C01:G04,
   entryset = {ICUS08:C01:G04:S01},
   pattern = {ICUS08:C01:G04:[S|X]},
   patterntype = {key},
@@ -163,21 +163,21 @@
   chairperson = {Soll, Ivan},
 }
 
-@inproceedings{ICUS08:C01:G04:S01,
+@InProceedings{ICUS08:C01:G04:S01,
   crossref = {ICUS08},
   title = {Psychological hedonism},
   author = {Castaneda, Hector-Neri},
   commentator = {Butler, Clark W.},
 }
 
-@inproceedings{ICUS08:C01:G04:S02,
+@InProceedings{ICUS08:C01:G04:S02,
   crossref = {ICUS08},
   title = {Happiness and power},
   author = {Pribram, Karl H.},
   commentator = {Rubenstein, Richard L.},
 }
 
-@inproceedings{ICUS08:C01:G04:S03,
+@InProceedings{ICUS08:C01:G04:S03,
   crossref = {ICUS08},
   title = {What is happiness?},
   author = {Smart, Ninian},
@@ -186,7 +186,7 @@
 
 
 
-@set{ICUS08:C02,
+@Set{ICUS08:C02,
   entryset = {ICUS08:C02},
   pattern = {ICUS08:C02:G\d\d:[S|X]},
   patterntype = {key},
@@ -195,7 +195,7 @@
   chairperson = {Kaplan, Morton A.},
 }
 
-@set{ICUS08:C02:G01,
+@Set{ICUS08:C02:G01,
   entryset = {ICUS08:C02:G01:S01},
   pattern = {ICUS08:C02:G01:[S|X]},
   patterntype = {key},
@@ -204,20 +204,20 @@
   chairperson = {Nasr, Seyyed Hossein},
 }
 
-@inproceedings{ICUS08:C02:G01:S01,
+@InProceedings{ICUS08:C02:G01:S01,
   crossref = {ICUS08},
   title = {General introduction},
   author = {Kaplan, Morton A.},
 }
 
-@inproceedings{ICUS08:C02:G01:S02,
+@InProceedings{ICUS08:C02:G01:S02,
   crossref = {ICUS08},
   title = {The metaphysical and the modern evaluation of change},
   author = {Zolla, Elemiré},
   commentator = {Bahm, Archie J.},
 }
 
-@inproceedings{ICUS08:C02:G01:S03,
+@InProceedings{ICUS08:C02:G01:S03,
   crossref = {ICUS08},
   title = {Contrasting concepts of time and process: contemporary implications},
   author = {Brown, Joseph Epes},
@@ -226,7 +226,7 @@
 
 
 
-@set{ICUS08:C02:G02,
+@Set{ICUS08:C02:G02,
   entryset = {ICUS08:C02:G02:S01},
   pattern = {ICUS08:C02:G02:[S|X]},
   patterntype = {key},
@@ -235,21 +235,21 @@
   chairperson = {Wescott, Roger W.},
 }
 
-@inproceedings{ICUS08:C02:G02:S01,
+@InProceedings{ICUS08:C02:G02:S01,
   crossref = {ICUS08},
   title = {English as the world language: problems and perspectives},
   author = {Novak, Richey},
   commentator = {Makkai, Adam and Lee, Hyun Bok},
 }
 
-@inproceedings{ICUS08:C02:G02:S02,
+@InProceedings{ICUS08:C02:G02:S02,
   crossref = {ICUS08},
   title = {Anthropologists and the rise of a global civilization},
   author = {Skinner, Elliott P.},
   commentator = {Prothro, Edwin Terry},
 }
 
-@inproceedings{ICUS08:C02:G02:S03,
+@InProceedings{ICUS08:C02:G02:S03,
   crossref = {ICUS08},
   title = {Appropriating tradition},
   author = {Dougherty, Jude P.},
@@ -258,7 +258,7 @@
 
 
 
-@set{ICUS08:C02:G03,
+@Set{ICUS08:C02:G03,
   entryset = {ICUS08:C02:G03:S01},
   pattern = {ICUS08:C02:G03:[S|X]},
   patterntype = {key},
@@ -267,21 +267,21 @@
   chairperson = {Radnitzky, Gerard},
 }
 
-@inproceedings{ICUS08:C02:G03:S01,
+@InProceedings{ICUS08:C02:G03:S01,
   crossref = {ICUS08},
   title = {Historical aspects of the development of civilization and the changing self-conception of man},
   author = {Taylor, Alistair M.},
   commentator = {{King-Farlow}, John and Tejera, Victorino},
 }
 
-@inproceedings{ICUS08:C02:G03:S02,
+@InProceedings{ICUS08:C02:G03:S02,
   crossref = {ICUS08},
   title = {Is the scientific enterprise self-refuting?},
   author = {Flew, Anthony},
   commentator = {Minogue, Kenneth R. and Kielmansegg, Peter Graf},
 }
 
-@inproceedings{ICUS08:C02:G03:S03,
+@InProceedings{ICUS08:C02:G03:S03,
   crossref = {ICUS08},
   title = {Ethics and evolution},
   author = {Jantsch, Erich},
@@ -290,7 +290,7 @@
 
 
 
-@set{ICUS08:C02:G04,
+@Set{ICUS08:C02:G04,
   entryset = {ICUS08:C02:G04:S01},
   pattern = {ICUS08:C02:G04:[S|X]},
   patterntype = {key},
@@ -299,21 +299,21 @@
   chairperson = {Botchway, Francis A.},
 }
 
-@inproceedings{ICUS08:C02:G04:S01,
+@InProceedings{ICUS08:C02:G04:S01,
   crossref = {ICUS08},
   title = {Resources: scarcity or abundance?},
   author = {Ayres, Robert U.},
   commentator = {Jaber, Kamel Abu},
 }
 
-@inproceedings{ICUS08:C02:G04:S02,
+@InProceedings{ICUS08:C02:G04:S02,
   crossref = {ICUS08},
   title = {Resources and economic development},
   author = {Scalera, Garrett N.},
   commentator = {Breytenbach, Willie},
 }
 
-@inproceedings{ICUS08:C02:G04:S03,
+@InProceedings{ICUS08:C02:G04:S03,
   crossref = {ICUS08},
   title = {Economic resources and political development - a North-South equation},
   author = {Mazrui, Ali A.},
@@ -322,7 +322,7 @@
 
 
 
-@set{ICUS08:C03,
+@Set{ICUS08:C03,
   entryset = {ICUS08:C03},
   pattern = {ICUS08:C03:G\d\d:[S|X]},
   patterntype = {key},
@@ -331,7 +331,7 @@
   chairperson = {Peccei, Aurelio},
 }
 
-@set{ICUS08:C03:G01,
+@Set{ICUS08:C03:G01,
   entryset = {ICUS08:C03:G01:S01},
   pattern = {ICUS08:C03:G01:[S|X]},
   patterntype = {key},
@@ -340,21 +340,21 @@
   chairperson = {Gray, Elizabeth Dodson},
 }
 
-@inproceedings{ICUS08:C03:G01:S01,
+@InProceedings{ICUS08:C03:G01:S01,
   crossref = {ICUS08},
   title = {How does material well-being affect 'happiness'?},
   author = {Krebs, Hans A.},
   commentator = {Michael, Donald N.},
 }
 
-@inproceedings{ICUS08:C03:G01:S02,
+@InProceedings{ICUS08:C03:G01:S02,
   crossref = {ICUS08},
   title = {The ecological foundation of a quality of life},
   author = {Thorhaug, Anitra},
   commentator = {Willard, Beatrice E.},
 }
 
-@inproceedings{ICUS08:C03:G01:S03,
+@InProceedings{ICUS08:C03:G01:S03,
   crossref = {ICUS08},
   title={Material abundance and happiness: a third world perspective},
   author={Castuera, Ignacio},
@@ -363,7 +363,7 @@
 
 
 
-@set{ICUS08:C03:G02,
+@Set{ICUS08:C03:G02,
   entryset = {ICUS08:C03:G02:S01},
   pattern = {ICUS08:C03:G02:[S|X]},
   patterntype = {key},
@@ -372,14 +372,14 @@
   chairperson = {Stolnitz, George J.},
 }
 
-@inproceedings{ICUS08:C03:G02:S01,
+@InProceedings{ICUS08:C03:G02:S01,
   crossref = {ICUS08},
   title = {World population trends},
   author = {Baum, Sam},
   commentator = {Herr, David},
 }
 
-@inproceedings{ICUS08:C03:G02:S02,
+@InProceedings{ICUS08:C03:G02:S02,
   crossref = {ICUS08},
   title = {Ethical dimensions of world population trends},
   author = {Rubenstein, Richard L.},
@@ -388,7 +388,7 @@
 
 
 
-@set{ICUS08:C03:G03,
+@Set{ICUS08:C03:G03,
   entryset = {ICUS08:C03:G03:S01},
   pattern = {ICUS08:C03:G03:[S|X]},
   patterntype = {key},
@@ -397,21 +397,21 @@
   chairperson = {Pratt, Edward O.},
 }
 
-@inproceedings{ICUS08:C03:G03:S01,
+@InProceedings{ICUS08:C03:G03:S01,
   crossref = {ICUS08},
   title = {Sociobehavioral aspects of health studies},
   author = {Elinson, Jack},
   commentator = {Cogswell, Betty E.},
 }
 
-@inproceedings{ICUS08:C03:G03:S02,
+@InProceedings{ICUS08:C03:G03:S02,
   crossref = {ICUS08},
   title = {Sociobehavioral aspects of health studies},
   author={Akerele, C. O.},
   commentator = {Chuke, P. O.},
 }
 
-@inproceedings{ICUS08:C03:G03:S03,
+@InProceedings{ICUS08:C03:G03:S03,
   crossref = {ICUS08},
   title = {Sociobehavioral aspects of health studies},
   author={Samarawickrama, Gervin},
@@ -420,7 +420,7 @@
 
 
 
-@set{ICUS08:C03:G04,
+@Set{ICUS08:C03:G04,
   entryset = {ICUS08:C03:G04:S01},
   pattern = {ICUS08:C03:G04:[S|X]},
   patterntype = {key},
@@ -429,28 +429,28 @@
   chairperson = {Singer, S. Fred},
 }
 
-@inproceedings{ICUS08:C03:G04:S01,
+@InProceedings{ICUS08:C03:G04:S01,
   crossref = {ICUS08},
   title = {The effects of population growth on renewable and other resources},
-  author = {{Villee Jr}, Claude A.},
+  author = {Claude A. Villee Jr},
   commentator = {Melamed, A. and Galantay, Ervin Y.},
 }
 
-@inproceedings{ICUS08:C03:G04:S02,
+@InProceedings{ICUS08:C03:G04:S02,
   crossref = {ICUS08},
   title = {Labor, migration, international trade},
   author = {Demeny, Paul},
   commentator = {Elahwal, Abdel Karim Aly and Kuroda, Toshio},
 }
 
-@inproceedings{ICUS08:C03:G04:S03,
+@InProceedings{ICUS08:C03:G04:S03,
   crossref = {ICUS08},
   title = {Mechanisms for mediation},
   author={Stoessinger, John G.},
   commentator = {Hazleton, Jared},
 }
 
-@inproceedings{ICUS08:C03:G04:X04,
+@InProceedings{ICUS08:C03:G04:X04,
   crossref = {ICUS08},
   title = {Comments on {Consequences of World Population Growth}},
   author = {Weinberg, Alvin M.},
@@ -458,7 +458,7 @@
 
 
 
-@set{ICUS08:C04,
+@Set{ICUS08:C04,
   entryset = {ICUS08:C04},
   pattern = {ICUS08:C04:G\d\d:[S|X]},
   patterntype = {key},
@@ -467,7 +467,7 @@
   chairperson = {Seitz, Frederick},
 }
 
-@set{ICUS08:C04:G01,
+@Set{ICUS08:C04:G01,
   entryset = {ICUS08:C04:G01:S01},
   pattern = {ICUS08:C04:G01:[S|X]},
   patterntype = {key},
@@ -476,14 +476,14 @@
   chairperson = {Ferré, Frederick},
 }
 
-@inproceedings{ICUS08:C04:G01:S01,
+@InProceedings{ICUS08:C04:G01:S01,
   crossref = {ICUS08},
   title = {Hope through post-modern technology},
   author = {Lewis, W. David},
   commentator = {Sass, Hans-Martin and Harman, Willis},
 }
 
-@inproceedings{ICUS08:C04:G01:S02,
+@InProceedings{ICUS08:C04:G01:S02,
   crossref = {ICUS08},
   title = {A theological critique of 'Hope through technology'},
   author = {Vahanian, Gabriel},
@@ -492,7 +492,7 @@
 
 
 
-@set{ICUS08:C04:G02,
+@Set{ICUS08:C04:G02,
   entryset = {ICUS08:C04:G02:S01},
   pattern = {ICUS08:C04:G02:[S|X]},
   patterntype = {key},
@@ -501,21 +501,21 @@
   chairperson = {King, Alexander},
 }
 
-@inproceedings{ICUS08:C04:G02:S01,
+@InProceedings{ICUS08:C04:G02:S01,
   crossref = {ICUS08},
   title = {Science and technology for developing nations: a search for answers},
   author = {Goldsmith, Maurice},
   commentator = {Turan, Ilter},
 }
 
-@inproceedings{ICUS08:C04:G02:S02,
+@InProceedings{ICUS08:C04:G02:S02,
   crossref = {ICUS08},
   title = {A policy to develop science and technology in a university},
   author = {Pincheira, Guido},
   commentator = {Alonso, Marcelo},
 }
 
-@inproceedings{ICUS08:C04:G02:S03,
+@InProceedings{ICUS08:C04:G02:S03,
   crossref = {ICUS08},
   title = {Science and technology policies for developing nations},
   author = {Srinivasan, Mangalam},
@@ -524,7 +524,7 @@
 
 
 
-@set{ICUS08:C04:G03,
+@Set{ICUS08:C04:G03,
   entryset = {ICUS08:C04:G03:S01},
   pattern = {ICUS08:C04:G03:[S|X]},
   patterntype = {key},
@@ -533,21 +533,21 @@
   chairperson = {Weinberg, Alvin M.},
 }
 
-@inproceedings{ICUS08:C04:G03:S01,
+@InProceedings{ICUS08:C04:G03:S01,
   crossref = {ICUS08},
   title = {Frontiers of science and technology},
   author = {Schaff, Adam},
   commentator = {Hammond, Paul Y.},
 }
 
-@inproceedings{ICUS08:C04:G03:S02,
+@InProceedings{ICUS08:C04:G03:S02,
   crossref = {ICUS08},
   title = {Frontiers of technology},
   author = {Nilsson, Sam},
-  commentator = {{De Claris}, Nicholas},
+  commentator = {Nicholas {De Claris}},
 }
 
-@inproceedings{ICUS08:C04:G03:S03,
+@InProceedings{ICUS08:C04:G03:S03,
   crossref = {ICUS08},
   title = {Frontiers of science},
   author = {Jammer, Max},
@@ -556,7 +556,7 @@
 
 
 
-@set{ICUS08:C04:G04,
+@Set{ICUS08:C04:G04,
   entryset = {ICUS08:C04:G04:S01},
   pattern = {ICUS08:C04:G04:[S|X]},
   patterntype = {key},
@@ -565,31 +565,31 @@
   chairperson = {Piganiol, Pierre},
 }
 
-@inproceedings{ICUS08:C04:G04:S01,
+@InProceedings{ICUS08:C04:G04:S01,
   crossref = {ICUS08},
   title = {Socialism and capitalism - ideology or mechanism? A question of survival?},
   author = {Lerner, Abba P.},
 }
 
-@inproceedings{ICUS08:C04:G04:S02,
+@InProceedings{ICUS08:C04:G04:S02,
   crossref = {ICUS08},
   title = {Uncertainties of the 1990's},
   author = {Szalai, Alexander},
 }
 
-@inproceedings{ICUS08:C04:G04:S03,
+@InProceedings{ICUS08:C04:G04:S03,
   crossref = {ICUS08},
   title = {The coming age of mankind},
   author = {Laszlo, Ervin},
 }
 
-@inproceedings{ICUS08:C04:G04:S04,
+@InProceedings{ICUS08:C04:G04:S04,
   crossref = {ICUS08},
   title = {How big should cities grow? The concept of optimum size and its relevance to urban concentration in developing countries},
   author = {Galantay, Ervin Y.},
 }
 
-@inproceedings{ICUS08:C04:G04:X05,
+@InProceedings{ICUS08:C04:G04:X05,
   crossref = {ICUS08},
   title = {Comments on {A Look at the 1990's - What Does the Future Hold?}},
   author = {{Menke-Gluckert}, P.},
@@ -597,7 +597,7 @@
 
 
 
-@set{ICUS08:C05:G01,
+@Set{ICUS08:C05:G01,
   entryset = {ICUS08:C05:G01:S01},
   pattern = {ICUS08:C05:G01:[S|X]},
   patterntype = {key},
@@ -606,14 +606,14 @@
   moderator = {Barker, Eileen V.},
 }
 
-@inproceedings{ICUS08:C05:G01:S01,
+@InProceedings{ICUS08:C05:G01:S01,
   crossref = {ICUS08},
   title = {Is there life after death?},
   author = {Kurtz, Paul and Melvin, Mael A. and Ryzl, Milan},
 }
 
 
-@set{ICUS08:C05:G02,
+@Set{ICUS08:C05:G02,
   entryset = {ICUS08:C05:G02:S01},
   pattern = {ICUS08:C05:G02:[S|X]},
   patterntype = {key},
@@ -622,14 +622,14 @@
   moderator = {Berger, René},
 }
 
-@inproceedings{ICUS08:C05:G02:S01,
+@InProceedings{ICUS08:C05:G02:S01,
   crossref = {ICUS08},
   title = {Preservation of Culture: What are the limits?},
   author = {Montilus, Guerin C. and Bardis, Panos D. and Jamali, Mohammed Fadhei},
 }
 
 
-@set{ICUS08:C05:G03,
+@Set{ICUS08:C05:G03,
   entryset = {ICUS08:C05:G03:S01},
   pattern = {ICUS08:C05:G03:[S|X]},
   patterntype = {key},
@@ -638,14 +638,14 @@
   moderator = {Lamberton, Donald M.},
 }
 
-@inproceedings{ICUS08:C05:G03:S01,
+@InProceedings{ICUS08:C05:G03:S01,
   crossref = {ICUS08},
   title = {What are the Values Implicit in Economic Development?},
   author = {Gulek, Kasim and Sanfuentes, Andres and Kim, William S.},
 }
 
 
-@set{ICUS08:C05:G04,
+@Set{ICUS08:C05:G04,
   entryset = {ICUS08:C05:G04:S01},
   pattern = {ICUS08:C05:G04:[S|X]},
   patterntype = {key},
@@ -654,20 +654,20 @@
   moderator = {Lerner, Daniel},
 }
 
-@inproceedings{ICUS08:C05:G04:S01,
+@InProceedings{ICUS08:C05:G04:S01,
   crossref = {ICUS08},
   title = {Normalization of Violence through Mass Communication},
-  author = {Mickelson, Sig and Hart, Henry O. and {von Stackelberg}, Karl-Georg Graf},
+  author = {Mickelson, Sig and Hart, Henry O. and Karl-Georg {Graf von Stackelberg}},
 }
 
-@inproceedings{ICUS08:C05:G04:X02,
+@InProceedings{ICUS08:C05:G04:X02,
   crossref = {ICUS08},
   title = {Comments on {Normalization of Violence through Mass Communication}},
   author = {Ferracuti, Franco},
 }
 
 
-@set{ICUS08:C05:G05,
+@Set{ICUS08:C05:G05,
   entryset = {ICUS08:C05:G05:S01},
   pattern = {ICUS08:C05:G05:[S|X]},
   patterntype = {key},
@@ -676,14 +676,14 @@
   moderator = {},
 }
 
-@inproceedings{ICUS08:C05:G05:S01,
+@InProceedings{ICUS08:C05:G05:S01,
   crossref = {ICUS08},
   title = {Do New Patterns of Wealth Creation Demand New Structures of Society?},
   author = {Williamson, D. T. N. and Malik, F. B. and Jantsch, Erich},
 }
 
 
-@set{ICUS08:C05:G06,
+@Set{ICUS08:C05:G06,
   entryset = {ICUS08:C05:G06:S01},
   pattern = {ICUS08:C05:G06:[S|X]},
   patterntype = {key},
@@ -692,14 +692,14 @@
   moderator = {Gerholm, Tor Ragnar},
 }
 
-@inproceedings{ICUS08:C05:G06:S01,
+@InProceedings{ICUS08:C05:G06:S01,
   crossref = {ICUS08},
   title = {Human Knowledge and Scientific Models},
   author = {Wold, Herman and Marc, Alexandre},
 }
 
 
-@set{ICUS08:C05:G07,
+@Set{ICUS08:C05:G07,
   entryset = {ICUS08:C05:G07:S01},
   pattern = {ICUS08:C05:G07:[S|X]},
   patterntype = {key},
@@ -708,14 +708,14 @@
   moderator = {Pringle, J. W. S.},
 }
 
-@inproceedings{ICUS08:C05:G07:S01,
+@InProceedings{ICUS08:C05:G07:S01,
   crossref = {ICUS08},
   title = {Sociobiology and Value Systems},
   author = {Shepard, Paul and Chance, M. R. A. and Caspari, Ernest W.},
 }
 
 
-@set{ICUS08:C05:G08,
+@Set{ICUS08:C05:G08,
   entryset = {ICUS08:C05:G08:S01},
   pattern = {ICUS08:C05:G08:[S|X]},
   patterntype = {key},
@@ -724,14 +724,14 @@
   moderator = {Jaraningrat, Koent},
 }
 
-@inproceedings{ICUS08:C05:G08:S01,
+@InProceedings{ICUS08:C05:G08:S01,
   crossref = {ICUS08},
   title = {The Becoming of a Human Person: Mother-Child Relations in the First Year of Life},
   author = {Trevarthen, Colwyn and McGuiness, Diane},
 }
 
 
-@set{ICUS08:C05:G09,
+@Set{ICUS08:C05:G09,
   entryset = {ICUS08:C05:G09:S01},
   pattern = {ICUS08:C05:G09:[S|X]},
   patterntype = {key},
@@ -740,14 +740,14 @@
   moderator = {Mellanby, Kenneth},
 }
 
-@inproceedings{ICUS08:C05:G09:S01,
+@InProceedings{ICUS08:C05:G09:S01,
   crossref = {ICUS08},
   title = {Man's Place in the World Eco-System},
   author = {Mellanby, Kenneth and {de Reuck}, Anthony V. S.},
 }
 
 
-@set{ICUS08:C05:G10,
+@Set{ICUS08:C05:G10,
   entryset = {ICUS08:C05:G10:S01},
   pattern = {ICUS08:C05:G10:[S|X]},
   patterntype = {key},
@@ -756,26 +756,26 @@
   moderator = {Dewan, M. L.},
 }
 
-@inproceedings{ICUS08:C05:G10:S01,
+@InProceedings{ICUS08:C05:G10:S01,
   crossref = {ICUS08},
   title = {Assessment of immediate and foreseeable problem areas},
   author = {Sukhatme, P. V.},
 }
 
-@inproceedings{ICUS08:C05:G10:S02,
+@InProceedings{ICUS08:C05:G10:S02,
   crossref = {ICUS08},
   title = {The oceans as food source for the world},
   author = {Johnson, Milton G.},
 }
 
-@inproceedings{ICUS08:C05:G10:S03,
+@InProceedings{ICUS08:C05:G10:S03,
   crossref = {ICUS08},
   title = {Economic dimensions of world hunger},
   author = {Denman, D. R.},
 }
 
 
-@inproceedings{ICUS08:C05:G11:S01,
+@InProceedings{ICUS08:C05:G11:S01,
   crossref = {ICUS08},
   title = {Energy and the Urban Effect},
   author = {Soleri, Paolo},
