--- a/inst/extdata/bibset-raw/icus14.bib
+++ b/inst/extdata/bibset-raw/icus14.bib
@@ -1,4 +1,4 @@
-@proceedings{ICUS14,
+@Proceedings{ICUS14,
   title = {Absolute Values and the New Cultural Revolution},
   titleaddon = {Fourteenth International Conference on the Unity of the Sciences},
   shorttitle = {ICUS XIV},
@@ -12,19 +12,19 @@
   keywords={primary, program, moonist}
 }
 
-@inproceedings{ICUS14:P01,
+@InProceedings{ICUS14:P01,
   crossref = {ICUS14},
   title = {The presumption of reason},
   author = {Hayek, Frederick A.},
 }
 
-@inproceedings{ICUS14:P02,
+@InProceedings{ICUS14:P02,
   crossref = {ICUS14},
   title = {Multidisciplinary perspectives on world problems},
   author = {King, Alexander},
 }
 
-@set{ICUS14:C01,
+@Set{ICUS14:C01,
   entryset = {ICUS14:C01},
   pattern = {ICUS14:C01:G\d\d:[S|X]},
   patterntype = {key},
@@ -33,7 +33,7 @@
   chairperson = {Weinberg, Alvin M. and Alonso, Marcelo},
 }
 
-@set{ICUS14:C01:G01,
+@Set{ICUS14:C01:G01,
   entryset = {ICUS14:C01:G01:S01},
   pattern = {ICUS14:C01:G01:[S|X]},
   patterntype = {key},
@@ -42,21 +42,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C01:G01:S01,
+@InProceedings{ICUS14:C01:G01:S01,
   crossref = {ICUS14},
   title = {On the origin of order in the universe},
   author = {Sexl, Roman},
   commentator = {{von Meyenn}, Karl},
 }
 
-@inproceedings{ICUS14:C01:G01:S02,
+@InProceedings{ICUS14:C01:G01:S02,
   crossref = {ICUS14},
   title = {Gravitation and the origin of large structure in the universe},
   author = {Bekenstein, Jacob D.},
   commentator = {Kurti, Nicholas and Gunzig, Edgar},
 }
 
-@inproceedings{ICUS14:C01:G01:S03,
+@InProceedings{ICUS14:C01:G01:S03,
   crossref = {ICUS14},
   title = {Particle physics and the early universe},
   author = {Fritzsch, Harold},
@@ -65,7 +65,7 @@
 
 
 
-@set{ICUS14:C01:G02,
+@Set{ICUS14:C01:G02,
   entryset = {ICUS14:C01:G02:S01},
   pattern = {ICUS14:C01:G02:[S|X]},
   patterntype = {key},
@@ -74,14 +74,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C01:G02:S01,
+@InProceedings{ICUS14:C01:G02:S01,
   crossref = {ICUS14},
   title = {Self-organization and evolution through fluctuations and instabilities},
   author = {Velarde, Manuel G.},
   commentator = {Romo, Luis A.},
 }
 
-@inproceedings{ICUS14:C01:G02:S02,
+@InProceedings{ICUS14:C01:G02:S02,
   crossref = {ICUS14},
   title = {The origin of life: the emergence of organized self-replicating molecular systems},
   author = {Atalay, Bulent I.},
@@ -90,7 +90,7 @@
 
 
 
-@set{ICUS14:C01:G03,
+@Set{ICUS14:C01:G03,
   entryset = {ICUS14:C01:G03:S01},
   pattern = {ICUS14:C01:G03:[S|X]},
   patterntype = {key},
@@ -99,21 +99,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C01:G03:S01,
+@InProceedings{ICUS14:C01:G03:S01,
   crossref = {ICUS14},
   title = {Complexity and the structure and dynamics of the genome},
   author = {Pincheira, Guido},
   commentator = {Gomez, Juan A.},
 }
 
-@inproceedings{ICUS14:C01:G03:S02,
+@InProceedings{ICUS14:C01:G03:S02,
   crossref = {ICUS14},
   title = {Organization and change in eukaryotic cells},
-  author = {{Villee Jr}, Claude A.},
+  author = {Claude A. {Villee Jr}},
   commentator = {Park, Charles},
 }
 
-@inproceedings{ICUS14:C01:G03:S03,
+@InProceedings{ICUS14:C01:G03:S03,
   crossref = {ICUS14},
   title = {Mind: mapping and reconstruction of reality},
   author = {Lowenhard, Percy},
@@ -122,7 +122,7 @@
 
 
 
-@set{ICUS14:C01:G04,
+@Set{ICUS14:C01:G04,
   entryset = {ICUS14:C01:G04:S01},
   pattern = {ICUS14:C01:G04:[S|X]},
   patterntype = {key},
@@ -131,21 +131,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C01:G04:S01,
+@InProceedings{ICUS14:C01:G04:S01,
   crossref = {ICUS14},
   title = {Self-organization and technological change in the economic system},
   author = {Ayres, Robert U.},
   commentator = {{Georgescu-Roegen}, Nicholas and Ollom, John F.},
 }
 
-@inproceedings{ICUS14:C01:G04:S02,
+@InProceedings{ICUS14:C01:G04:S02,
   crossref = {ICUS14},
   title = {The evolution of the extended order},
   author = {Radnitzky, Gerard},
   commentator = {Flew, Antony and Petroni, Angelo M.},
 }
 
-@inproceedings{ICUS14:C01:G04:S03,
+@InProceedings{ICUS14:C01:G04:S03,
   crossref = {ICUS14},
   title = {Integrative concepts in the physical sciences},
   author = {Jammer, Max},
@@ -155,7 +155,7 @@
 
 
 
-@set{ICUS14:C01:G05,
+@Set{ICUS14:C01:G05,
   entryset = {ICUS14:C01:G04:S01},
   pattern = {ICUS14:C01:G04:[S|X]},
   patterntype = {key},
@@ -164,7 +164,7 @@
   moderator = {Weinberg, Alvin M.},
 }
 
-@inproceedings{ICUS14:C01:G05:S01,
+@InProceedings{ICUS14:C01:G05:S01,
   crossref = {ICUS14},
   title = {(untitled)},
   author = {Hayek, Frederick A. and Wigner, Eugene P. and Gerholm, Tor Ragnar},
@@ -172,7 +172,7 @@
 
 
 
-@set{ICUS14:C02,
+@Set{ICUS14:C02,
   entryset = {ICUS14:C02},
   pattern = {ICUS14:C02:G\d\d:[S|X]},
   patterntype = {key},
@@ -181,7 +181,7 @@
   chairperson = {Cappelletti, Vincenzo},
 }
 
-@set{ICUS14:C02:G01,
+@Set{ICUS14:C02:G01,
   entryset = {ICUS14:C02:G01:S01},
   pattern = {ICUS14:C02:G01:[S|X]},
   patterntype = {key},
@@ -190,21 +190,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C02:G01:S01,
+@InProceedings{ICUS14:C02:G01:S01,
   crossref = {ICUS14},
   title = {The role of mathematics in scientific synthesis and the interpretation of quantum theory},
   author = {Accardi, Luigi},
   commentator = {Beltrametti, Enrico},
 }
 
-@inproceedings{ICUS14:C02:G01:S02,
+@InProceedings{ICUS14:C02:G01:S02,
   crossref = {ICUS14},
   title = {Acoustical and optical waves: a confocal point in physics},
   author = {Alippi, Adriano},
   commentator = {Gazzeri, Giovanni},
 }
 
-@inproceedings{ICUS14:C02:G01:S03,
+@InProceedings{ICUS14:C02:G01:S03,
   crossref = {ICUS14},
   title = {The concept of evolution as a synthetic tool in science: its strength and limits},
   author = {Vollmer, Gerhard},
@@ -213,7 +213,7 @@
 
 
 
-@set{ICUS14:C02:G02,
+@Set{ICUS14:C02:G02,
   entryset = {ICUS14:C02:G02:S01},
   pattern = {ICUS14:C02:G02:[S|X]},
   patterntype = {key},
@@ -222,14 +222,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C02:G02:S01,
+@InProceedings{ICUS14:C02:G02:S01,
   crossref = {ICUS14},
   title = {Cultural syntheses: epistemological and moral},
   author = {Barker, Eileen V.},
   commentator = {Elaigwu, J. Isawa},
 }
 
-@inproceedings{ICUS14:C02:G02:S02,
+@InProceedings{ICUS14:C02:G02:S02,
   crossref = {ICUS14},
   title = {Role of the mass medium in cultural synthesis},
   author = {Goldsmith, Maurice},
@@ -237,7 +237,7 @@
 
 
 
-@set{ICUS14:C02:G03,
+@Set{ICUS14:C02:G03,
   entryset = {ICUS14:C02:G03:S01},
   pattern = {ICUS14:C02:G03:[S|X]},
   patterntype = {key},
@@ -246,21 +246,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C02:G03:S01,
+@InProceedings{ICUS14:C02:G03:S01,
   crossref = {ICUS14},
   title = {Time, space, technology and collective identity},
   author = {Segre, Dan V.},
   commentator = {{De Silva}, Padmasiri},
 }
 
-@inproceedings{ICUS14:C02:G03:S02,
+@InProceedings{ICUS14:C02:G03:S02,
   crossref = {ICUS14},
   title = {Peace as a project of interracial synthesis},
   author = {Bardis, Panos D.},
   commentator = {Gori, Umberto},
 }
 
-@inproceedings{ICUS14:C02:G03:S03,
+@InProceedings{ICUS14:C02:G03:S03,
   crossref = {ICUS14},
   title = {Cultural synthesis in architecture},
   author = {Galantay, Ervin Y.},
@@ -269,7 +269,7 @@
 
 
 
-@set{ICUS14:C02:G04,
+@Set{ICUS14:C02:G04,
   entryset = {ICUS14:C02:G04:S01},
   pattern = {ICUS14:C02:G04:[S|X]},
   patterntype = {key},
@@ -278,14 +278,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C02:G04:S01,
+@InProceedings{ICUS14:C02:G04:S01,
   crossref = {ICUS14},
   title = {The urban effect: a doctrine of the infant god},
   author = {Soleri, Paolo},
   commentator = {Byers, Paul},
 }
 
-@inproceedings{ICUS14:C02:G04:S02,
+@InProceedings{ICUS14:C02:G04:S02,
   crossref = {ICUS14},
   title = {Religion as an experience of synthesis},
   author = {Rubenstein, Richard L.},
@@ -294,7 +294,7 @@
 
 
 
-@set{ICUS14:C02:G05,
+@Set{ICUS14:C02:G05,
   entryset = {ICUS14:C02:G05:S01},
   pattern = {ICUS14:C02:G05:[S|X]},
   patterntype = {key},
@@ -303,7 +303,7 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C02:G05:S01,
+@InProceedings{ICUS14:C02:G05:S01,
   crossref = {ICUS14},
   title = {The special characteristic of the reception of Western culture and the formation of civil society in the three Oriental countries of China, Japan and Korea},
   author = {Yoon, Se Won},
@@ -313,7 +313,7 @@
 
 
 
-@set{ICUS14:C03,
+@Set{ICUS14:C03,
   entryset = {ICUS14:C03},
   pattern = {ICUS14:C03:G\d\d:[S|X]},
   patterntype = {key},
@@ -322,7 +322,7 @@
   chairperson = {Charon, Jean},
 }
 
-@set{ICUS14:C03:G01,
+@Set{ICUS14:C03:G01,
   entryset = {ICUS14:C03:G01:S01},
   pattern = {ICUS14:C03:G01:[S|X]},
   patterntype = {key},
@@ -331,13 +331,13 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C03:G01:S01,
+@InProceedings{ICUS14:C03:G01:S01,
   crossref = {ICUS14},
   title = {Forms, symbols and the structure of the brain},
   author = {Delgado, Jose M. R.},
 }
 
-@inproceedings{ICUS14:C03:G01:S02,
+@InProceedings{ICUS14:C03:G01:S02,
   crossref = {ICUS14},
   title = {Symbolization and transmutation},
   author = {Bonardel, Franciose},
@@ -345,7 +345,7 @@
 
 
 
-@set{ICUS14:C03:G02,
+@Set{ICUS14:C03:G02,
   entryset = {ICUS14:C03:G02:S01},
   pattern = {ICUS14:C03:G02:[S|X]},
   patterntype = {key},
@@ -354,13 +354,13 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C03:G02:S01,
+@InProceedings{ICUS14:C03:G02:S01,
   crossref = {ICUS14},
   title = {The roots of behavior in contemporary physics},
   author = {Charon, Jean E.},
 }
 
-@inproceedings{ICUS14:C03:G02:S02,
+@InProceedings{ICUS14:C03:G02:S02,
   crossref = {ICUS14},
   title = {The good and the divine},
   author = {Bonnier, Henri},
@@ -368,7 +368,7 @@
 
 
 
-@set{ICUS14:C03:G03,
+@Set{ICUS14:C03:G03,
   entryset = {ICUS14:C03:G03:S01},
   pattern = {ICUS14:C03:G03:[S|X]},
   patterntype = {key},
@@ -377,19 +377,19 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C03:G03:S01,
+@InProceedings{ICUS14:C03:G03:S01,
   crossref = {ICUS14},
   title = {Structures, symbols and the ''theatre of the mind''},
   author = {Skolimowski, Henryk},
 }
 
-@inproceedings{ICUS14:C03:G03:S02,
+@InProceedings{ICUS14:C03:G03:S02,
   crossref = {ICUS14},
   title = {Formism: tradition and modernity},
   author = {Maffesoli, Michel},
 }
 
-@inproceedings{ICUS14:C03:G03:S03,
+@InProceedings{ICUS14:C03:G03:S03,
   crossref = {ICUS14},
   title = {What is science that thou art mindful of her?},
   author = {Ravindra, Ravi},
@@ -397,7 +397,7 @@
 
 
 
-@set{ICUS14:C03:G05,
+@Set{ICUS14:C03:G05,
   entryset = {ICUS14:C03:G05:S01},
   pattern = {ICUS14:C03:G05:[S|X]},
   patterntype = {key},
@@ -406,7 +406,7 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C03:G05:S01,
+@InProceedings{ICUS14:C03:G05:S01,
   crossref = {ICUS14},
   title = {Paris, ark on the sea of time: modern city, world without memory},
   author = {{Barba-Negra}, Paul},
@@ -415,7 +415,7 @@
 
 
 
-@set{ICUS14:C04,
+@Set{ICUS14:C04,
   entryset = {ICUS14:C04},
   pattern = {ICUS14:C04:G\d\d:[S|X]},
   patterntype = {key},
@@ -424,7 +424,7 @@
   chairperson = {Oxenham, John},
 }
 
-@set{ICUS14:C04:G01,
+@Set{ICUS14:C04:G01,
   entryset = {ICUS14:C04:G01:S01},
   pattern = {ICUS14:C04:G01:[S|X]},
   patterntype = {key},
@@ -433,7 +433,7 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C04:G01:S01,
+@InProceedings{ICUS14:C04:G01:S01,
   crossref = {ICUS14},
   title = {Moral, scientific and technological values in modernization},
   author = {Okoko, Olatunde},
@@ -442,7 +442,7 @@
 
 
 
-@set{ICUS14:C04:G02,
+@Set{ICUS14:C04:G02,
   entryset = {ICUS14:C04:G02:S01},
   pattern = {ICUS14:C04:G02:[S|X]},
   patterntype = {key},
@@ -451,7 +451,7 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C04:G02:S01,
+@InProceedings{ICUS14:C04:G02:S01,
   crossref = {ICUS14},
   title = {Educational determinants of modernization: problems of skill formation},
   author = {Wagaw, Teshome G.},
@@ -459,7 +459,7 @@
 }
 
 
-@set{ICUS14:C04:G03,
+@Set{ICUS14:C04:G03,
   entryset = {ICUS14:C04:G03:S01},
   pattern = {ICUS14:C04:G03:[S|X]},
   patterntype = {key},
@@ -468,14 +468,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C04:G03:S01,
+@InProceedings{ICUS14:C04:G03:S01,
   crossref = {ICUS14},
   title = {The characteristics of modernizing states in a world order: aspirations \& possibilities},
   author = {Ratanakul, Pinit},
   commentator = {Dave, Ravindra and Mardin, Serif and Saqqaf, Abdulaziz},
 }
 
-@inproceedings{ICUS14:C04:G03:S02,
+@InProceedings{ICUS14:C04:G03:S02,
   crossref = {ICUS14},
   title = {Modernization and education of young children in poor developing countries},
   author = {Avalos, Beatrice},
@@ -484,7 +484,7 @@
 
 
 
-@set{ICUS14:C04:G04,
+@Set{ICUS14:C04:G04,
   entryset = {ICUS14:C04:G04:S01},
   pattern = {ICUS14:C04:G04:[S|X]},
   patterntype = {key},
@@ -493,7 +493,7 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C04:G04:S01,
+@InProceedings{ICUS14:C04:G04:S01,
   crossref = {ICUS14},
   title = {Modernization in education for young people (14/15 - 18/24)},
   author = {Schleicher, Klaus},
@@ -501,7 +501,7 @@
 }
 
 
-@set{ICUS14:C04:G05,
+@Set{ICUS14:C04:G05,
   entryset = {ICUS14:C04:G05:S01},
   pattern = {ICUS14:C04:G05:[S|X]},
   patterntype = {key},
@@ -510,7 +510,7 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C04:G05:S01,
+@InProceedings{ICUS14:C04:G05:S01,
   crossref = {ICUS14},
   title = {Moderization and life-long education},
   author = {Dave, Ravindra},
@@ -520,7 +520,7 @@
 
 
 
-@set{ICUS14:C05,
+@Set{ICUS14:C05,
   entryset = {ICUS14:C05},
   pattern = {ICUS14:C05:G\d\d:[S|X]},
   patterntype = {key},
@@ -529,7 +529,7 @@
   chairperson = {Smith, Huston and Foster, Durwood},
 }
 
-@set{ICUS14:C05:G01,
+@Set{ICUS14:C05:G01,
   entryset = {ICUS14:C05:G01:S01},
   pattern = {ICUS14:C05:G01:[S|X]},
   patterntype = {key},
@@ -538,21 +538,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C05:G01:S01,
+@InProceedings{ICUS14:C05:G01:S01,
   crossref = {ICUS14},
   title = {Neoplatonism as a world philosophy},
   author = {Harris, R. Blaine},
   commentator = {MacGregor, Geddes},
 }
 
-@inproceedings{ICUS14:C05:G01:S02,
+@InProceedings{ICUS14:C05:G01:S02,
   crossref = {ICUS14},
   title = {The use and abuse of mathematics: a Kantian critique},
   author = {Hood, C. Ellsworth},
   commentator = {James, Gene G.},
 }
 
-@inproceedings{ICUS14:C05:G01:S03,
+@InProceedings{ICUS14:C05:G01:S03,
   crossref = {ICUS14},
   title = {Nietzsche's strictures against philosophical finality},
   author = {Salaquarda, Joerg},
@@ -560,7 +560,7 @@
 }
 
 
-@set{ICUS14:C05:G02,
+@Set{ICUS14:C05:G02,
   entryset = {ICUS14:C05:G02:S01},
   pattern = {ICUS14:C05:G02:[S|X]},
   patterntype = {key},
@@ -569,14 +569,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C05:G02:S01,
+@InProceedings{ICUS14:C05:G02:S01,
   crossref = {ICUS14},
   title = {The integral philosophy of Sri Aurobindo},
   author = {Basu, Arabinda},
   commentator = {Crawford, Cromwell},
 }
 
-@inproceedings{ICUS14:C05:G02:S02,
+@InProceedings{ICUS14:C05:G02:S02,
   crossref = {ICUS14},
   title = {Process theology as a unifying and global vision},
   author = {Reeves, Gene G.},
@@ -585,7 +585,7 @@
 
 
 
-@set{ICUS14:C05:G03,
+@Set{ICUS14:C05:G03,
   entryset = {ICUS14:C05:G03:S01},
   pattern = {ICUS14:C05:G03:[S|X]},
   patterntype = {key},
@@ -594,21 +594,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C05:G03:S01,
+@InProceedings{ICUS14:C05:G03:S01,
   crossref = {ICUS14},
   title = {Science and religion with particular reference to P. Teilhard de Chardin},
   author = {Bonifaxi, Conrad},
   commentator = {David, William},
 }
 
-@inproceedings{ICUS14:C05:G03:S02,
+@InProceedings{ICUS14:C05:G03:S02,
   crossref = {ICUS14},
   title = {A Buddhist view of human salvation: with special reference to Shin'ichi Hisamatsu's notion of FAS},
   author = {Abe, Masao},
   commentator = {{Zum Brunn}, Emilie},
 }
 
-@inproceedings{ICUS14:C05:G03:S03,
+@InProceedings{ICUS14:C05:G03:S03,
   crossref = {ICUS14},
   title = {Michael Polanyi's conspectus of knowing},
   author = {Gelwick, Richard},
@@ -617,7 +617,7 @@
 
 
 
-@set{ICUS14:C05:G04,
+@Set{ICUS14:C05:G04,
   entryset = {ICUS14:C05:G04:S01},
   pattern = {ICUS14:C05:G04:[S|X]},
   patterntype = {key},
@@ -626,14 +626,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C05:G04:S01,
+@InProceedings{ICUS14:C05:G04:S01,
   crossref = {ICUS14},
   title = {Being and competing religious claims: a Heideggerian view},
   author = {Long, Eugene T.},
   commentator = {Bolin, Nona R.},
 }
 
-@inproceedings{ICUS14:C05:G04:S02,
+@InProceedings{ICUS14:C05:G04:S02,
   crossref = {ICUS14},
   title = {Ontological and theological bases of pluralism},
   author = {Scharleman, Robert P.},
@@ -642,7 +642,7 @@
 
 
 
-@set{ICUS14:C05:G05,
+@Set{ICUS14:C05:G05,
   entryset = {ICUS14:C05:G05:S01},
   pattern = {ICUS14:C05:G05:[S|X]},
   patterntype = {key},
@@ -651,14 +651,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C05:G05:S01,
+@InProceedings{ICUS14:C05:G05:S01,
   crossref = {ICUS14},
   title = {Cultural pluralism and the unity of the sciences: Karl Rahner's transcendental theology as a test case},
   author = {Phan, Peter C.},
   commentator = {Guerra, Anthony J.},
 }
 
-@inproceedings{ICUS14:C05:G05:S02,
+@InProceedings{ICUS14:C05:G05:S02,
   crossref = {ICUS14},
   title = {Unification thought as a four-position conceptuality for harmonization},
   author = {Pobanz, Kerry C.},
@@ -668,7 +668,7 @@
 
 
 
-@set{ICUS14:C06,
+@Set{ICUS14:C06,
   entryset = {ICUS14:C06},
   pattern = {ICUS14:C06:G\d\d:[S|X]},
   patterntype = {key},
@@ -677,7 +677,7 @@
   chairperson = {Singer, S. Fred},
 }
 
-@set{ICUS14:C06:G01,
+@Set{ICUS14:C06:G01,
   entryset = {ICUS14:C06:G01:S01},
   pattern = {ICUS14:C06:G01:[S|X]},
   patterntype = {key},
@@ -686,21 +686,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C06:G01:S01,
+@InProceedings{ICUS14:C06:G01:S01,
   crossref = {ICUS14},
   title = {Myths of the universe: cosmogony and cosmology},
   author = {Patai, Raphael},
   commentator = {Shaked, Shaul},
 }
 
-@inproceedings{ICUS14:C06:G01:S02,
+@InProceedings{ICUS14:C06:G01:S02,
   crossref = {ICUS14},
   title = {The Velikovsky affair},
   author = {Motz, Lloyd},
   commentator = {Bauer, Henry H.},
 }
 
-@inproceedings{ICUS14:C06:G01:S03,
+@InProceedings{ICUS14:C06:G01:S03,
   crossref = {ICUS14},
   title = {Astrology and the development of astronomy},
   author = {Stehling, Kurt R.},
@@ -708,7 +708,7 @@
 }
 
 
-@set{ICUS14:C06:G02,
+@Set{ICUS14:C06:G02,
   entryset = {ICUS14:C06:G02:S01},
   pattern = {ICUS14:C06:G02:[S|X]},
   patterntype = {key},
@@ -717,14 +717,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C06:G02:S01,
+@InProceedings{ICUS14:C06:G02:S01,
   crossref = {ICUS14},
   title = {Cosmology - modern views},
   author = {Chiu, H. Y.},
-  commentator = {{von Hoemer}, Sebastian},
+  commentator = {Sebastian {von Hoemer}},
 }
 
-@inproceedings{ICUS14:C06:G02:S02,
+@InProceedings{ICUS14:C06:G02:S02,
   crossref = {ICUS14},
   title = {The origin of the solar system},
   author = {Lewis, John},
@@ -732,7 +732,7 @@
 }
 
 
-@set{ICUS14:C06:G03,
+@Set{ICUS14:C06:G03,
   entryset = {ICUS14:C06:G03:S01},
   pattern = {ICUS14:C06:G03:[S|X]},
   patterntype = {key},
@@ -741,21 +741,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C06:G03:S01,
+@InProceedings{ICUS14:C06:G03:S01,
   crossref = {ICUS14},
   title = {Giant comets and their role in history},
   author = {Clube, Victor},
-  commentator = {{Stiebing Jr}, William H.},
+  commentator = {William H. {Stiebing Jr}},
 }
 
-@inproceedings{ICUS14:C06:G03:S02,
+@InProceedings{ICUS14:C06:G03:S02,
   crossref = {ICUS14},
   title = {Human exploration and development of the solar system: the first steps},
   author = {O'Leary, Brian},
   commentator = {Oberg, James E.},
 }
 
-@inproceedings{ICUS14:C06:G03:S03,
+@InProceedings{ICUS14:C06:G03:S03,
   crossref = {ICUS14},
   title = {The search for extraterrestrial life},
   author = {Shostak, G. Seth},
@@ -763,7 +763,7 @@
 }
 
 
-@set{ICUS14:C06:G04,
+@Set{ICUS14:C06:G04,
   entryset = {ICUS14:C06:G04:S01},
   pattern = {ICUS14:C06:G04:[S|X]},
   patterntype = {key},
@@ -772,11 +772,11 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS14:C06:G04:S01,
+@InProceedings{ICUS14:C06:G04:S01,
   crossref = {ICUS14},
   title = {UFOs: fantasy or present reality},
   author = {Maccabee, Bruce},
-  commentator = {Oberg, James, E.},
+  commentator = {Oberg, James E.},
 }
 
 
