--- a/inst/extdata/bibset-raw/icus19.bib
+++ b/inst/extdata/bibset-raw/icus19.bib
@@ -1,4 +1,4 @@
-@proceedings{ICUS19,
+@Proceedings{ICUS19,
   title = {Absolute Values and the New World Order},
   titleaddon = {Nineteenth International Conference on the Unity of the Sciences},
   shorttitle = {ICUS XIX},
@@ -12,26 +12,26 @@
   keywords={primary, program, moonist}
 }
 
-@inproceedings{ICUS19:P01,
+@InProceedings{ICUS19:P01,
   crossref = {ICUS19},
   title = {Social Institutions and Nuclear Energy II},
   author = {Weinberg, Alvin M.},
 }
 
-@inproceedings{ICUS19:P02,
+@InProceedings{ICUS19:P02,
   crossref = {ICUS19},
   title = {The Coming Civilization Shift},
   author = {Gregorios, Paulos Mar},
 }
 
-@inproceedings{ICUS19:P03,
+@InProceedings{ICUS19:P03,
   crossref = {ICUS19},
   title = {The Long and the Short of It},
   author = {King, Alexander},
 }
 
 
-@set{ICUS19:C01,
+@Set{ICUS19:C01,
   entryset = {ICUS19:C01},
   pattern = {ICUS19:C01:G\d\d:[S|X]},
   patterntype = {key},
@@ -40,7 +40,7 @@
   chairperson = {Weinberg, Alvin M. and Higatsberger, Michael J.},
 }
 
-@set{ICUS19:C01:G01,
+@Set{ICUS19:C01:G01,
   entryset = {ICUS19:C01:G01:S01},
   pattern = {ICUS19:C01:G01:[S|X]},
   patterntype = {key},
@@ -49,7 +49,7 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C01:G01:S01,
+@InProceedings{ICUS19:C01:G01:S01,
   crossref = {ICUS19},
   title = {A promise unfulfilled},
   author = {Cohen, Karl P.},
@@ -57,7 +57,7 @@
 }
 
 
-@set{ICUS19:C01:G02,
+@Set{ICUS19:C01:G02,
   entryset = {ICUS19:C01:G02:S01},
   pattern = {ICUS19:C01:G02:[S|X]},
   patterntype = {key},
@@ -66,32 +66,32 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C01:G02:S01,
+@InProceedings{ICUS19:C01:G02:S01,
   crossref = {ICUS19},
   title = {Nuclear energy, public perception and policy decisions},
   author = {Binner, Walter},
 }
 
-@inproceedings{ICUS19:C01:G02:S02,
+@InProceedings{ICUS19:C01:G02:S02,
   crossref = {ICUS19},
   title = {Nuclear power and the world in transition},
   author = {Wagner, Karel},
 }
 
-@inproceedings{ICUS19:C01:G02:S03,
+@InProceedings{ICUS19:C01:G02:S03,
   crossref = {ICUS19},
   title = {Fear, trust and the future of nuclear power},
   author = {Hettema, Jack},
 }
 
-@inproceedings{ICUS19:C01:G02:S04,
+@InProceedings{ICUS19:C01:G02:S04,
   crossref = {ICUS19},
   title = {Session discussion},
   author = {Zippe, Gernot and Gui, We-Xie},
 }
 
 
-@set{ICUS19:C01:G03,
+@Set{ICUS19:C01:G03,
   entryset = {ICUS19:C01:G03:S01},
   pattern = {ICUS19:C01:G03:[S|X]},
   patterntype = {key},
@@ -100,32 +100,32 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C01:G03:S01,
+@InProceedings{ICUS19:C01:G03:S01,
   crossref = {ICUS19},
   title = {Safety of nuclear power plants in Bulgaria and East-European countries?},
   author = {Ovtcharov, Roumen},
 }
 
-@inproceedings{ICUS19:C01:G03:S02,
+@InProceedings{ICUS19:C01:G03:S02,
   crossref = {ICUS19},
   title = {Safety aspects of reactor types and implications for nuclear fuel supplies},
   author = {Radkowsky, Alvin},
 }
 
-@inproceedings{ICUS19:C01:G03:S03,
+@InProceedings{ICUS19:C01:G03:S03,
   crossref = {ICUS19},
   title = {Nuclear safety for nuclear acceptance},
   author = {Hannerz, Kare A.},
 }
 
-@inproceedings{ICUS19:C01:G03:S04,
+@InProceedings{ICUS19:C01:G03:S04,
   crossref = {ICUS19},
   title = {Session discussion},
   author = {Atalay, Bulent I.},
 }
 
 
-@set{ICUS19:C01:G04,
+@Set{ICUS19:C01:G04,
   entryset = {ICUS19:C01:G04:S01},
   pattern = {ICUS19:C01:G04:[S|X]},
   patterntype = {key},
@@ -134,26 +134,26 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C01:G04:S01,
+@InProceedings{ICUS19:C01:G04:S01,
   crossref = {ICUS19},
   title = {Radiological consequences of the Chernobyl accident},
   author = {Shigematsu, Itsuzo},
 }
 
-@inproceedings{ICUS19:C01:G04:S02,
+@InProceedings{ICUS19:C01:G04:S02,
   crossref = {ICUS19},
   title = {Lesson of Chernobyl: psychological and social aspects},
   author = {Kapitza, Sergui},
 }
 
-@inproceedings{ICUS19:C01:G04:S03,
+@InProceedings{ICUS19:C01:G04:S03,
   crossref = {ICUS19},
   title = {Session discussion},
   author = {Zebrowski, Edwin L.},
 }
 
 
-@set{ICUS19:C01:G05,
+@Set{ICUS19:C01:G05,
   entryset = {ICUS19:C01:G05:S01},
   pattern = {ICUS19:C01:G05:[S|X]},
   patterntype = {key},
@@ -162,7 +162,7 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C01:G05:S01,
+@InProceedings{ICUS19:C01:G05:S01,
   crossref = {ICUS19},
   title = {Implications of the 1990 recommendations of the ICRP},
   author = {Lim, Yong-Kyu},
@@ -170,7 +170,7 @@
 }
 
 
-@set{ICUS19:C01:G06,
+@Set{ICUS19:C01:G06,
   entryset = {ICUS19:C01:G06:S01},
   pattern = {ICUS19:C01:G06:[S|X]},
   patterntype = {key},
@@ -179,7 +179,7 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C01:G06:S01,
+@InProceedings{ICUS19:C01:G06:S01,
   crossref = {ICUS19},
   title = {Nuclear proliferation: past, present and future},
   author = {Alonso, Marcelo},
@@ -188,7 +188,7 @@
 
 
 
-@set{ICUS19:C02,
+@Set{ICUS19:C02,
   entryset = {ICUS19:C02},
   pattern = {ICUS19:C02:G\d\d:[S|X]},
   patterntype = {key},
@@ -197,7 +197,7 @@
   chairperson = {Jerome, Norge Winifred},
 }
 
-@set{ICUS19:C02:G01,
+@Set{ICUS19:C02:G01,
   entryset = {ICUS19:C02:G01:S01},
   pattern = {ICUS19:C02:G01:[S|X]},
   patterntype = {key},
@@ -206,14 +206,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C02:G01:S01,
+@InProceedings{ICUS19:C02:G01:S01,
   crossref = {ICUS19},
   title = {Negotiating virtue: families and mass media},
   author = {Cofer, Lynette Friedrich},
   commentator = {Spring, Anita}
 }
 
-@inproceedings{ICUS19:C02:G01:S02,
+@InProceedings{ICUS19:C02:G01:S02,
   crossref = {ICUS19},
   title = {Transforming the self, transforming the family},
   author = {Jimenez, Maria C. C.},
@@ -221,7 +221,7 @@
 }
 
 
-@set{ICUS19:C02:G02,
+@Set{ICUS19:C02:G02,
   entryset = {ICUS19:C02:G02:S01},
   pattern = {ICUS19:C02:G02:[S|X]},
   patterntype = {key},
@@ -230,14 +230,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C02:G02:S01,
+@InProceedings{ICUS19:C02:G02:S01,
   crossref = {ICUS19},
   title = {Towards a stable family life in the contemporary world},
   author = {Mupawaenda, Anna C.},
   commentator = {Kumagai, Akiko}
 }
 
-@inproceedings{ICUS19:C02:G02:S02,
+@InProceedings{ICUS19:C02:G02:S02,
   crossref = {ICUS19},
   title = {Family stability and economic development: what have we lost and gained, and what should be done?},
   author = {Posarac, Aleksandra},
@@ -245,7 +245,7 @@
 }
 
 
-@set{ICUS19:C02:G03,
+@Set{ICUS19:C02:G03,
   entryset = {ICUS19:C02:G03:S01},
   pattern = {ICUS19:C02:G03:[S|X]},
   patterntype = {key},
@@ -254,22 +254,22 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C02:G03:S01,
+@InProceedings{ICUS19:C02:G03:S01,
   crossref = {ICUS19},
   title = {Family, household and inter-household network to cope with economic crisis (the ''self-empowered household'')},
   author = {Sik, Endre},
   commentator = {Weidemann, Wesley}
 }
 
-@inproceedings{ICUS19:C02:G03:S02,
+@InProceedings{ICUS19:C02:G03:S02,
   crossref = {ICUS19},
   title = {Caregiving: empowerment for community problem solving},
   author = {Sotomayer, Marta},
-  commentator = {{de la Torre}, Armando}
+  commentator = {Armando {de la Torre}}
 }
 
 
-@set{ICUS19:C02:G04,
+@Set{ICUS19:C02:G04,
   entryset = {ICUS19:C02:G04:S01},
   pattern = {ICUS19:C02:G04:[S|X]},
   patterntype = {key},
@@ -278,14 +278,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C02:G04:S01,
+@InProceedings{ICUS19:C02:G04:S01,
   crossref = {ICUS19},
   title = {Family structures and women headed families: recognition and empowerment issues},
   author = {Spring, Anita},
   commentator = {Weidemann, C. Jean}
 }
 
-@inproceedings{ICUS19:C02:G04:S02,
+@InProceedings{ICUS19:C02:G04:S02,
   crossref = {ICUS19},
   title = {Strategies for empowering the African-American family},
   author = {Tucker, Carolyn},
@@ -293,7 +293,7 @@
 }
 
 
-@set{ICUS19:C02:G05,
+@Set{ICUS19:C02:G05,
   entryset = {ICUS19:C02:G05:S01},
   pattern = {ICUS19:C02:G05:[S|X]},
   patterntype = {key},
@@ -302,14 +302,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C02:G05:S01,
+@InProceedings{ICUS19:C02:G05:S01,
   crossref = {ICUS19},
   title = {Support systems for rural families in the United States: rationale, strategies, and examples},
   author = {Thurston, Linda P.},
   commentator = {Cofer, Lynette Friedrich}
 }
 
-@inproceedings{ICUS19:C02:G05:S02,
+@InProceedings{ICUS19:C02:G05:S02,
   crossref = {ICUS19},
   title = {The home as workplace: family, dilemmas and policy solutions},
   author = {Weidemann, C. Jean and Weidemann, Wesley},
@@ -317,7 +317,7 @@
 }
 
 
-@set{ICUS19:C02:G06,
+@Set{ICUS19:C02:G06,
   entryset = {ICUS19:C02:G06:S01},
   pattern = {ICUS19:C02:G06:[S|X]},
   patterntype = {key},
@@ -326,16 +326,16 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C02:G06:S01,
+@InProceedings{ICUS19:C02:G06:S01,
   crossref = {ICUS19},
   title = {Religious systems and the family: strategies and programs for empowerment},
   author = {Winings, Kathy},
-  commentator = {{de la Torre}, Armando}
+  commentator = {Armando {de la Torre}}
 }
 
 
 
-@set{ICUS19:C03,
+@Set{ICUS19:C03,
   entryset = {ICUS19:C03},
   pattern = {ICUS19:C03:G\d\d:[S|X]},
   patterntype = {key},
@@ -344,7 +344,7 @@
   chairperson = {Lee, Sang Hun and Rubenstein, Richard L.},
 }
 
-@set{ICUS19:C03:G01,
+@Set{ICUS19:C03:G01,
   entryset = {ICUS19:C03:G01:S01},
   pattern = {ICUS19:C03:G01:[S|X]},
   patterntype = {key},
@@ -353,14 +353,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C03:G01:S01,
+@InProceedings{ICUS19:C03:G01:S01,
   crossref = {ICUS19},
   title = {Original image},
   author = {Berenbaum, Michael},
   commentator = {Wilson, Andrew}
 }
 
-@inproceedings{ICUS19:C03:G01:S02,
+@InProceedings{ICUS19:C03:G01:S02,
   crossref = {ICUS19},
   title = {Ontology},
   author = {Foster, A. Durwood},
@@ -368,7 +368,7 @@
 }
 
 
-@set{ICUS19:C03:G02,
+@Set{ICUS19:C03:G02,
   entryset = {ICUS19:C03:G02:S01},
   pattern = {ICUS19:C03:G02:[S|X]},
   patterntype = {key},
@@ -377,14 +377,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C03:G02:S01,
+@InProceedings{ICUS19:C03:G02:S01,
   crossref = {ICUS19},
   title = {Original human nature},
   author = {Roth, John},
   commentator = {Carlson, David}
 }
 
-@inproceedings{ICUS19:C03:G02:S02,
+@InProceedings{ICUS19:C03:G02:S02,
   crossref = {ICUS19},
   title = {Axiology},
   author = {James, Gene},
@@ -392,7 +392,7 @@
 }
 
 
-@set{ICUS19:C03:G03,
+@Set{ICUS19:C03:G03,
   entryset = {ICUS19:C03:G03:S01},
   pattern = {ICUS19:C03:G03:[S|X]},
   patterntype = {key},
@@ -401,14 +401,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C03:G03:S01,
+@InProceedings{ICUS19:C03:G03:S01,
   crossref = {ICUS19},
   title = {Education},
   author = {Voisin, Carole},
   commentator = {Seidel, Dietrich}
 }
 
-@inproceedings{ICUS19:C03:G03:S02,
+@InProceedings{ICUS19:C03:G03:S02,
   crossref = {ICUS19},
   title = {Ethics},
   author = {Kelsay, John},
@@ -416,7 +416,7 @@
 }
 
 
-@set{ICUS19:C03:G04,
+@Set{ICUS19:C03:G04,
   entryset = {ICUS19:C03:G04:S01},
   pattern = {ICUS19:C03:G04:[S|X]},
   patterntype = {key},
@@ -425,14 +425,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C03:G04:S01,
+@InProceedings{ICUS19:C03:G04:S01,
   crossref = {ICUS19},
   title = {Art},
   author = {Rubenstein, Betty},
   commentator = {Saunders, Brian}
 }
 
-@inproceedings{ICUS19:C03:G04:S02,
+@InProceedings{ICUS19:C03:G04:S02,
   crossref = {ICUS19},
   title = {History},
   author = {Garrett, William},
@@ -440,7 +440,7 @@
 }
 
 
-@set{ICUS19:C03:G05,
+@Set{ICUS19:C03:G05,
   entryset = {ICUS19:C03:G05:S01},
   pattern = {ICUS19:C03:G05:[S|X]},
   patterntype = {key},
@@ -449,14 +449,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C03:G05:S01,
+@InProceedings{ICUS19:C03:G05:S01,
   crossref = {ICUS19},
   title = {Epistemology},
   author = {Bolin, Nona},
   commentator = {Tanabe, Jennifer}
 }
 
-@inproceedings{ICUS19:C03:G05:S02,
+@InProceedings{ICUS19:C03:G05:S02,
   crossref = {ICUS19},
   title = {Logic/methodology},
   author = {Molinski, Waldemar},
@@ -465,7 +465,7 @@
 
 
 
-@set{ICUS19:C04,
+@Set{ICUS19:C04,
   entryset = {ICUS19:C04},
   pattern = {ICUS19:C04:G\d\d:[S|X]},
   patterntype = {key},
@@ -474,7 +474,7 @@
   chairperson = {Kozma, Tamas},
 }
 
-@set{ICUS19:C04:G01,
+@Set{ICUS19:C04:G01,
   entryset = {ICUS19:C04:G01:S01},
   pattern = {ICUS19:C04:G01:[S|X]},
   patterntype = {key},
@@ -483,32 +483,32 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C04:G01:S01,
+@InProceedings{ICUS19:C04:G01:S01,
   crossref = {ICUS19},
   title = {The intellectual, moral and professional values in the face of the modern university in transition},
   author = {Rüegg, Walter H.},
 }
 
-@inproceedings{ICUS19:C04:G01:S02,
+@InProceedings{ICUS19:C04:G01:S02,
   crossref = {ICUS19},
   title = {Diversity and specialization in primary, secondary and higher education},
   author = {Kurti, Nicholas},
 }
 
-@inproceedings{ICUS19:C04:G01:S03,
+@InProceedings{ICUS19:C04:G01:S03,
   crossref = {ICUS19},
   title = {The idea of the univesity - its role in the present world crisis with special reference to Africa},
   author = {Bernardi, Bernardo},
 }
 
-@inproceedings{ICUS19:C04:G01:X04,
+@InProceedings{ICUS19:C04:G01:X04,
   crossref = {ICUS19},
   title = {Session discussion},
   author = {Wielemans, Willy},
 }
 
 
-@set{ICUS19:C04:G02,
+@Set{ICUS19:C04:G02,
   entryset = {ICUS19:C04:G02:S01},
   pattern = {ICUS19:C04:G02:[S|X]},
   patterntype = {key},
@@ -517,26 +517,26 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C04:G02:S01,
+@InProceedings{ICUS19:C04:G02:S01,
   crossref = {ICUS19},
   title = {Governance in American universities},
   author = {Beauchamp, Edward},
 }
 
-@inproceedings{ICUS19:C04:G02:S02,
+@InProceedings{ICUS19:C04:G02:S02,
   crossref = {ICUS19},
   title = {Integration, learning and spiritual values: John Henry Newman's romanticism and ''the idea of a university''},
   author = {Ferrantello, Donna},
 }
 
-@inproceedings{ICUS19:C04:G02:X03,
+@InProceedings{ICUS19:C04:G02:X03,
   crossref = {ICUS19},
   title = {Session discussion},
   author = {Jonas, Paul},
 }
 
 
-@set{ICUS19:C04:G03,
+@Set{ICUS19:C04:G03,
   entryset = {ICUS19:C04:G03:S01},
   pattern = {ICUS19:C04:G03:[S|X]},
   patterntype = {key},
@@ -545,26 +545,26 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C04:G03:S01,
+@InProceedings{ICUS19:C04:G03:S01,
   crossref = {ICUS19},
   title = {Educational renovation needed for Korean universities},
   author = {Chou, Kyong Chol},
 }
 
-@inproceedings{ICUS19:C04:G03:S02,
+@InProceedings{ICUS19:C04:G03:S02,
   crossref = {ICUS19},
   title = {Disintegration of the residential university concept and external degree faculty},
   author = {Kalansuriya, A. D. P.},
 }
 
-@inproceedings{ICUS19:C04:G03:X03,
+@InProceedings{ICUS19:C04:G03:X03,
   crossref = {ICUS19},
   title = {Session discussion},
   author = {Beauchamp, Edward},
 }
 
 
-@set{ICUS19:C04:G04,
+@Set{ICUS19:C04:G04,
   entryset = {ICUS19:C04:G04:S01},
   pattern = {ICUS19:C04:G04:[S|X]},
   patterntype = {key},
@@ -573,20 +573,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C04:G04:S01,
+@InProceedings{ICUS19:C04:G04:S01,
   crossref = {ICUS19},
   title = {The classical university and its transition: the case of the Arab world},
   author = {Mina, Fayez M.},
 }
 
-@inproceedings{ICUS19:C04:G04:S02,
+@InProceedings{ICUS19:C04:G04:S02,
   crossref = {ICUS19},
   title = {African universities: ideals and realities},
   author = {Adjangba, A. M.},
 }
 
 
-@set{ICUS19:C04:G05,
+@Set{ICUS19:C04:G05,
   entryset = {ICUS19:C04:G05:S01},
   pattern = {ICUS19:C04:G05:[S|X]},
   patterntype = {key},
@@ -595,26 +595,26 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C04:G05:S01,
+@InProceedings{ICUS19:C04:G05:S01,
   crossref = {ICUS19},
   title = {Radical movements at the universities of Latin America},
   author = {Romo, Luis A.},
 }
 
-@inproceedings{ICUS19:C04:G05:S02,
+@InProceedings{ICUS19:C04:G05:S02,
   crossref = {ICUS19},
   title = {The Latin-American university facing the 21st century},
   author = {Albornoz, Orlando},
 }
 
-@inproceedings{ICUS19:C04:G05:X03,
+@InProceedings{ICUS19:C04:G05:X03,
   crossref = {ICUS19},
   title = {Session discussion},
   author = {Pincheira, Guido},
 }
 
 
-@set{ICUS19:C04:G06,
+@Set{ICUS19:C04:G06,
   entryset = {ICUS19:C04:G06:S01},
   pattern = {ICUS19:C04:G06:[S|X]},
   patterntype = {key},
@@ -623,19 +623,19 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C04:G06:S01,
+@InProceedings{ICUS19:C04:G06:S01,
   crossref = {ICUS19},
   title = {The modern university in Poland: transition from communism to liberal democracy},
   author = {Pachocinski, Ryszard},
 }
 
-@inproceedings{ICUS19:C04:G06:S02,
+@InProceedings{ICUS19:C04:G06:S02,
   crossref = {ICUS19},
   title = {The university at the cross-roads: the case of Yugoslavia},
   author = {Rakic, Ljubisa},
 }
 
-@inproceedings{ICUS19:C04:G06:X03,
+@InProceedings{ICUS19:C04:G06:X03,
   crossref = {ICUS19},
   title = {Session discussion},
   author = {Zelvys, Rimantas and Prucha, Jan},
@@ -643,7 +643,7 @@
 
 
 
-@set{ICUS19:C05,
+@Set{ICUS19:C05,
   entryset = {ICUS19:C05},
   pattern = {ICUS19:C05:G\d\d:[S|X]},
   patterntype = {key},
@@ -652,7 +652,7 @@
   chairperson = {Seitz, Frederick and Singer, S. Fred},
 }
 
-@set{ICUS19:C05:G01,
+@Set{ICUS19:C05:G01,
   entryset = {ICUS19:C05:G01:S01},
   pattern = {ICUS19:C05:G01:[S|X]},
   patterntype = {key},
@@ -661,14 +661,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C05:G01:S01,
+@InProceedings{ICUS19:C05:G01:S01,
   crossref = {ICUS19},
   title = {The role of surface transportation: history of development and prospects for the next century},
   author = {Nakicenovic, Nebojsa},
   commentator = {Marchetti, Cesare}
 }
 
-@inproceedings{ICUS19:C05:G01:S02,
+@InProceedings{ICUS19:C05:G01:S02,
   crossref = {ICUS19},
   title = {The significane of the international highway and the role of the Japan-Korea tunnel},
   author = {Tanifuji, Shozo},
@@ -676,7 +676,7 @@
 }
 
 
-@set{ICUS19:C05:G02,
+@Set{ICUS19:C05:G02,
   entryset = {ICUS19:C05:G02:S01},
   pattern = {ICUS19:C05:G02:[S|X]},
   patterntype = {key},
@@ -685,14 +685,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C05:G02:S01,
+@InProceedings{ICUS19:C05:G02:S01,
   crossref = {ICUS19},
   title = {Air transport},
   author = {Machol, Robert},
   commentator = {Muto, Paul T.}
 }
 
-@inproceedings{ICUS19:C05:G02:S02,
+@InProceedings{ICUS19:C05:G02:S02,
   crossref = {ICUS19},
   title = {Transport for commodities and competition for resources},
   author = {Evans, N. Ray},
@@ -700,7 +700,7 @@
 }
 
 
-@set{ICUS19:C05:G03,
+@Set{ICUS19:C05:G03,
   entryset = {ICUS19:C05:G03:S01},
   pattern = {ICUS19:C05:G03:[S|X]},
   patterntype = {key},
@@ -709,14 +709,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C05:G03:S01,
+@InProceedings{ICUS19:C05:G03:S01,
   crossref = {ICUS19},
   title = {Communication advances promote cross-culturization},
   author = {Medved, David},
   commentator = {O'Brien, Brian}
 }
 
-@inproceedings{ICUS19:C05:G03:S02,
+@InProceedings{ICUS19:C05:G03:S02,
   crossref = {ICUS19},
   title = {International capital flows},
   author = {Lee, Dwight},
@@ -724,7 +724,7 @@
 }
 
 
-@set{ICUS19:C05:G04,
+@Set{ICUS19:C05:G04,
   entryset = {ICUS19:C05:G04:S01},
   pattern = {ICUS19:C05:G04:[S|X]},
   patterntype = {key},
@@ -733,14 +733,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C05:G04:S01,
+@InProceedings{ICUS19:C05:G04:S01,
   crossref = {ICUS19},
   title = {Technology transfer: historical and cross-cultural perspective},
   author = {Fleming, James},
   commentator = {Silverman, Joseph}
 }
 
-@inproceedings{ICUS19:C05:G04:S02,
+@InProceedings{ICUS19:C05:G04:S02,
   crossref = {ICUS19},
   title = {Migration as a cross-culture phenomenon},
   author = {Soyfer, Valery N.},
@@ -748,7 +748,7 @@
 }
 
 
-@set{ICUS19:C05:G05,
+@Set{ICUS19:C05:G05,
   entryset = {ICUS19:C05:G05:S01},
   pattern = {ICUS19:C05:G05:[S|X]},
   patterntype = {key},
@@ -757,7 +757,7 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C05:G05:S01,
+@InProceedings{ICUS19:C05:G05:S01,
   crossref = {ICUS19},
   title = {Language \& cultural barriers},
   author = {Isaac, Ephraim},
@@ -766,7 +766,7 @@
 
 
 
-@set{ICUS19:C06,
+@Set{ICUS19:C06,
   entryset = {ICUS19:C06},
   pattern = {ICUS19:C06:G\d\d:[S|X]},
   patterntype = {key},
@@ -775,7 +775,7 @@
   chairperson = {Radnitzky, Gerard},
 }
 
-@set{ICUS19:C06:G01,
+@Set{ICUS19:C06:G01,
   entryset = {ICUS19:C06:G01:S01},
   pattern = {ICUS19:C06:G01:[S|X]},
   patterntype = {key},
@@ -784,14 +784,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C06:G01:S01,
+@InProceedings{ICUS19:C06:G01:S01,
   crossref = {ICUS19},
   title = {The deontological factor in the writing of history},
   author = {Munz, Peter},
   commentator = {Flew, Antony}
 }
 
-@inproceedings{ICUS19:C06:G01:S02,
+@InProceedings{ICUS19:C06:G01:S02,
   crossref = {ICUS19},
   title = {Good faith: academic and political},
   author = {Flew, Antony},
@@ -799,7 +799,7 @@
 }
 
 
-@set{ICUS19:C06:G02,
+@Set{ICUS19:C06:G02,
   entryset = {ICUS19:C06:G02:S01},
   pattern = {ICUS19:C06:G02:[S|X]},
   patterntype = {key},
@@ -808,14 +808,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C06:G02:S01,
+@InProceedings{ICUS19:C06:G02:S01,
   crossref = {ICUS19},
   title = {Genetics and euthanasia in a free society: an application of Flew's good faith},
   author = {Post, Stephen},
-  commentator = {{von Studnitz}, Wilfried}
+  commentator = {Wilfried {von Studnitz}}
 }
 
-@inproceedings{ICUS19:C06:G02:S02,
+@InProceedings{ICUS19:C06:G02:S02,
   crossref = {ICUS19},
   title = {Supreme values, tolerance and the constitution of liberty},
   author = {Bernholz, Peter},
@@ -823,7 +823,7 @@
 }
 
 
-@set{ICUS19:C06:G03,
+@Set{ICUS19:C06:G03,
   entryset = {ICUS19:C06:G03:S01},
   pattern = {ICUS19:C06:G03:[S|X]},
   patterntype = {key},
@@ -832,22 +832,22 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C06:G03:S01,
+@InProceedings{ICUS19:C06:G03:S01,
   crossref = {ICUS19},
   title = {Values and the social order},
-  author = {{de Jasay}, Anthony},
+  author = {Anthony {de Jasay}},
   commentator = {Kukathas, Chandran and Petroni, Angelo M.}
 }
 
-@inproceedings{ICUS19:C06:G03:S02,
+@InProceedings{ICUS19:C06:G03:S02,
   crossref = {ICUS19},
   title = {Freedom, knowledge, and law as social capital},
   author = {Weede, Erich},
-  commentator = {{de Jasay}, Anthony}
+  commentator = {Anthony {de Jasay}}
 }
 
 
-@set{ICUS19:C06:G04,
+@Set{ICUS19:C06:G04,
   entryset = {ICUS19:C06:G04:S01},
   pattern = {ICUS19:C06:G04:[S|X]},
   patterntype = {key},
@@ -856,14 +856,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C06:G04:S01,
+@InProceedings{ICUS19:C06:G04:S01,
   crossref = {ICUS19},
   title = {The evolution of values and institutions in a free society: the under-pinnings of a market economy},
   author = {Benson, Bruce L.},
   commentator = {Tullock, Gordon}
 }
 
-@inproceedings{ICUS19:C06:G04:S02,
+@InProceedings{ICUS19:C06:G04:S02,
   crossref = {ICUS19},
   title = {Efficiency, political-economic organization and international competition between states},
   author = {Bernholz, Peter},
@@ -871,7 +871,7 @@
 }
 
 
-@set{ICUS19:C06:G05,
+@Set{ICUS19:C06:G05,
   entryset = {ICUS19:C06:G05:S01},
   pattern = {ICUS19:C06:G05:[S|X]},
   patterntype = {key},
@@ -880,14 +880,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C06:G05:S01,
+@InProceedings{ICUS19:C06:G05:S01,
   crossref = {ICUS19},
   title = {Patriotic egalitarianism},
   author = {Tullock, Gordon},
   commentator = {Block, Walter}
 }
 
-@inproceedings{ICUS19:C06:G05:S02,
+@InProceedings{ICUS19:C06:G05:S02,
   crossref = {ICUS19},
   title = {On values of socialism},
   author = {Block, Walter},
@@ -895,7 +895,7 @@
 }
 
 
-@set{ICUS19:C06:G06,
+@Set{ICUS19:C06:G06,
   entryset = {ICUS19:C06:G06:S01},
   pattern = {ICUS19:C06:G06:[S|X]},
   patterntype = {key},
@@ -904,21 +904,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS19:C06:G06:S01,
+@InProceedings{ICUS19:C06:G06:S01,
   crossref = {ICUS19},
   title = {Values in the treaty on European Union},
   author = {Vibert, Frank},
   commentator = {Bernholz, Peter and Petroni, Angelo M.}
 }
 
-@inproceedings{ICUS19:C06:G06:S02,
+@InProceedings{ICUS19:C06:G06:S02,
   crossref = {ICUS19},
   title = {In search for a transition to a free society},
   author = {Radnitzky, Gerard},
   commentator = {Hoppe, Hans Herrmann}
 }
 
-@inproceedings{ICUS19:C06:G06:S03,
+@InProceedings{ICUS19:C06:G06:S03,
   crossref = {ICUS19},
   title = {The proposals of Wa-ism and the Japanese way of looking at the free, private market order},
   author = {Kato, Peter E.},
