--- a/inst/extdata/bibset-raw/icus20.bib
+++ b/inst/extdata/bibset-raw/icus20.bib
@@ -1,4 +1,4 @@
-@proceedings{ICUS20,
+@Proceedings{ICUS20,
   title = {Absolute Values and the Unity of the Sciences: The Origin and Human Responsibility},
   titleaddon = {Twentieth International Conference on the Unity of the Sciences},
   shorttitle = {ICUS XX},
@@ -12,39 +12,39 @@
   keywords={primary, program, moonist}
 }
 
-@inproceedings{ICUS20:P01,
+@InProceedings{ICUS20:P01,
   crossref = {ICUS20},
   title = {Science and Values},
   author = {Velihov, Eugene},
 }
 
-@inproceedings{ICUS20:P02,
+@InProceedings{ICUS20:P02,
   crossref = {ICUS20},
   title = {Special Presentation - University of Bridgeport},
   author = {Rubenstein, Richard L.},
 }
 
-@inproceedings{ICUS20:P03,
+@InProceedings{ICUS20:P03,
   crossref = {ICUS20},
   title = {The Challenge of the Information Society},
   author = {Alonso, Marcelo},
   commentator={Kogane, Yoshihiro and Pournelle, Jerry and Kurasha, Jameson}
 }
 
-@inproceedings{ICUS20:P04,
+@InProceedings{ICUS20:P04,
   crossref = {ICUS20},
   title = {The Unity of Man and Science},
   author = {Barton, D. H. R.},
 }
 
-@inproceedings{ICUS20:P05,
+@InProceedings{ICUS20:P05,
   crossref = {ICUS20},
   title = {International Highway Project},
   author = {Takahashi, Hikoji and Zhao, Hui An},
 }
 
 
-@set{ICUS20:C01,
+@Set{ICUS20:C01,
   entryset = {ICUS20:C01},
   pattern = {ICUS20:C01:G\d\d:[S|X]},
   patterntype = {key},
@@ -53,7 +53,7 @@
   chairperson = {Smart, Ninian and Badham, Paul},
 }
 
-@set{ICUS20:C01:G01,
+@Set{ICUS20:C01:G01,
   entryset = {ICUS20:C01:G01:S01},
   pattern = {ICUS20:C01:G01:[S|X]},
   patterntype = {key},
@@ -62,14 +62,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C01:G01:S01,
+@InProceedings{ICUS20:C01:G01:S01,
   crossref = {ICUS20},
   title = {Scientific knowledge and human knowledge},
   author = {Golaszewska, Maria},
   commentator = {James, Gene}
 }
 
-@inproceedings{ICUS20:C01:G01:S02,
+@InProceedings{ICUS20:C01:G01:S02,
   crossref = {ICUS20},
   title = {Changing levels of scientific control over life and death and their impact on morality and law},
   author = {Davies, Christie},
@@ -77,7 +77,7 @@
 }
 
 
-@set{ICUS20:C01:G02,
+@Set{ICUS20:C01:G02,
   entryset = {ICUS20:C01:G02:S01},
   pattern = {ICUS20:C01:G02:[S|X]},
   patterntype = {key},
@@ -86,14 +86,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C01:G02:S01,
+@InProceedings{ICUS20:C01:G02:S01,
   crossref = {ICUS20},
   title = {Modern scientific world view and value subjectivism},
   author = {James, Gene G.},
   commentator = {Vejs, Janis and Shah, Mohammed Hazim}
 }
 
-@inproceedings{ICUS20:C01:G02:S02,
+@InProceedings{ICUS20:C01:G02:S02,
   crossref = {ICUS20},
   title = {The spirit of science in the background of humanism},
   author = {Liu, Dachun},
@@ -101,7 +101,7 @@
 }
 
 
-@set{ICUS20:C01:G03,
+@Set{ICUS20:C01:G03,
   entryset = {ICUS20:C01:G03:S01},
   pattern = {ICUS20:C01:G03:[S|X]},
   patterntype = {key},
@@ -110,14 +110,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C01:G03:S01,
+@InProceedings{ICUS20:C01:G03:S01,
   crossref = {ICUS20},
   title = {Fact, value and the categorical imperative},
   author = {Vejs, Janis},
   commentator = {Liu, Dachun}
 }
 
-@inproceedings{ICUS20:C01:G03:S02,
+@InProceedings{ICUS20:C01:G03:S02,
   crossref = {ICUS20},
   title = {Humanism, scientism and human future: a comparison of the philosophy of learning in Wang, Yang-ming and Francis Bacon},
   author = {Yao, Xinzhong},
@@ -125,7 +125,7 @@
 }
 
 
-@set{ICUS20:C01:G04,
+@Set{ICUS20:C01:G04,
   entryset = {ICUS20:C01:G04:S01},
   pattern = {ICUS20:C01:G04:[S|X]},
   patterntype = {key},
@@ -134,14 +134,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C01:G04:S01,
+@InProceedings{ICUS20:C01:G04:S01,
   crossref = {ICUS20},
   title = {\textit{Veritatis splendor}: the quest for an objective moral order},
   author = {Coughlan, Michael},
   commentator = {Golaszewska, Maria}
 }
 
-@inproceedings{ICUS20:C01:G04:S02,
+@InProceedings{ICUS20:C01:G04:S02,
   crossref = {ICUS20},
   title = {Empiricism and Christian ethics},
   author = {Badham, Paul},
@@ -149,7 +149,7 @@
 }
 
 
-@set{ICUS20:C01:G05,
+@Set{ICUS20:C01:G05,
   entryset = {ICUS20:C01:G05:S01},
   pattern = {ICUS20:C01:G05:[S|X]},
   patterntype = {key},
@@ -158,14 +158,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C01:G05:S01,
+@InProceedings{ICUS20:C01:G05:S01,
   crossref = {ICUS20},
   title = {The effects of human values on scientific objectivity},
   author = {Becker, Carl},
   commentator = {Badham, Paul}
 }
 
-@inproceedings{ICUS20:C01:G05:S02,
+@InProceedings{ICUS20:C01:G05:S02,
   crossref = {ICUS20},
   title = {Scientific objectivity and theistic belief},
   author = {Yaran, Cafer},
@@ -173,7 +173,7 @@
 }
 
 
-@set{ICUS20:C01:G06,
+@Set{ICUS20:C01:G06,
   entryset = {ICUS20:C01:G06:S01},
   pattern = {ICUS20:C01:G06:[S|X]},
   patterntype = {key},
@@ -182,14 +182,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C01:G06:S01,
+@InProceedings{ICUS20:C01:G06:S01,
   crossref = {ICUS20},
   title = {The Muslim quest for integration of revealed and acquired knowledge},
   author = {Saqeb, Ghulem},
   commentator = {Yaran, Cafer and Alavi, Khalid}
 }
 
-@inproceedings{ICUS20:C01:G06:S02,
+@InProceedings{ICUS20:C01:G06:S02,
   crossref = {ICUS20},
   title = {Unificationism and social thought: a complex systems perspective},
   author = {Turfus, Colin},
@@ -198,7 +198,7 @@
 
 
 
-@set{ICUS20:C02,
+@Set{ICUS20:C02,
   entryset = {ICUS20:C02},
   pattern = {ICUS20:C02:G\d\d:[S|X]},
   patterntype = {key},
@@ -207,7 +207,7 @@
   chairperson = {Kegley, Jacquelyn Ann},
 }
 
-@set{ICUS20:C02:G01,
+@Set{ICUS20:C02:G01,
   entryset = {ICUS20:C02:G01:S01},
   pattern = {ICUS20:C02:G01:[S|X]},
   patterntype = {key},
@@ -216,13 +216,13 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C02:G01:S01,
+@InProceedings{ICUS20:C02:G01:S01,
   crossref = {ICUS20},
   title = {The human genome: facts, enigmas and complexities},
   author = {Pincheira, Guido},
 }
 
-@inproceedings{ICUS20:C02:G01:S02,
+@InProceedings{ICUS20:C02:G01:S02,
   crossref = {ICUS20},
   title = {Limitations of linkage studies and multigenic origins of disease},
   author = {Strohman, Richard C.},
@@ -230,7 +230,7 @@
 }
 
 
-@set{ICUS20:C02:G02,
+@Set{ICUS20:C02:G02,
   entryset = {ICUS20:C02:G02:S01},
   pattern = {ICUS20:C02:G02:[S|X]},
   patterntype = {key},
@@ -239,14 +239,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C02:G02:S01,
+@InProceedings{ICUS20:C02:G02:S01,
   crossref = {ICUS20},
   title = {Genetic information and genetic essentialism: will we betray science, the individual and the community},
   author = {Kegley, Jacquelyn Ann},
   commentator = {Hu, Xinhe}
 }
 
-@inproceedings{ICUS20:C02:G02:S02,
+@InProceedings{ICUS20:C02:G02:S02,
   crossref = {ICUS20},
   title = {Treatment of genetic disease: who is the patient?},
   author = {Shickle, Darren},
@@ -254,7 +254,7 @@
 }
 
 
-@set{ICUS20:C02:G03,
+@Set{ICUS20:C02:G03,
   entryset = {ICUS20:C02:G03:S01},
   pattern = {ICUS20:C02:G03:[S|X]},
   patterntype = {key},
@@ -263,14 +263,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C02:G03:S01,
+@InProceedings{ICUS20:C02:G03:S01,
   crossref = {ICUS20},
   title = {The present state of genetic knowledge and its implications for genetic screening},
   author = {Headings, Verle E.},
   commentator = {Shickle, Darren}
 }
 
-@inproceedings{ICUS20:C02:G03:S02,
+@InProceedings{ICUS20:C02:G03:S02,
   crossref = {ICUS20},
   title = {Genetic knowledge and human value: a clinician's view},
   author = {Kielstein, Rita},
@@ -278,7 +278,7 @@
 }
 
 
-@set{ICUS20:C02:G04,
+@Set{ICUS20:C02:G04,
   entryset = {ICUS20:C02:G04:S01},
   pattern = {ICUS20:C02:G04:[S|X]},
   patterntype = {key},
@@ -287,14 +287,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C02:G04:S01,
+@InProceedings{ICUS20:C02:G04:S01,
   crossref = {ICUS20},
   title = {Amnniocentesis and gender discrimination in India},
   author = {Kumar, Kusum},
   commentator = {Blank, Robert}
 }
 
-@inproceedings{ICUS20:C02:G04:S02,
+@InProceedings{ICUS20:C02:G04:S02,
   crossref = {ICUS20},
   title = {The Chinese perspective on the use of genetic knowledge},
   author = {Hu, Xinhe},
@@ -302,7 +302,7 @@
 }
 
 
-@set{ICUS20:C02:G05,
+@Set{ICUS20:C02:G05,
   entryset = {ICUS20:C02:G05:S01},
   pattern = {ICUS20:C02:G05:[S|X]},
   patterntype = {key},
@@ -311,14 +311,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C02:G05:S01,
+@InProceedings{ICUS20:C02:G05:S01,
   crossref = {ICUS20},
   title = {Genetic screening, sickle cell anemia and the African and African-American perspective: the ethics of screening and consulting},
   author = {Gbadegesin, Segan},
   commentator = {Phlegar, Jacquelyn Ann}
 }
 
-@inproceedings{ICUS20:C02:G05:S02,
+@InProceedings{ICUS20:C02:G05:S02,
   crossref = {ICUS20},
   title = {Islamic perspectives on genetic information use and genetic technology},
   author = {Serour, Gamal I.},
@@ -326,7 +326,7 @@
 }
 
 
-@set{ICUS20:C02:G06,
+@Set{ICUS20:C02:G06,
   entryset = {ICUS20:C02:G06:S01},
   pattern = {ICUS20:C02:G06:[S|X]},
   patterntype = {key},
@@ -335,14 +335,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C02:G06:S01,
+@InProceedings{ICUS20:C02:G06:S01,
   crossref = {ICUS20},
   title = {Public policy issues: genetic knowledge and its use},
   author = {Blank, Robert},
   commentator = {Phlegar, Theodore}
 }
 
-@inproceedings{ICUS20:C02:G06:S02,
+@InProceedings{ICUS20:C02:G06:S02,
   crossref = {ICUS20},
   title = {Legal implications of genetic screening and counseling},
   author = {Phlegar, Theodore and Phlegar, Jacquelyn Ann},
@@ -351,7 +351,7 @@
 
 
 
-@set{ICUS20:C03,
+@Set{ICUS20:C03,
   entryset = {ICUS20:C03},
   pattern = {ICUS20:C03:G\d\d:[S|X]},
   patterntype = {key},
@@ -360,7 +360,7 @@
   chairperson = {Radnitzky, Gerard},
 }
 
-@set{ICUS20:C03:G01,
+@Set{ICUS20:C03:G01,
   entryset = {ICUS20:C03:G01:S01},
   pattern = {ICUS20:C03:G01:[S|X]},
   patterntype = {key},
@@ -369,21 +369,21 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C03:G01:S01,
+@InProceedings{ICUS20:C03:G01:S01,
   crossref = {ICUS20},
   title = {The cart before the horse: on emergent and constructed orders, and their wherewithal},
-  author = {{de Jasay}, Anthony},
+  author = {Anthony {de Jasay}},
   commentator = {Petroni, Angelo}
 }
 
-@inproceedings{ICUS20:C03:G01:S02,
+@InProceedings{ICUS20:C03:G01:S02,
   crossref = {ICUS20},
   title = {The emergence of states},
   author = {Tullock, Gordon},
   commentator = {Hoppe, Hans-Hermann}
 }
 
-@inproceedings{ICUS20:C03:G01:S03,
+@InProceedings{ICUS20:C03:G01:S03,
   crossref = {ICUS20},
   title = {International competition among states: minimal coercion, market regime and innovation: the case of antiquity},
   author = {Bernholz, Peter},
@@ -391,7 +391,7 @@
 }
 
 
-@set{ICUS20:C03:G02,
+@Set{ICUS20:C03:G02,
   entryset = {ICUS20:C03:G02:S01},
   pattern = {ICUS20:C03:G02:[S|X]},
   patterntype = {key},
@@ -400,22 +400,22 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C03:G02:S01,
+@InProceedings{ICUS20:C03:G02:S01,
   crossref = {ICUS20},
   title = {Values, preferences and evolution},
   author = {Petroni, Angelo M.},
   commentator = {Flew, Antony}
 }
 
-@inproceedings{ICUS20:C03:G02:S02,
+@InProceedings{ICUS20:C03:G02:S02,
   crossref = {ICUS20},
   title = {Towards a theory of autogovernment},
-  author = {{Lynch Jr}, Alberto Benegas},
+  author = {Alberto Benegas {Lynch Jr}},
   commentator = {Versailles, David W.}
 }
 
 
-@set{ICUS20:C03:G03,
+@Set{ICUS20:C03:G03,
   entryset = {ICUS20:C03:G03:S01},
   pattern = {ICUS20:C03:G03:[S|X]},
   patterntype = {key},
@@ -424,14 +424,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C03:G03:S01,
+@InProceedings{ICUS20:C03:G03:S01,
   crossref = {ICUS20},
   title = {Institutions and the spontaneous evolution of morality},
   author = {Benson, Bruce L.},
   commentator = {DeAlessi, Louis}
 }
 
-@inproceedings{ICUS20:C03:G03:S02,
+@InProceedings{ICUS20:C03:G03:S02,
   crossref = {ICUS20},
   title = {Value, efficiency and rules: the limits of economics},
   author = {DeAlessi, Louis},
@@ -439,7 +439,7 @@
 }
 
 
-@set{ICUS20:C03:G04,
+@Set{ICUS20:C03:G04,
   entryset = {ICUS20:C03:G04:S01},
   pattern = {ICUS20:C03:G04:[S|X]},
   patterntype = {key},
@@ -448,14 +448,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C03:G04:S01,
+@InProceedings{ICUS20:C03:G04:S01,
   crossref = {ICUS20},
   title = {The political economy of monarchy and democracy and the idea of a natural order},
   author = {Hoppe, Hans-Hermann},
   commentator = {Tullock, Gordon and {Lynch Jr}, Alberto Benegas and Petroni, Angelo}
 }
 
-@inproceedings{ICUS20:C03:G04:S02,
+@InProceedings{ICUS20:C03:G04:S02,
   crossref = {ICUS20},
   title = {State welfare and individual de-moralization},
   author = {Flew, Antony},
@@ -463,7 +463,7 @@
 }
 
 
-@set{ICUS20:C03:G05,
+@Set{ICUS20:C03:G05,
   entryset = {ICUS20:C03:G05:S01},
   pattern = {ICUS20:C03:G05:[S|X]},
   patterntype = {key},
@@ -472,13 +472,13 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C03:G05:S01,
+@InProceedings{ICUS20:C03:G05:S01,
   crossref = {ICUS20},
   title = {The market inside and outside the law: naturally imperfect vs. politically distorted markets},
   author = {Seldon, Arthur},
 }
 
-@inproceedings{ICUS20:C03:G05:S02,
+@InProceedings{ICUS20:C03:G05:S02,
   crossref = {ICUS20},
   title = {International commerce as an instance of non-coerced social order},
   author = {{Curzon-Price}, Victoria},
@@ -486,7 +486,7 @@
 }
 
 
-@set{ICUS20:C03:G06,
+@Set{ICUS20:C03:G06,
   entryset = {ICUS20:C03:G06:S01},
   pattern = {ICUS20:C03:G06:[S|X]},
   patterntype = {key},
@@ -495,23 +495,23 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C03:G06:S01,
+@InProceedings{ICUS20:C03:G06:S01,
   crossref = {ICUS20},
   title = {Competitive federalism for the era of globalization},
-  author = {Kasper, Wolfgang},
-  commentator = {{Lynch Jr}, Alberto Benegas}
+  author = {Kasper, Wolfgang E.},
+  commentator = {Alberto Benegas {Lynch Jr}}
 }
 
-@inproceedings{ICUS20:C03:G06:S02,
+@InProceedings{ICUS20:C03:G06:S02,
   crossref = {ICUS20},
   title = {Voluntary and coercive orders in the health care system},
-  author = {{von Studnitz}, Wilfried},
+  author = {Wilfried {von Studnitz}},
   commentator = {Hoppe, Hans-Hermann}
 }
 
 
 
-@set{ICUS20:C04,
+@Set{ICUS20:C04,
   entryset = {ICUS20:C04},
   pattern = {ICUS20:C04:G\d\d:[S|X]},
   patterntype = {key},
@@ -520,7 +520,7 @@
   chairperson = {Ravindra, Ravi and Murray, Priscilla},
 }
 
-@set{ICUS20:C04:G01,
+@Set{ICUS20:C04:G01,
   entryset = {ICUS20:C04:G01:S01},
   pattern = {ICUS20:C04:G01:[S|X]},
   patterntype = {key},
@@ -529,20 +529,20 @@
   chairperson = {Murray, Priscilla},
 }
 
-@inproceedings{ICUS20:C04:G01:S01,
+@InProceedings{ICUS20:C04:G01:S01,
   crossref = {ICUS20},
   title = {Science and the sacred},
   author = {Ravindra, Ravi},
 }
 
-@inproceedings{ICUS20:C04:G01:S02,
+@InProceedings{ICUS20:C04:G01:S02,
   crossref = {ICUS20},
   title = {East-West perspectives on methodological approaches to science and the sacred},
   author = {Baughman, James A.},
 }
 
 
-@set{ICUS20:C04:G02,
+@Set{ICUS20:C04:G02,
   entryset = {ICUS20:C04:G02:S01},
   pattern = {ICUS20:C04:G02:[S|X]},
   patterntype = {key},
@@ -551,20 +551,20 @@
   chairperson = {Sudarshan, George},
 }
 
-@inproceedings{ICUS20:C04:G02:S01,
+@InProceedings{ICUS20:C04:G02:S01,
   crossref = {ICUS20},
   title = {Unity and interdependence in science and religion: alternatives to despair and deconstruction},
   author = {Fleming, James},
 }
 
-@inproceedings{ICUS20:C04:G02:S02,
+@InProceedings{ICUS20:C04:G02:S02,
   crossref = {ICUS20},
   title = {Kepler and teh sacredness of natural science},
   author = {Kozhamthadam, Job},
 }
 
 
-@set{ICUS20:C04:G03,
+@Set{ICUS20:C04:G03,
   entryset = {ICUS20:C04:G03:S01},
   pattern = {ICUS20:C04:G03:[S|X]},
   patterntype = {key},
@@ -573,26 +573,26 @@
   chairperson = {Ravindra, Ravi},
 }
 
-@inproceedings{ICUS20:C04:G03:S01,
+@InProceedings{ICUS20:C04:G03:S01,
   crossref = {ICUS20},
   title = {Witnessing awareness: nature of creativity},
   author = {Sudarshan, George},
 }
 
-@inproceedings{ICUS20:C04:G03:S02,
+@InProceedings{ICUS20:C04:G03:S02,
   crossref = {ICUS20},
   title = {Toward a science of the heart: David Bohm's physics and beyond},
   author = {Keepin, William N.},
 }
 
-@inproceedings{ICUS20:C04:G03:X03,
+@InProceedings{ICUS20:C04:G03:X03,
   crossref = {ICUS20},
   title = {Session discussion},
   author = {Jin, Sung Bae},
 }
 
 
-@set{ICUS20:C04:G04,
+@Set{ICUS20:C04:G04,
   entryset = {ICUS20:C04:G04:S01},
   pattern = {ICUS20:C04:G04:[S|X]},
   patterntype = {key},
@@ -601,26 +601,26 @@
   chairperson = {Krishna, Padmanabahn},
 }
 
-@inproceedings{ICUS20:C04:G04:S01,
+@InProceedings{ICUS20:C04:G04:S01,
   crossref = {ICUS20},
   title = {Brain science and the emergence of values},
   author = {Quadens, Olga},
 }
 
-@inproceedings{ICUS20:C04:G04:S02,
+@InProceedings{ICUS20:C04:G04:S02,
   crossref = {ICUS20},
   title = {Humility as a scientific principle},
   author = {Spivak, Dmitri},
 }
 
-@inproceedings{ICUS20:C04:G04:X03,
+@InProceedings{ICUS20:C04:G04:X03,
   crossref = {ICUS20},
   title = {Session discussion},
   author = {Pulida, Carlos},
 }
 
 
-@set{ICUS20:C04:G05,
+@Set{ICUS20:C04:G05,
   entryset = {ICUS20:C04:G05:S01},
   pattern = {ICUS20:C04:G05:[S|X]},
   patterntype = {key},
@@ -629,20 +629,20 @@
   chairperson = {Quadens, Olga},
 }
 
-@inproceedings{ICUS20:C04:G05:S01,
+@InProceedings{ICUS20:C04:G05:S01,
   crossref = {ICUS20},
   title = {The depths of human understanding: science in the search of meaning},
   author = {Lagmay, Alfredo},
 }
 
-@inproceedings{ICUS20:C04:G05:S02,
+@InProceedings{ICUS20:C04:G05:S02,
   crossref = {ICUS20},
   title = {The sacred, consciousness and values},
   author = {{Gonzalez-Garcia}, Ana Maria},
 }
 
 
-@set{ICUS20:C04:G06,
+@Set{ICUS20:C04:G06,
   entryset = {ICUS20:C04:G06:S01},
   pattern = {ICUS20:C04:G06:[S|X]},
   patterntype = {key},
@@ -651,19 +651,19 @@
   chairperson = {Lagmay, Alfredo},
 }
 
-@inproceedings{ICUS20:C04:G06:S01,
+@InProceedings{ICUS20:C04:G06:S01,
   crossref = {ICUS20},
   title = {She looks at his science: feminist perspectives on science, nature and the sacred},
   author = {Murray, Priscilla},
 }
 
-@inproceedings{ICUS20:C04:G06:S02,
+@InProceedings{ICUS20:C04:G06:S02,
   crossref = {ICUS20},
   title = {Science and religion: two aspects of a single reality},
   author = {Krishna, Padmanabahn},
 }
 
-@inproceedings{ICUS20:C04:G06:X03,
+@InProceedings{ICUS20:C04:G06:X03,
   crossref = {ICUS20},
   title = {Session discussion},
   author = {Murthy, M. V. R. S.},
@@ -671,7 +671,7 @@
 
 
 
-@set{ICUS20:C05,
+@Set{ICUS20:C05,
   entryset = {ICUS20:C05},
   pattern = {ICUS20:C05:G\d\d:[S|X]},
   patterntype = {key},
@@ -680,7 +680,7 @@
   chairperson = {Moody, Harry R.},
 }
 
-@set{ICUS20:C05:G01,
+@Set{ICUS20:C05:G01,
   entryset = {ICUS20:C05:G01:S01},
   pattern = {ICUS20:C05:G01:[S|X]},
   patterntype = {key},
@@ -689,20 +689,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C05:G01:S01,
+@InProceedings{ICUS20:C05:G01:S01,
   crossref = {ICUS20},
   title = {Scenarios for an aging society: choosing our future selves},
   author = {Moody, Harry R.},
 }
 
-@inproceedings{ICUS20:C05:G01:S02,
+@InProceedings{ICUS20:C05:G01:S02,
   crossref = {ICUS20},
   title = {Solidarity with the elderly and the allocation of resources},
   author = {{ter Meulen}, Ruud H. J.},
 }
 
 
-@set{ICUS20:C05:G02,
+@Set{ICUS20:C05:G02,
   entryset = {ICUS20:C05:G02:S01},
   pattern = {ICUS20:C05:G02:[S|X]},
   patterntype = {key},
@@ -711,20 +711,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C05:G02:S01,
+@InProceedings{ICUS20:C05:G02:S01,
   crossref = {ICUS20},
   title = {Geriatric ethics: what we know, what we hope},
   author = {Wilson, Nancy},
 }
 
-@inproceedings{ICUS20:C05:G02:S02,
+@InProceedings{ICUS20:C05:G02:S02,
   crossref = {ICUS20},
   title = {Community-based services: the challenge to aging people},
   author = {Lishman, Gordon},
 }
 
 
-@set{ICUS20:C05:G03,
+@Set{ICUS20:C05:G03,
   entryset = {ICUS20:C05:G03:S01},
   pattern = {ICUS20:C05:G03:[S|X]},
   patterntype = {key},
@@ -733,20 +733,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C05:G03:S01,
+@InProceedings{ICUS20:C05:G03:S01,
   crossref = {ICUS20},
   title = {Intergenerational relationships: family memory and the public world},
   author = {Brabazon, Kevin},
 }
 
-@inproceedings{ICUS20:C05:G03:S02,
+@InProceedings{ICUS20:C05:G03:S02,
   crossref = {ICUS20},
   title = {The longevity factor: implications for human potential in the second half of life},
   author = {Bronte, Lydia},
 }
 
 
-@set{ICUS20:C05:G04,
+@Set{ICUS20:C05:G04,
   entryset = {ICUS20:C05:G04:S01},
   pattern = {ICUS20:C05:G04:[S|X]},
   patterntype = {key},
@@ -755,20 +755,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C05:G04:S01,
+@InProceedings{ICUS20:C05:G04:S01,
   crossref = {ICUS20},
   title = {Reconstructing the pathways of later life},
   author = {Achenbaum, W. Andrew},
 }
 
-@inproceedings{ICUS20:C05:G04:S02,
+@InProceedings{ICUS20:C05:G04:S02,
   crossref = {ICUS20},
   title = {Toward apppropriate technology for an aging society},
   author = {Sabelman, Eric E.},
 }
 
 
-@set{ICUS20:C05:G05,
+@Set{ICUS20:C05:G05,
   entryset = {ICUS20:C05:G05:S01},
   pattern = {ICUS20:C05:G05:[S|X]},
   patterntype = {key},
@@ -777,20 +777,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C05:G05:S01,
+@InProceedings{ICUS20:C05:G05:S01,
   crossref = {ICUS20},
   title = {Life-long health: beyond the medical model},
   author = {Schmidt, Robert M.},
 }
 
-@inproceedings{ICUS20:C05:G05:S02,
+@InProceedings{ICUS20:C05:G05:S02,
   crossref = {ICUS20},
   title = {Holistic care and health promotion: implications for old age},
   author = {Bergman, William L.},
 }
 
 
-@set{ICUS20:C05:G06,
+@Set{ICUS20:C05:G06,
   entryset = {ICUS20:C05:G06:S01},
   pattern = {ICUS20:C05:G06:[S|X]},
   patterntype = {key},
@@ -799,19 +799,19 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C05:G06:S01,
+@InProceedings{ICUS20:C05:G06:S01,
   crossref = {ICUS20},
   title = {Everyday mysticism: spiritual development in later life},
   author = {Atchley, Robert C.},
 }
 
-@inproceedings{ICUS20:C05:G06:S02,
+@InProceedings{ICUS20:C05:G06:S02,
   crossref = {ICUS20},
   title = {Physical environment and the elderly: public policy issues},
   author = {Lee, Terrence},
 }
 
-@inproceedings{ICUS20:C05:G06:X03,
+@InProceedings{ICUS20:C05:G06:X03,
   crossref = {ICUS20},
   title = {Discussion},
   author = {Nahemow, Lucille and Park, Choong-Suh},
@@ -819,7 +819,7 @@
 
 
 
-@set{ICUS20:C06,
+@Set{ICUS20:C06,
   entryset = {ICUS20:C06},
   pattern = {ICUS20:C06:G\d\d:[S|X]},
   patterntype = {key},
@@ -828,7 +828,7 @@
   chairperson = {Turner, Frederick},
 }
 
-@set{ICUS20:C06:G01,
+@Set{ICUS20:C06:G01,
   entryset = {ICUS20:C06:G01:S01},
   pattern = {ICUS20:C06:G01:[S|X]},
   patterntype = {key},
@@ -837,26 +837,26 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C06:G01:S01,
+@InProceedings{ICUS20:C06:G01:S01,
   crossref = {ICUS20},
   title = {Committee introduction},
   author = {Turner, Frederick and Wijeratne, Bryan},
 }
 
-@inproceedings{ICUS20:C06:G01:S02,
+@InProceedings{ICUS20:C06:G01:S02,
   crossref = {ICUS20},
   title = {Universals in ritual and human nature},
   author = {Brögger, Jan},
 }
 
-@inproceedings{ICUS20:C06:G01:S03,
+@InProceedings{ICUS20:C06:G01:S03,
   crossref = {ICUS20},
   title = {Antecedents of musical meaning in the mother-infant dyad},
   author = {Dissanayake, Ellen},
 }
 
 
-@set{ICUS20:C06:G02,
+@Set{ICUS20:C06:G02,
   entryset = {ICUS20:C06:G02:S01},
   pattern = {ICUS20:C06:G02:[S|X]},
   patterntype = {key},
@@ -865,20 +865,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C06:G02:S01,
+@InProceedings{ICUS20:C06:G02:S01,
   crossref = {ICUS20},
   title = {Visual art as ancestral lectures: towards a definition of art and theory of its social function},
   author = {Coe, Kathryn},
 }
 
-@inproceedings{ICUS20:C06:G02:S02,
+@InProceedings{ICUS20:C06:G02:S02,
   crossref = {ICUS20},
   title = {Do cognitive predispositions predict of determine literary value judgements? Narrativity, plot and aesthetics},
   author = {Easterlin, Nancy},
 }
 
 
-@set{ICUS20:C06:G03,
+@Set{ICUS20:C06:G03,
   entryset = {ICUS20:C06:G03:S01},
   pattern = {ICUS20:C06:G03:[S|X]},
   patterntype = {key},
@@ -887,20 +887,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C06:G03:S01,
+@InProceedings{ICUS20:C06:G03:S01,
   crossref = {ICUS20},
   title = {Tragedy and chaos},
   author = {Argyros, Alexander},
 }
 
-@inproceedings{ICUS20:C06:G03:S02,
+@InProceedings{ICUS20:C06:G03:S02,
   crossref = {ICUS20},
   title = {An antipode to beauty: the misbegotten in Western narrative},
   author = {Cooke, Brett},
 }
 
 
-@set{ICUS20:C06:G04,
+@Set{ICUS20:C06:G04,
   entryset = {ICUS20:C06:G04:S01},
   pattern = {ICUS20:C06:G04:[S|X]},
   patterntype = {key},
@@ -909,20 +909,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C06:G04:S01,
+@InProceedings{ICUS20:C06:G04:S01,
   crossref = {ICUS20},
   title = {Can 'teaching' the right brain enhance artistic ability?},
   author = {Harris, Lauren J.},
 }
 
-@inproceedings{ICUS20:C06:G04:S02,
+@InProceedings{ICUS20:C06:G04:S02,
   crossref = {ICUS20},
   title = {Cerebral assymetry and aesthetic emotion},
   author = {Levy, Jerre},
 }
 
 
-@set{ICUS20:C06:G05,
+@Set{ICUS20:C06:G05,
   entryset = {ICUS20:C06:G05:S01},
   pattern = {ICUS20:C06:G05:[S|X]},
   patterntype = {key},
@@ -931,20 +931,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C06:G05:S01,
+@InProceedings{ICUS20:C06:G05:S01,
   crossref = {ICUS20},
   title = {An ecopoetics of beauty and meaning},
   author = {Turner, Frederick},
 }
 
-@inproceedings{ICUS20:C06:G05:S02,
+@InProceedings{ICUS20:C06:G05:S02,
   crossref = {ICUS20},
   title = {In search of texture},
   author = {DePryck, Koen},
 }
 
 
-@set{ICUS20:C06:G06,
+@Set{ICUS20:C06:G06,
   entryset = {ICUS20:C06:G06:S01},
   pattern = {ICUS20:C06:G06:[S|X]},
   patterntype = {key},
@@ -953,19 +953,19 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C06:G06:S01,
+@InProceedings{ICUS20:C06:G06:S01,
   crossref = {ICUS20},
   title = {Biological foundations of aesthetics: an Indian perspective},
   author = {Vatsyayan, Kapila},
 }
 
-@inproceedings{ICUS20:C06:G06:S02,
+@InProceedings{ICUS20:C06:G06:S02,
   crossref = {ICUS20},
   title = {(to be announced)},
   author = {Crosthwaite, Roger},
 }
 
-@inproceedings{ICUS20:C06:G06:X03,
+@InProceedings{ICUS20:C06:G06:X03,
   crossref = {ICUS20},
   title = {Discussion},
   author = {Graham, Gordon and Wohlmuth, Paul},
@@ -973,7 +973,7 @@
 
 
 
-@set{ICUS20:C07,
+@Set{ICUS20:C07,
   entryset = {ICUS20:C07},
   pattern = {ICUS20:C07:G\d\d:[S|X]},
   patterntype = {key},
@@ -982,7 +982,7 @@
   chairperson = {Lee, Sang Hun and Sontag, Frederick},
 }
 
-@set{ICUS20:C07:G01,
+@Set{ICUS20:C07:G01,
   entryset = {ICUS20:C07:G01:S01},
   pattern = {ICUS20:C07:G01:[S|X]},
   patterntype = {key},
@@ -991,26 +991,26 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C07:G01:S01,
+@InProceedings{ICUS20:C07:G01:S01,
   crossref = {ICUS20},
   title = {The unity of cultures and absolute values: a unificationist approach},
   author = {Wilson, Andrew},
 }
 
-@inproceedings{ICUS20:C07:G01:S02,
+@InProceedings{ICUS20:C07:G01:S02,
   crossref = {ICUS20},
   title = {The encounter of religions and the harmony of cultures},
   author = {Pentikäinen, Juha},
 }
 
-@inproceedings{ICUS20:C07:G01:X03,
+@InProceedings{ICUS20:C07:G01:X03,
   crossref = {ICUS20},
   title = {Discussion},
   author = {Lee, Hyon Bok},
 }
 
 
-@set{ICUS20:C07:G02,
+@Set{ICUS20:C07:G02,
   entryset = {ICUS20:C07:G02:S01},
   pattern = {ICUS20:C07:G02:[S|X]},
   patterntype = {key},
@@ -1019,26 +1019,26 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C07:G02:S01,
+@InProceedings{ICUS20:C07:G02:S01,
   crossref = {ICUS20},
   title = {Charismatic-messianic capacities to transcend the given world of modernity: the new cultural-political problems in a post-cold war world},
   author = {Fritzsche, Helmut G.},
 }
 
-@inproceedings{ICUS20:C07:G02:S02,
+@InProceedings{ICUS20:C07:G02:S02,
   crossref = {ICUS20},
   title = {Towards harmony of cultures},
   author = {Basu, Arabinda},
 }
 
-@inproceedings{ICUS20:C07:G02:X03,
+@InProceedings{ICUS20:C07:G02:X03,
   crossref = {ICUS20},
   title = {Discussion},
   author = {Spurgin, Hugh},
 }
 
 
-@set{ICUS20:C07:G03,
+@Set{ICUS20:C07:G03,
   entryset = {ICUS20:C07:G03:S01},
   pattern = {ICUS20:C07:G03:[S|X]},
   patterntype = {key},
@@ -1047,26 +1047,26 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C07:G03:S01,
+@InProceedings{ICUS20:C07:G03:S01,
   crossref = {ICUS20},
   title = {The haunting and healing power of history},
   author = {Schwarz, Hans},
 }
 
-@inproceedings{ICUS20:C07:G03:S02,
+@InProceedings{ICUS20:C07:G03:S02,
   crossref = {ICUS20},
   title = {Philosophical groundwork for the harmony of cultures},
   author = {Shimmyo, Theodore T.},
 }
 
-@inproceedings{ICUS20:C07:G03:X03,
+@InProceedings{ICUS20:C07:G03:X03,
   crossref = {ICUS20},
   title = {Discussion},
   author = {Watanabe, Hisayoshi},
 }
 
 
-@set{ICUS20:C07:G04,
+@Set{ICUS20:C07:G04,
   entryset = {ICUS20:C07:G04:S01},
   pattern = {ICUS20:C07:G04:[S|X]},
   patterntype = {key},
@@ -1075,27 +1075,27 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C07:G04:S01,
+@InProceedings{ICUS20:C07:G04:S01,
   crossref = {ICUS20},
   title = {Unification blessed marriage: an educational paradigm promoting a harmony of cultures (or... what
   about the kids of the next generation?)},
   author = {Carlson, David},
 }
 
-@inproceedings{ICUS20:C07:G04:S02,
+@InProceedings{ICUS20:C07:G04:S02,
   crossref = {ICUS20},
   title = {Universalism, nationalism and the prospects for a harmonious world order},
   author = {Shtromas, Alexander},
 }
 
-@inproceedings{ICUS20:C07:G04:X03,
+@InProceedings{ICUS20:C07:G04:X03,
   crossref = {ICUS20},
   title = {Discussion},
   author = {Lewis, Sarah},
 }
 
 
-@set{ICUS20:C07:G05,
+@Set{ICUS20:C07:G05,
   entryset = {ICUS20:C07:G05:S01},
   pattern = {ICUS20:C07:G05:[S|X]},
   patterntype = {key},
@@ -1104,26 +1104,26 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C07:G05:S01,
+@InProceedings{ICUS20:C07:G05:S01,
   crossref = {ICUS20},
   title = {Nuclear disarmament versus nuclear war},
   author = {Higatsberger, Michael J.},
 }
 
-@inproceedings{ICUS20:C07:G05:S02,
+@InProceedings{ICUS20:C07:G05:S02,
   crossref = {ICUS20},
   title = {The information revolution and world harmony},
   author = {Alonso, Marcelo},
 }
 
-@inproceedings{ICUS20:C07:G05:X03,
+@InProceedings{ICUS20:C07:G05:X03,
   crossref = {ICUS20},
   title = {Discussion},
   author = {Seidel, Dietrich},
 }
 
 
-@set{ICUS20:C07:G06,
+@Set{ICUS20:C07:G06,
   entryset = {ICUS20:C07:G06:S01},
   pattern = {ICUS20:C07:G06:[S|X]},
   patterntype = {key},
@@ -1132,26 +1132,26 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C07:G06:S01,
+@InProceedings{ICUS20:C07:G06:S01,
   crossref = {ICUS20},
   title = {Group culture and individual culture},
   author = {Bauer, Henry H.},
 }
 
-@inproceedings{ICUS20:C07:G06:S02,
+@InProceedings{ICUS20:C07:G06:S02,
   crossref = {ICUS20},
   title = {Cultural prejudice and cultural conflict - from the perspective of communication},
   author = {Lee, Sanghwe},
 }
 
-@inproceedings{ICUS20:C07:G06:X03,
+@InProceedings{ICUS20:C07:G06:X03,
   crossref = {ICUS20},
   title = {Discussion},
   author = {Tanabe, Jennifer},
 }
 
 
-@set{ICUS20:C07:G07,
+@Set{ICUS20:C07:G07,
   entryset = {ICUS20:C07:G07:S01},
   pattern = {ICUS20:C07:G07:[S|X]},
   patterntype = {key},
@@ -1160,7 +1160,7 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS20:C07:G07:S01,
+@InProceedings{ICUS20:C07:G07:S01,
   crossref = {ICUS20},
   title = {Summary remarks},
   author = {Lee, Sang Hun},
