--- a/inst/extdata/bibset-raw/icus22.bib
+++ b/inst/extdata/bibset-raw/icus22.bib
@@ -1,4 +1,4 @@
-@proceedings{ICUS22,
+@Proceedings{ICUS22,
   title = {Absolute Values and the Unity of the Sciences: Science for the Benefit of Humanity},
   titleaddon = {Twenty-second International Conference on the Unity of the Sciences},
   shorttitle = {ICUS XXII},
@@ -12,7 +12,7 @@
   keywords={primary, program, moonist}
 }
 
-@set{ICUS22:C01,
+@Set{ICUS22:C01,
   entryset = {ICUS22:C01},
   pattern = {ICUS22:C01:G\d\d:[S|X]},
   patterntype = {key},
@@ -21,7 +21,7 @@
   chairperson = {Nagy, Denes and Atalay, Bulent I.},
 }
 
-@set{ICUS22:C01:G01,
+@Set{ICUS22:C01:G01,
   entryset = {ICUS22:C01:G01:S01},
   pattern = {ICUS22:C01:G01:[S|X]},
   patterntype = {key},
@@ -30,20 +30,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C01:G01:S01,
+@InProceedings{ICUS22:C01:G01:S01,
   crossref = {ICUS22},
   title = {Symmetry, asymmetry, dissymetry: art and science, East and West},
   author = {Nagy, Denes and Inkler, Valeria},
 }
 
-@inproceedings{ICUS22:C01:G01:S02,
+@InProceedings{ICUS22:C01:G01:S02,
   crossref = {ICUS22},
   title = {The enigma of asymmetry},
   author = {Kondepudi, Dilip K.},
 }
 
 
-@set{ICUS22:C01:G02,
+@Set{ICUS22:C01:G02,
   entryset = {ICUS22:C01:G02:S01},
   pattern = {ICUS22:C01:G02:[S|X]},
   patterntype = {key},
@@ -52,20 +52,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C01:G02:S01,
+@InProceedings{ICUS22:C01:G02:S01,
   crossref = {ICUS22},
   title = {Mathematical crystallography: why do we have symmetry?},
   author = {Nagy, Denes},
 }
 
-@inproceedings{ICUS22:C01:G02:S02,
+@InProceedings{ICUS22:C01:G02:S02,
   crossref = {ICUS22},
   title = {The structure of microcrystalline zeolites: symmetry with a purpose},
   author = {Hamdan, Halimaton},
 }
 
 
-@set{ICUS22:C01:G03,
+@Set{ICUS22:C01:G03,
   entryset = {ICUS22:C01:G03:S01},
   pattern = {ICUS22:C01:G03:[S|X]},
   patterntype = {key},
@@ -74,20 +74,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C01:G03:S01,
+@InProceedings{ICUS22:C01:G03:S01,
   crossref = {ICUS22},
   title = {Symmetry and sidedness in human anatomy},
   author = {Atalay, Michael K.},
 }
 
-@inproceedings{ICUS22:C01:G03:S02,
+@InProceedings{ICUS22:C01:G03:S02,
   crossref = {ICUS22},
   title = {Functional asymmetries between the two sides of the brain},
   author = {Nicholls, Michael},
 }
 
 
-@set{ICUS22:C01:G05,
+@Set{ICUS22:C01:G05,
   entryset = {ICUS22:C01:G05:S01},
   pattern = {ICUS22:C01:G05:[S|X]},
   patterntype = {key},
@@ -96,20 +96,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C01:G05:S01,
+@InProceedings{ICUS22:C01:G05:S01,
   crossref = {ICUS22},
   title = {Various forms of symmetry and beauty},
   author = {Ricketts, Robert},
 }
 
-@inproceedings{ICUS22:C01:G05:S02,
+@InProceedings{ICUS22:C01:G05:S02,
   crossref = {ICUS22},
   title = {The human expression of symmetry: art and neuroscience},
   author = {Tyler, Christopher W.},
 }
 
 
-@set{ICUS22:C01:G06,
+@Set{ICUS22:C01:G06,
   entryset = {ICUS22:C01:G06:S01},
   pattern = {ICUS22:C01:G06:[S|X]},
   patterntype = {key},
@@ -118,20 +118,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C01:G06:S01,
+@InProceedings{ICUS22:C01:G06:S01,
   crossref = {ICUS22},
   title = {Symmetry - Islamic art - my art},
   author = {Abas, Syed Jan},
 }
 
-@inproceedings{ICUS22:C01:G06:S02,
+@InProceedings{ICUS22:C01:G06:S02,
   crossref = {ICUS22},
   title = {The two Leonardos, Part I. Nature's numbers: Leonardo Fibonacci di Pisa},
   author = {Atalay, Bulent I.},
 }
 
 
-@set{ICUS22:C01:G07,
+@Set{ICUS22:C01:G07,
   entryset = {ICUS22:C01:G07:S01},
   pattern = {ICUS22:C01:G07:[S|X]},
   patterntype = {key},
@@ -140,7 +140,7 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C01:G07:S01,
+@InProceedings{ICUS22:C01:G07:S01,
   crossref = {ICUS22},
   title = {The two Leonardos, Part I. Leonardo da Vinci},
   author = {Atalay, Bulent I.},
@@ -148,7 +148,7 @@
 
 
 
-@set{ICUS22:C02,
+@Set{ICUS22:C02,
   entryset = {ICUS22:C02},
   pattern = {ICUS22:C02:G\d\d:[S|X]},
   patterntype = {key},
@@ -157,7 +157,7 @@
   chairperson = {Jerome, Norge W. and Becker, Carl},
 }
 
-@set{ICUS22:C02:G01,
+@Set{ICUS22:C02:G01,
   entryset = {ICUS22:C02:G01:S01},
   pattern = {ICUS22:C02:G01:[S|X]},
   patterntype = {key},
@@ -166,14 +166,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C02:G01:S01,
+@InProceedings{ICUS22:C02:G01:S01,
   crossref = {ICUS22},
   title = {Integrating science and nature in a global health care system},
   author = {Hobbs, Ron},
 }
 
 
-@set{ICUS22:C02:G02,
+@Set{ICUS22:C02:G02,
   entryset = {ICUS22:C02:G02:S01},
   pattern = {ICUS22:C02:G02:[S|X]},
   patterntype = {key},
@@ -182,20 +182,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C02:G02:S01,
+@InProceedings{ICUS22:C02:G02:S01,
   crossref = {ICUS22},
   title = {Comprehensive medicine - its philosophy and methodology},
   author = {Nagata, Katsutaro},
 }
 
-@inproceedings{ICUS22:C02:G02:S02,
+@InProceedings{ICUS22:C02:G02:S02,
   crossref = {ICUS22},
   title = {Successful holistic treatment for chronic depression},
   author = {Shealy, C. Norman and Thomlinson, Paul},
 }
 
 
-@set{ICUS22:C02:G03,
+@Set{ICUS22:C02:G03,
   entryset = {ICUS22:C02:G03:S01},
   pattern = {ICUS22:C02:G03:[S|X]},
   patterntype = {key},
@@ -204,20 +204,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C02:G03:S01,
+@InProceedings{ICUS22:C02:G03:S01,
   crossref = {ICUS22},
   title = {Chi Kung and holistic health and medicine},
   author = {Kit, Wong Kiew},
 }
 
-@inproceedings{ICUS22:C02:G03:S02,
+@InProceedings{ICUS22:C02:G03:S02,
   crossref = {ICUS22},
   title = {Traditional Chinese medicine (TCM) in the United States: incorporating TCM in modern health care to enhance the care of patients},
   author = {Hui, Ka Kit},
 }
 
 
-@set{ICUS22:C02:G05,
+@Set{ICUS22:C02:G05,
   entryset = {ICUS22:C02:G05:S01},
   pattern = {ICUS22:C02:G05:[S|X]},
   patterntype = {key},
@@ -226,13 +226,13 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C02:G05:S01,
+@InProceedings{ICUS22:C02:G05:S01,
   crossref = {ICUS22},
   title = {Aromatherapy: uniting body, mind and spirit - the missing model},
   author = {Pirtle, Lizette},
 }
 
-@inproceedings{ICUS22:C02:G05:S02,
+@InProceedings{ICUS22:C02:G05:S02,
   crossref = {ICUS22},
   title = {Aromatherapy: the healing uses of essential oils},
   author = {DePaula, Geraldine},
@@ -240,7 +240,7 @@
 
 
 
-@set{ICUS22:C02:G06,
+@Set{ICUS22:C02:G06,
   entryset = {ICUS22:C02:G06:S01},
   pattern = {ICUS22:C02:G06:[S|X]},
   patterntype = {key},
@@ -249,13 +249,13 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C02:G06:S01,
+@InProceedings{ICUS22:C02:G06:S01,
   crossref = {ICUS22},
   title = {The potential of modern phytotherapy as a whole system science},
   author = {Kenner, Daniel},
 }
 
-@inproceedings{ICUS22:C02:G06:S02,
+@InProceedings{ICUS22:C02:G06:S02,
   crossref = {ICUS22},
   title = {Two cases of cancer patients treated by holistic medicine},
   author = {Kim, Tae-Soo},
@@ -263,7 +263,7 @@
 
 
 
-@set{ICUS22:C03,
+@Set{ICUS22:C03,
   entryset = {ICUS22:C03},
   pattern = {ICUS22:C03:G\d\d:[S|X]},
   patterntype = {key},
@@ -272,7 +272,7 @@
   chairperson = {Brøgger, Jan},
 }
 
-@set{ICUS22:C03:G01,
+@Set{ICUS22:C03:G01,
   entryset = {ICUS22:C03:G01:S01},
   pattern = {ICUS22:C03:G01:[S|X]},
   patterntype = {key},
@@ -281,20 +281,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C03:G01:S01,
+@InProceedings{ICUS22:C03:G01:S01,
   crossref = {ICUS22},
   title = {The cultural history of epidemics},
   author = {Brøgger, Jan},
 }
 
-@inproceedings{ICUS22:C03:G01:S02,
+@InProceedings{ICUS22:C03:G01:S02,
   crossref = {ICUS22},
   title = {The threat of hantaviruses and vaccine},
   author = {Lee, Ho-Wang},
 }
 
 
-@set{ICUS22:C03:G02,
+@Set{ICUS22:C03:G02,
   entryset = {ICUS22:C03:G02:S01},
   pattern = {ICUS22:C03:G02:[S|X]},
   patterntype = {key},
@@ -303,20 +303,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C03:G02:S01,
+@InProceedings{ICUS22:C03:G02:S01,
   crossref = {ICUS22},
   title = {The ancestral homeland of plague and the black death's area of origin},
   author = {Benedictow, Ole J.},
 }
 
-@inproceedings{ICUS22:C03:G02:S02,
+@InProceedings{ICUS22:C03:G02:S02,
   crossref = {ICUS22},
   title = {Nomads and epidemics},
   author = {Puranen, Bi},
 }
 
 
-@set{ICUS22:C03:G03,
+@Set{ICUS22:C03:G03,
   entryset = {ICUS22:C03:G03:S01},
   pattern = {ICUS22:C03:G03:[S|X]},
   patterntype = {key},
@@ -325,14 +325,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C03:G03:S01,
+@InProceedings{ICUS22:C03:G03:S01,
   crossref = {ICUS22},
   title = {The biochemical challenge of HIV},
   author = {Kakonge, Edward},
 }
 
 
-@set{ICUS22:C03:G05,
+@Set{ICUS22:C03:G05,
   entryset = {ICUS22:C03:G05:S01},
   pattern = {ICUS22:C03:G05:[S|X]},
   patterntype = {key},
@@ -341,20 +341,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C03:G05:S01,
+@InProceedings{ICUS22:C03:G05:S01,
   crossref = {ICUS22},
   title = {Mukenenya - metaphor of a modern plague},
   author = {Damman, Sigrid},
 }
 
-@inproceedings{ICUS22:C03:G05:S02,
+@InProceedings{ICUS22:C03:G05:S02,
   crossref = {ICUS22},
   title = {Evolutionary aspects of the host-parasite relationship},
   author = {Pincheira, Guido},
 }
 
 
-@set{ICUS22:C03:G06,
+@Set{ICUS22:C03:G06,
   entryset = {ICUS22:C03:G06:S01},
   pattern = {ICUS22:C03:G06:[S|X]},
   patterntype = {key},
@@ -363,13 +363,13 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C03:G06:S01,
+@InProceedings{ICUS22:C03:G06:S01,
   crossref = {ICUS22},
   title = {Tuberdulosis ''La belle dame sans merci''},
   author = {Puranen, Bi},
 }
 
-@inproceedings{ICUS22:C03:G06:S02,
+@InProceedings{ICUS22:C03:G06:S02,
   crossref = {ICUS22},
   title = {Influenza, an epidemic problem: emphasis on the Spanish flu and excavations after outbreak in Arctic Norway},
   author = {Bergan, Tom},
@@ -377,7 +377,7 @@
 
 
 
-@set{ICUS22:C04,
+@Set{ICUS22:C04,
   entryset = {ICUS22:C04},
   pattern = {ICUS22:C04:G\d\d:[S|X]},
   patterntype = {key},
@@ -386,7 +386,7 @@
   chairperson = {Radnitzky, Gerard and Hoppe, Hans-Hermann},
 }
 
-@set{ICUS22:C04:G01,
+@Set{ICUS22:C04:G01,
   entryset = {ICUS22:C04:G01:S01},
   pattern = {ICUS22:C04:G01:[S|X]},
   patterntype = {key},
@@ -395,14 +395,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C04:G01:S01,
+@InProceedings{ICUS22:C04:G01:S01,
   crossref = {ICUS22},
   title = {The provision of law and order in political theory},
   author = {Bassani, Luigi Marco and Lottieri, Carlo},
 }
 
 
-@set{ICUS22:C04:G02,
+@Set{ICUS22:C04:G02,
   entryset = {ICUS22:C04:G02:S01},
   pattern = {ICUS22:C04:G02:[S|X]},
   patterntype = {key},
@@ -411,20 +411,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C04:G02:S01,
+@InProceedings{ICUS22:C04:G02:S01,
   crossref = {ICUS22},
   title = {Monarchy and war},
   author = {{Kuehnelt-Leddihn}, Erik},
 }
 
-@inproceedings{ICUS22:C04:G02:S02,
+@InProceedings{ICUS22:C04:G02:S02,
   crossref = {ICUS22},
   title = {Are democracies more peaceful than other forms of government},
   author = {Radnitzky, Gerard},
 }
 
 
-@set{ICUS22:C04:G03,
+@Set{ICUS22:C04:G03,
   entryset = {ICUS22:C04:G03:S01},
   pattern = {ICUS22:C04:G03:[S|X]},
   patterntype = {key},
@@ -433,20 +433,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C04:G03:S01,
+@InProceedings{ICUS22:C04:G03:S01,
   crossref = {ICUS22},
   title = {Mercenaries, guerillas, militias, and the defense of minimal states and free societies},
   author = {Stromberg, Joseph R.},
 }
 
-@inproceedings{ICUS22:C04:G03:S02,
+@InProceedings{ICUS22:C04:G03:S02,
   crossref = {ICUS22},
   title = {Storms, strikes, and surveillance: a case study in the militarization of economy and society},
   author = {Fleming, James R.},
 }
 
 
-@set{ICUS22:C04:G05,
+@Set{ICUS22:C04:G05,
   entryset = {ICUS22:C04:G05:S01},
   pattern = {ICUS22:C04:G05:[S|X]},
   patterntype = {key},
@@ -455,20 +455,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C04:G05:S01,
+@InProceedings{ICUS22:C04:G05:S01,
   crossref = {ICUS22},
   title = {Secession and the production of defense},
   author = {Hülsmann, Guido},
 }
 
-@inproceedings{ICUS22:C04:G05:S02,
+@InProceedings{ICUS22:C04:G05:S02,
   crossref = {ICUS22},
   title = {The will to be free. The role of ideology in national defense},
   author = {Hummel, Jeffrey},
 }
 
 
-@set{ICUS22:C04:G06,
+@Set{ICUS22:C04:G06,
   entryset = {ICUS22:C04:G06:S01},
   pattern = {ICUS22:C04:G06:[S|X]},
   patterntype = {key},
@@ -477,20 +477,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C04:G06:S01,
+@InProceedings{ICUS22:C04:G06:S01,
   crossref = {ICUS22},
   title = {National defense and the theory of externalities, public goods and clubs},
   author = {Block, Walter},
 }
 
-@inproceedings{ICUS22:C04:G06:S02,
+@InProceedings{ICUS22:C04:G06:S02,
   crossref = {ICUS22},
   title = {Police, adjudication, and arbitration. Public or private?},
   author = {Kinsella, Stephan},
 }
 
 
-@set{ICUS22:C04:G07,
+@Set{ICUS22:C04:G07,
   entryset = {ICUS22:C04:G07:S01},
   pattern = {ICUS22:C04:G07:[S|X]},
   patterntype = {key},
@@ -499,7 +499,7 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C04:G07:S01,
+@InProceedings{ICUS22:C04:G07:S01,
   crossref = {ICUS22},
   title = {On government and the private production of defense},
   author = {Hoppe, Hans-Hermann},
@@ -507,7 +507,7 @@
 
 
 
-@set{ICUS22:C05,
+@Set{ICUS22:C05,
   entryset = {ICUS22:C05},
   pattern = {ICUS22:C05:G\d\d:[S|X]},
   patterntype = {key},
@@ -516,7 +516,7 @@
   chairperson = {Alonso, Marcelo and Kingsep, Alexander},
 }
 
-@set{ICUS22:C05:G01,
+@Set{ICUS22:C05:G01,
   entryset = {ICUS22:C05:G01:S01},
   pattern = {ICUS22:C05:G01:[S|X]},
   patterntype = {key},
@@ -525,20 +525,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C05:G01:S01,
+@InProceedings{ICUS22:C05:G01:S01,
   crossref = {ICUS22},
   title = {Non-linear structures and dynamics in nontrivial chemical systems},
   author = {Rambidi, Nicholas G.},
 }
 
-@inproceedings{ICUS22:C05:G01:S02,
+@InProceedings{ICUS22:C05:G01:S02,
   crossref = {ICUS22},
   title = {Patterns, waves and solitons in fluids},
   author = {Velarde, Manuel},
 }
 
 
-@set{ICUS22:C05:G02,
+@Set{ICUS22:C05:G02,
   entryset = {ICUS22:C05:G02:S01},
   pattern = {ICUS22:C05:G02:[S|X]},
   patterntype = {key},
@@ -547,20 +547,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C05:G02:S01,
+@InProceedings{ICUS22:C05:G02:S01,
   crossref = {ICUS22},
   title = {Non-linear dynamics of astrophysical disks},
   author = {Fridman, Alexei M.},
 }
 
-@inproceedings{ICUS22:C05:G02:S02,
+@InProceedings{ICUS22:C05:G02:S02,
   crossref = {ICUS22},
   title = {Dynamic processes during disk accretion into the black hole},
   author = {{Bisnovatyi-Kogan}, Guennadi S.},
 }
 
 
-@set{ICUS22:C05:G03,
+@Set{ICUS22:C05:G03,
   entryset = {ICUS22:C05:G03:S01},
   pattern = {ICUS22:C05:G03:[S|X]},
   patterntype = {key},
@@ -569,20 +569,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C05:G03:S01,
+@InProceedings{ICUS22:C05:G03:S01,
   crossref = {ICUS22},
   title = {Non-linear phenomena in the model of blood coagulation},
   author = {Lobanov, A. I.},
 }
 
-@inproceedings{ICUS22:C05:G03:S02,
+@InProceedings{ICUS22:C05:G03:S02,
   crossref = {ICUS22},
   title = {The methods of non-linear dynamics in the analysis of heart rate variability},
   author = {Kalda, Jaan},
 }
 
 
-@set{ICUS22:C05:G04,
+@Set{ICUS22:C05:G04,
   entryset = {ICUS22:C05:G04:S01},
   pattern = {ICUS22:C05:G04:[S|X]},
   patterntype = {key},
@@ -591,20 +591,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C05:G04:S01,
+@InProceedings{ICUS22:C05:G04:S01,
   crossref = {ICUS22},
   title = {Non-trivial transport phenomena: sub- and super-diffusion},
   author = {Chukbar, Konstantin V.},
 }
 
-@inproceedings{ICUS22:C05:G04:S02,
+@InProceedings{ICUS22:C05:G04:S02,
   crossref = {ICUS22},
   title = {Non-linear processes of accelerated destruction of the earth's crust},
   author = {Artyushkov, Evgeny V.},
 }
 
 
-@set{ICUS22:C05:G05,
+@Set{ICUS22:C05:G05,
   entryset = {ICUS22:C05:G05:S01},
   pattern = {ICUS22:C05:G05:[S|X]},
   patterntype = {key},
@@ -613,20 +613,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C05:G05:S01,
+@InProceedings{ICUS22:C05:G05:S01,
   crossref = {ICUS22},
   title = {Non-linear dissipative structures in hot plasmas},
   author = {Razumova, Ksenia A.},
 }
 
-@inproceedings{ICUS22:C05:G05:S02,
+@InProceedings{ICUS22:C05:G05:S02,
   crossref = {ICUS22},
   title = {Discrete chaotic dynamics and time and space in complex systems},
   author = {Gontar, Vladimir},
 }
 
 
-@set{ICUS22:C05:G06,
+@Set{ICUS22:C05:G06,
   entryset = {ICUS22:C05:G06:S01},
   pattern = {ICUS22:C05:G06:[S|X]},
   patterntype = {key},
@@ -635,20 +635,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C05:G06:S01,
+@InProceedings{ICUS22:C05:G06:S01,
   crossref = {ICUS22},
   title = {Mathematical model of technological change},
   author = {Shananin, Alexander},
 }
 
-@inproceedings{ICUS22:C05:G06:S02,
+@InProceedings{ICUS22:C05:G06:S02,
   crossref = {ICUS22},
   title = {A firm model in a transitional Russian economy},
   author = {Pospelov, Igor G.},
 }
 
 
-@set{ICUS22:C05:G07,
+@Set{ICUS22:C05:G07,
   entryset = {ICUS22:C05:G07:S01},
   pattern = {ICUS22:C05:G07:[S|X]},
   patterntype = {key},
@@ -657,13 +657,13 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C05:G07:S01,
+@InProceedings{ICUS22:C05:G07:S01,
   crossref = {ICUS22},
   title = {Problem of aggregation and foundations of economic models},
   author = {Petrov, Alexander},
 }
 
-@inproceedings{ICUS22:C05:G07:S02,
+@InProceedings{ICUS22:C05:G07:S02,
   crossref = {ICUS22},
   title = {Change, organizaiton and complexity: a coherent paradigm},
   author = {Alonso, Marcelo},
@@ -671,7 +671,7 @@
 
 
 
-@set{ICUS22:C06,
+@Set{ICUS22:C06,
   entryset = {ICUS22:C06},
   pattern = {ICUS22:C06:G\d\d:[S|X]},
   patterntype = {key},
@@ -680,7 +680,7 @@
   chairperson = {Daudel, Raymond and Maruani, Jean and Rantanen, Marja},
 }
 
-@set{ICUS22:C06:G01,
+@Set{ICUS22:C06:G01,
   entryset = {ICUS22:C06:G01:S01},
   pattern = {ICUS22:C06:G01:[S|X]},
   patterntype = {key},
@@ -689,20 +689,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C06:G01:S01,
+@InProceedings{ICUS22:C06:G01:S01,
   crossref = {ICUS22},
   title = {Musical patterns at the various levels of complexity in nature},
   author = {Maruani, Jean and Rantanen, Marja},
 }
 
-@inproceedings{ICUS22:C06:G01:S02,
+@InProceedings{ICUS22:C06:G01:S02,
   crossref = {ICUS22},
   title = {Science and technology as an inspiration and support for artists and musicians},
   author = {Daudel, Raymond},
 }
 
 
-@set{ICUS22:C06:G02,
+@Set{ICUS22:C06:G02,
   entryset = {ICUS22:C06:G02:S01},
   pattern = {ICUS22:C06:G02:[S|X]},
   patterntype = {key},
@@ -711,14 +711,14 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C06:G02:S01,
+@InProceedings{ICUS22:C06:G02:S01,
   crossref = {ICUS22},
   title = {The problem of the scales: melody versus harmony},
   author = {{Emery-Hellwig}, Eric},
 }
 
 
-@set{ICUS22:C06:G03,
+@Set{ICUS22:C06:G03,
   entryset = {ICUS22:C06:G03:S01},
   pattern = {ICUS22:C06:G03:[S|X]},
   patterntype = {key},
@@ -727,20 +727,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C06:G03:S01,
+@InProceedings{ICUS22:C06:G03:S01,
   crossref = {ICUS22},
   title = {The music world before, during, and after Pythagoras},
   author = {Lekkas, Demetrios},
 }
 
-@inproceedings{ICUS22:C06:G03:S02,
+@InProceedings{ICUS22:C06:G03:S02,
   crossref = {ICUS22},
   title = {Prehistoric mode and polyphony in the Balkans},
   author = {Moraitis, Thanassis},
 }
 
 
-@set{ICUS22:C06:G04,
+@Set{ICUS22:C06:G04,
   entryset = {ICUS22:C06:G04:S01},
   pattern = {ICUS22:C06:G04:[S|X]},
   patterntype = {key},
@@ -749,20 +749,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C06:G04:S01,
+@InProceedings{ICUS22:C06:G04:S01,
   crossref = {ICUS22},
   title = {A musical void in the surrealist quest: encounter with Pacific North West Coast natives},
   author = {Buchholtzer, Guy},
 }
 
-@inproceedings{ICUS22:C06:G04:S02,
+@InProceedings{ICUS22:C06:G04:S02,
   crossref = {ICUS22},
   title = {Anthropologic basis of the search for harmony in the structure of the universe},
   author = {Koussanellos, Georges},
 }
 
 
-@set{ICUS22:C06:G05,
+@Set{ICUS22:C06:G05,
   entryset = {ICUS22:C06:G05:S01},
   pattern = {ICUS22:C06:G05:[S|X]},
   patterntype = {key},
@@ -771,20 +771,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C06:G05:S01,
+@InProceedings{ICUS22:C06:G05:S01,
   crossref = {ICUS22},
   title = {Solar harmonics},
   author = {Lekkas, Demetrios},
 }
 
-@inproceedings{ICUS22:C06:G05:S02,
+@InProceedings{ICUS22:C06:G05:S02,
   crossref = {ICUS22},
   title = {Space and time in music: a correspondence between architecture and musical art},
   author = {{Emery-Hellwig}, Eric},
 }
 
 
-@set{ICUS22:C06:G06,
+@Set{ICUS22:C06:G06,
   entryset = {ICUS22:C06:G06:S01},
   pattern = {ICUS22:C06:G06:[S|X]},
   patterntype = {key},
@@ -793,20 +793,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C06:G06:S01,
+@InProceedings{ICUS22:C06:G06:S01,
   crossref = {ICUS22},
   title = {Musical patterns in molecular spectra and structures},
   author = {Lefebvre, Roland and Rantanen, Marja},
 }
 
-@inproceedings{ICUS22:C06:G06:S02,
+@InProceedings{ICUS22:C06:G06:S02,
   crossref = {ICUS22},
   title = {The human body as a crossroad between inner and outer vibrations: examples of biological rhythms},
   author = {{Gaudeau de Gerlicz}, Claude},
 }
 
 
-@set{ICUS22:C06:G07,
+@Set{ICUS22:C06:G07,
   entryset = {ICUS22:C06:G07:S01},
   pattern = {ICUS22:C06:G07:[S|X]},
   patterntype = {key},
@@ -815,20 +815,20 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C06:G07:S01,
+@InProceedings{ICUS22:C06:G07:S01,
   crossref = {ICUS22},
   title = {Music as a psychic elaboration of physical and relational vibrations, rhythms and sounds: applications in music therapy},
   author = {Lecourt, Edith},
 }
 
-@inproceedings{ICUS22:C06:G07:S02,
+@InProceedings{ICUS22:C06:G07:S02,
   crossref = {ICUS22},
   title = {Systemic approach of the influence of classical music on the development of emotional intelligence},
   author = {Dukan, Laurent},
 }
 
 
-@set{ICUS22:C06:G08,
+@Set{ICUS22:C06:G08,
   entryset = {ICUS22:C06:G08:S01},
   pattern = {ICUS22:C06:G08:[S|X]},
   patterntype = {key},
@@ -837,13 +837,13 @@
   chairperson = {},
 }
 
-@inproceedings{ICUS22:C06:G08:S01,
+@InProceedings{ICUS22:C06:G08:S01,
   crossref = {ICUS22},
   title = {The sociology of music: from Max Weber to Theodore Adorno},
   author = {DeLannoy, Jean-Louis},
 }
 
-@inproceedings{ICUS22:C06:G08:S02,
+@InProceedings{ICUS22:C06:G08:S02,
   crossref = {ICUS22},
   title = {Music and values in Western and Eastern cultures},
   author = {Eaton, David},
